--- a/lang/ar.json
+++ b/lang/ar.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "هل أنت متأكد؟ سيؤدي هذا إلى حذف المستند نهائيًا.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "هل أنت متأكد؟ سيؤدي هذا إلى حذف الهدف وجميع الخطوط بشكل دائم.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "هل أنت متأكد؟ سيؤدي هذا إلى إزالة أنواع العناوين من جميع جهات الاتصال، لكنه لن يحذف جهات الاتصال نفسها.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "هل أنت متأكد؟ سيؤدي هذا إلى إزالة أنواع معلومات الاتصال من كافة جهات الاتصال، لكنه لن يحذف جهات الاتصال نفسها.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "هل أنت متأكد؟ سيؤدي ذلك إلى إزالة نوع معلومات الاتصال من جميع جهات الاتصال ، ولكنه لن يحذف جهات الاتصال نفسها.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "هل أنت متأكد؟ سيؤدي هذا إلى إزالة الأجناس من جميع جهات الاتصال، لكنه لن يحذف جهات الاتصال نفسها.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "هل أنت متأكد؟ سيؤدي هذا إلى إزالة القالب من كافة جهات الاتصال، لكنه لن يحذف جهات الاتصال نفسها.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "هل أنت متأكد أنك تريد حذف هذا الفريق؟ بمجرد حذف الفريق ، سيتم حذف جميع مصادره وبياناته نهائيًا.",
@@ -383,10 +383,11 @@
   "Delete": "حذف",
   "Delete :name": "حذف :name",
   "Delete Account": "حذف الحساب",
+  "Delete a contact information": "حذف معلومات الاتصال",
+  "Delete a contact information type": "حذف نوع معلومات الاتصال",
   "Delete a new key": "حذف مفتاح جديد",
   "Delete API Token": "حذف رمز API",
   "Delete contact": "حذف اتصال",
-  "Delete contact information": "حذف معلومات الاتصال",
   "deleted a contact information": "حذف معلومات الاتصال",
   "deleted a goal": "حذفت هدفا",
   "deleted an address": "حذفت عنوانا",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "تم تحديث نوع العنوان",
   "The call has been created": "تم إنشاء المكالمة",
   "The call has been deleted": "تم حذف المكالمة",
-  "The call has been edited": "تم تحرير المكالمة",
+  "The call has been updated": "تم تحديث المكالمة",
   "The call reason has been created": "تم إنشاء سبب الاتصال",
   "The call reason has been deleted": "تم حذف سبب المكالمة",
   "The call reason has been updated": "تم تحديث سبب الاتصال",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "جهة الاتصال لا تنتمي إلى أي مجموعة حتى الآن.",
   "The contact has been added": "تمت إضافة جهة الاتصال",
   "The contact has been deleted": "تم حذف جهة الاتصال",
-  "The contact has been edited": "تم تحرير جهة الاتصال",
   "The contact has been removed from the group": "تمت إزالة جهة الاتصال من المجموعة",
+  "The contact has been updated": "تم تحديث جهة الاتصال",
   "The contact information has been created": "تم إنشاء معلومات الاتصال",
   "The contact information has been deleted": "تم حذف معلومات الاتصال",
-  "The contact information has been edited": "تم تعديل معلومات الاتصال",
+  "The contact information has been updated": "تم تحديث معلومات الاتصال",
   "The contact information type has been created": "تم إنشاء نوع معلومات جهة الاتصال",
   "The contact information type has been deleted": "تم حذف نوع معلومات جهة الاتصال",
   "The contact information type has been updated": "تم تحديث نوع معلومات الاتصال",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "البيانات المدخلة غير صالحة.",
   "The goal has been created": "تم إنشاء الهدف",
   "The goal has been deleted": "تم حذف الهدف",
-  "The goal has been edited": "تم تعديل الهدف",
+  "The goal has been updated": "تم تحديث الهدف",
   "The group has been added": "تمت إضافة المجموعة",
   "The group has been deleted": "تم حذف المجموعة",
   "The group has been updated": "تم تحديث المجموعة",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "تم تحديث مقياس الحياة",
   "The loan has been created": "تم إنشاء القرض",
   "The loan has been deleted": "تم حذف القرض",
-  "The loan has been edited": "تم تعديل القرض",
   "The loan has been settled": "تمت تسوية القرض",
+  "The loan has been updated": "تم تحديث القرض",
   "The loan is an object": "القرض كائن",
   "The loan is monetary": "القرض نقدي",
   "The module has been added": "تمت إضافة الوحدة",
   "The module has been removed": "تمت إزالة الوحدة",
   "The note has been created": "تم إنشاء المذكرة",
   "The note has been deleted": "تم حذف المذكرة",
-  "The note has been edited": "تم تعديل المذكرة",
+  "The note has been updated": "تم تحديث الملاحظة",
   "The notification has been sent": "تم إرسال الإخطار",
   "The operation either timed out or was not allowed.": "انتهت مهلة العملية أو لم يتم السماح بها.",
   "The page has been added": "تمت إضافة الصفحة",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "تم تحديث فئة الحيوانات الأليفة",
   "The pet has been added": "تمت إضافة الحيوان الأليف",
   "The pet has been deleted": "تم حذف الحيوان الأليف",
-  "The pet has been edited": "تم تحرير الحيوان الأليف",
+  "The pet has been updated": "تم تحديث الحيوانات الأليفة",
   "The photo has been added": "تمت إضافة الصورة",
   "The photo has been deleted": "تم حذف الصورة",
   "The position has been saved": "تم حفظ الموقف",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "كود استرداد المصادقة الثنائية الذي قمت بإدخاله غير صالح.",
   "There are no active addresses yet.": "لا توجد عناوين نشطة حتى الآن.",
   "There are no calls logged yet.": "لا توجد مكالمات مسجلة حتى الآن.",
-  "There are no contact information yet.": "لا توجد معلومات الاتصال بعد.",
+  "There are no contact information types yet.": "لا توجد أنواع معلومات الاتصال حتى الآن.",
+  "There are no contact informations yet.": "لا توجد معلومات الاتصال بعد.",
   "There are no documents yet.": "لا توجد وثائق حتى الآن.",
   "There are no events on that day, future or past.": "لا توجد أحداث في ذلك اليوم، المستقبل أو الماضي.",
   "There are no files yet.": "لا توجد ملفات حتى الآن.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "تم تحديث الدين",
   "The reminder has been created": "تم إنشاء التذكير",
   "The reminder has been deleted": "تم حذف التذكير",
-  "The reminder has been edited": "تم تعديل التذكير",
+  "The reminder has been updated": "تم تحديث التذكير",
   "The response is not a streamed response.": "الاستجابة ليست استجابة متدفقة.",
   "The response is not a view.": "الاستجابة ليست صفحة عرض.",
   "The role has been created": "تم إنشاء الدور",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "تم تحديث العلامة",
   "The task has been created": "تم إنشاء المهمة",
   "The task has been deleted": "تم حذف المهمة",
-  "The task has been edited": "تم تحرير المهمة",
+  "The task has been updated": "تم تحديث المهمة",
   "The team's name and owner information.": "اسم الفريق ومعلومات المالك.",
   "The Telegram channel has been deleted": "تم حذف قناة التلجرام",
   "The template has been created": "تم إنشاء القالب",
@@ -1231,6 +1233,7 @@
   "The type has been created": "تم إنشاء النوع",
   "The type has been deleted": "تم حذف النوع",
   "The type has been updated": "تم تحديث النوع",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "نوع معلومات الاتصال. لا تغيره إلا إذا كنت تعرف ما تفعله.",
   "The user has been added": "تمت إضافة المستخدم",
   "The user has been deleted": "تم حذف المستخدم",
   "The user has been removed": "تمت إزالة المستخدم",
