--- a/lang/bn.json
+++ b/lang/bn.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "তুমি কি নিশ্চিত? এটি স্থায়ীভাবে নথিটি মুছে ফেলবে।",
   "Are you sure? This will delete the goal and all the streaks permanently.": "তুমি কি নিশ্চিত? এটি স্থায়ীভাবে লক্ষ্য এবং সমস্ত স্ট্রীক মুছে ফেলবে।",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "তুমি কি নিশ্চিত? এটি সমস্ত পরিচিতি থেকে ঠিকানার ধরনগুলি সরিয়ে দেবে, তবে পরিচিতিগুলিকে মুছে ফেলবে না৷",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "তুমি কি নিশ্চিত? এটি সমস্ত পরিচিতি থেকে যোগাযোগের তথ্যের ধরনগুলিকে সরিয়ে দেবে, তবে পরিচিতিগুলিকে মুছে ফেলবে না।",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "তুমি কি নিশ্চিত? এটি সমস্ত পরিচিতি থেকে যোগাযোগের তথ্যের প্রকারটি সরিয়ে ফেলবে, তবে পরিচিতিগুলি নিজেরাই মুছবে না।",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "তুমি কি নিশ্চিত? এটি সমস্ত পরিচিতি থেকে লিঙ্গ মুছে ফেলবে, তবে পরিচিতিগুলিকে মুছে ফেলবে না।",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "তুমি কি নিশ্চিত? এটি সমস্ত পরিচিতি থেকে টেমপ্লেট মুছে ফেলবে, তবে পরিচিতিগুলিকে মুছে ফেলবে না।",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "আপনি কি নিশ্চিতরূপে এই দল মুছে ফেলতে ইচ্ছুক? একটি দল একবার মুছে ফেলা হলে, তার সব রিসোর্স ও তথ্য স্থায়ীভাবে মুছে ফেলা হবে।",
@@ -383,10 +383,11 @@
   "Delete": "মুছে ফেলা হবে",
   "Delete :name": "মুছুন :name",
   "Delete Account": "অ্যাকাউন্ট মুছে ফেলুন",
+  "Delete a contact information": "একটি যোগাযোগের তথ্য মুছুন",
+  "Delete a contact information type": "একটি যোগাযোগের তথ্য প্রকার মুছুন",
   "Delete a new key": "একটি নতুন কী মুছুন",
   "Delete API Token": "এপিআই টোকেন মুছুন",
   "Delete contact": "পরিচিতি মুছুন",
-  "Delete contact information": "যোগাযোগের তথ্য মুছুন",
   "deleted a contact information": "একটি যোগাযোগের তথ্য মুছে ফেলা হয়েছে",
   "deleted a goal": "একটি গোল মুছে ফেলেছে",
   "deleted an address": "একটি ঠিকানা মুছে ফেলা হয়েছে",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "ঠিকানার ধরন আপডেট করা হয়েছে",
   "The call has been created": "কল তৈরি হয়েছে",
   "The call has been deleted": "কলটি মুছে ফেলা হয়েছে",
-  "The call has been edited": "কল সম্পাদনা করা হয়েছে",
+  "The call has been updated": "কল আপডেট করা হয়েছে",
   "The call reason has been created": "কলের কারণ তৈরি হয়েছে",
   "The call reason has been deleted": "কলের কারণ মুছে ফেলা হয়েছে",
   "The call reason has been updated": "কলের কারণ আপডেট করা হয়েছে",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "পরিচিতি এখনও কোনো দলের অন্তর্গত নয়.",
   "The contact has been added": "যোগাযোগ যোগ করা হয়েছে",
   "The contact has been deleted": "পরিচিতি মুছে ফেলা হয়েছে",
-  "The contact has been edited": "যোগাযোগ সম্পাদনা করা হয়েছে",
   "The contact has been removed from the group": "পরিচিতি গ্রুপ থেকে মুছে ফেলা হয়েছে",
+  "The contact has been updated": "যোগাযোগ আপডেট করা হয়েছে",
   "The contact information has been created": "যোগাযোগের তথ্য তৈরি করা হয়েছে",
   "The contact information has been deleted": "যোগাযোগের তথ্য মুছে ফেলা হয়েছে",
-  "The contact information has been edited": "যোগাযোগের তথ্য সম্পাদনা করা হয়েছে",
+  "The contact information has been updated": "যোগাযোগের তথ্য আপডেট করা হয়েছে",
   "The contact information type has been created": "যোগাযোগের তথ্যের ধরন তৈরি করা হয়েছে",
   "The contact information type has been deleted": "যোগাযোগের তথ্যের ধরন মুছে ফেলা হয়েছে",
   "The contact information type has been updated": "যোগাযোগ তথ্য প্রকার আপডেট করা হয়েছে",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "প্রদত্ত তথ্য অবৈধ ছিল।",
   "The goal has been created": "লক্ষ্য তৈরি হয়েছে",
   "The goal has been deleted": "গোলটি মুছে ফেলা হয়েছে",
-  "The goal has been edited": "লক্ষ্য সম্পাদনা করা হয়েছে",
+  "The goal has been updated": "লক্ষ্য আপডেট করা হয়েছে",
   "The group has been added": "গ্রুপ যোগ করা হয়েছে",
   "The group has been deleted": "গ্রুপ মুছে ফেলা হয়েছে",
   "The group has been updated": "গ্রুপ আপডেট করা হয়েছে",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "জীবন মেট্রিক আপডেট করা হয়েছে",
   "The loan has been created": "ঋণের সৃষ্টি হয়েছে",
   "The loan has been deleted": "ঋণ মুছে ফেলা হয়েছে",
-  "The loan has been edited": "ঋণ সম্পাদনা করা হয়েছে",
   "The loan has been settled": "ঋণ নিষ্পত্তি হয়েছে",
+  "The loan has been updated": "Loan ণ আপডেট করা হয়েছে",
   "The loan is an object": "ঋণ একটি বস্তু",
   "The loan is monetary": "ঋণটি আর্থিক",
   "The module has been added": "মডিউল যোগ করা হয়েছে",
   "The module has been removed": "মডিউল সরানো হয়েছে",
   "The note has been created": "নোট তৈরি করা হয়েছে",
   "The note has been deleted": "নোট মুছে ফেলা হয়েছে",
-  "The note has been edited": "নোটটি সম্পাদনা করা হয়েছে",
+  "The note has been updated": "নোটটি আপডেট করা হয়েছে",
   "The notification has been sent": "বিজ্ঞপ্তি পাঠানো হয়েছে",
   "The operation either timed out or was not allowed.": "অপারেশন হয় সময় শেষ বা অনুমতি দেওয়া হয়নি.",
   "The page has been added": "পাতা যোগ করা হয়েছে",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "পোষা বিভাগ আপডেট করা হয়েছে",
   "The pet has been added": "পোষা প্রাণী যোগ করা হয়েছে",
   "The pet has been deleted": "পোষা প্রাণী মুছে ফেলা হয়েছে",
-  "The pet has been edited": "পোষা প্রাণী সম্পাদনা করা হয়েছে",
+  "The pet has been updated": "পোষা প্রাণী আপডেট করা হয়েছে",
   "The photo has been added": "ছবি যোগ করা হয়েছে",
   "The photo has been deleted": "ছবি মুছে ফেলা হয়েছে",
   "The position has been saved": "অবস্থান সংরক্ষণ করা হয়েছে",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "প্রদত্ত দুই ফ্যাক্টর পুনরুদ্ধার কোড অবৈধ ছিল।",
   "There are no active addresses yet.": "এখনও কোন সক্রিয় ঠিকানা নেই.",
   "There are no calls logged yet.": "এখনও কোন কল লগ নেই.",
-  "There are no contact information yet.": "এখনও কোন যোগাযোগের তথ্য নেই.",
+  "There are no contact information types yet.": "এখনও কোনও যোগাযোগের তথ্যের ধরণ নেই।",
+  "There are no contact informations yet.": "এখনও কোন যোগাযোগের তথ্য নেই.",
   "There are no documents yet.": "এখনও কোন নথি নেই.",
   "There are no events on that day, future or past.": "সেই দিন, ভবিষ্যত বা অতীতের কোন ঘটনা নেই।",
   "There are no files yet.": "এখনও কোন ফাইল নেই.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "ধর্ম আপডেট করা হয়েছে",
   "The reminder has been created": "অনুস্মারক তৈরি করা হয়েছে",
   "The reminder has been deleted": "অনুস্মারক মুছে ফেলা হয়েছে",
-  "The reminder has been edited": "অনুস্মারক সম্পাদনা করা হয়েছে",
+  "The reminder has been updated": "অনুস্মারক আপডেট করা হয়েছে",
   "The response is not a streamed response.": "রেসপন্সটি একটি স্ট্রিমড রেসপন্স নয়।",
   "The response is not a view.": "রেসপন্সটি একটি ভিউ নয়।",
   "The role has been created": "ভূমিকা তৈরি হয়েছে",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "ট্যাগ আপডেট করা হয়েছে",
   "The task has been created": "টাস্ক তৈরি করা হয়েছে",
   "The task has been deleted": "টাস্ক মুছে ফেলা হয়েছে",
-  "The task has been edited": "কাজটি সম্পাদনা করা হয়েছে",
+  "The task has been updated": "কাজটি আপডেট করা হয়েছে",
   "The team's name and owner information.": "দলের নাম এবং মালিক তথ্য৷",
   "The Telegram channel has been deleted": "টেলিগ্রাম চ্যানেলটি মুছে ফেলা হয়েছে",
   "The template has been created": "টেমপ্লেট তৈরি করা হয়েছে",
@@ -1231,6 +1233,7 @@
   "The type has been created": "টাইপ তৈরি হয়েছে",
   "The type has been deleted": "টাইপ মুছে ফেলা হয়েছে",
   "The type has been updated": "টাইপ আপডেট করা হয়েছে",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "যোগাযোগের তথ্যের ধরণ। আপনি কী করছেন তা না জানলে এটিকে পরিবর্তন করবেন না।",
   "The user has been added": "ব্যবহারকারী যোগ করা হয়েছে",
   "The user has been deleted": "ব্যবহারকারী মুছে ফেলা হয়েছে",
   "The user has been removed": "ব্যবহারকারীকে সরানো হয়েছে",
