--- a/lang/ca.json
+++ b/lang/ca.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Estàs segur? Això suprimirà el document de manera permanent.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Estàs segur? Això suprimirà l’objectiu i totes les ratlles de manera permanent.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Estàs segur? Això eliminarà els tipus d’adreces de tots els contactes, però no els suprimirà.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Estàs segur? Això eliminarà els tipus d’informació de contacte de tots els contactes, però no els suprimirà.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Esteu segur? Això eliminarà el tipus d’informació de contacte de tots els contactes, però no suprimirà els contactes ells mateixos.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Estàs segur? Això eliminarà els sexes de tots els contactes, però no els suprimirà.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Estàs segur? Això eliminarà la plantilla de tots els contactes, però no els suprimirà.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Esteu segur que voleu suprimir aquest equip? Una vegada que un equip és eliminat, a tots els seus recursos i les dades es perdran permanentment esborrada.",
@@ -383,10 +383,11 @@
   "Delete": "Esborrar",
   "Delete :name": "Suprimeix :name",
   "Delete Account": "Esborrar el compte",
+  "Delete a contact information": "Suprimeix una informació de contacte",
+  "Delete a contact information type": "Suprimeix un tipus d’informació de contacte",
   "Delete a new key": "Suprimeix una clau nova",
   "Delete API Token": "Esborrar API Token",
   "Delete contact": "Suprimeix el contacte",
-  "Delete contact information": "Suprimeix la informació de contacte",
   "deleted a contact information": "ha suprimit una informació de contacte",
   "deleted a goal": "esborrat un gol",
   "deleted an address": "ha suprimit una adreça",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "S’ha actualitzat el tipus d’adreça",
   "The call has been created": "La convocatòria s’ha creat",
   "The call has been deleted": "La trucada s’ha suprimit",
-  "The call has been edited": "La trucada s’ha editat",
+  "The call has been updated": "La trucada s’ha actualitzat",
   "The call reason has been created": "S’ha creat el motiu de la trucada",
   "The call reason has been deleted": "S’ha suprimit el motiu de la trucada",
   "The call reason has been updated": "S’ha actualitzat el motiu de la trucada",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "El contacte encara no pertany a cap grup.",
   "The contact has been added": "S’ha afegit el contacte",
   "The contact has been deleted": "El contacte s’ha suprimit",
-  "The contact has been edited": "El contacte s’ha editat",
   "The contact has been removed from the group": "El contacte s’ha eliminat del grup",
+  "The contact has been updated": "El contacte s’ha actualitzat",
   "The contact information has been created": "S’ha creat la informació de contacte",
   "The contact information has been deleted": "S’ha suprimit la informació de contacte",
-  "The contact information has been edited": "S’ha editat la informació de contacte",
+  "The contact information has been updated": "La informació de contacte s’ha actualitzat",
   "The contact information type has been created": "S’ha creat el tipus d’informació de contacte",
   "The contact information type has been deleted": "S’ha suprimit el tipus d’informació de contacte",
   "The contact information type has been updated": "S’ha actualitzat el tipus d’informació de contacte",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "Les dades proporcionades no eren vàlides.",
   "The goal has been created": "L’objectiu s’ha creat",
   "The goal has been deleted": "S’ha suprimit l’objectiu",
-  "The goal has been edited": "L’objectiu ha estat editat",
+  "The goal has been updated": "L’objectiu s’ha actualitzat",
   "The group has been added": "S’ha afegit el grup",
   "The group has been deleted": "El grup s’ha suprimit",
   "The group has been updated": "El grup s’ha actualitzat",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "La mètrica de vida s’ha actualitzat",
   "The loan has been created": "S’ha creat el préstec",
   "The loan has been deleted": "S’ha suprimit el préstec",
-  "The loan has been edited": "El préstec ha estat editat",
   "The loan has been settled": "El préstec s’ha liquidat",
+  "The loan has been updated": "El préstec s’ha actualitzat",
   "The loan is an object": "El préstec és un objecte",
   "The loan is monetary": "El préstec és monetari",
   "The module has been added": "S’ha afegit el mòdul",
   "The module has been removed": "El mòdul s’ha eliminat",
   "The note has been created": "S’ha creat la nota",
   "The note has been deleted": "La nota s’ha suprimit",
-  "The note has been edited": "La nota ha estat editada",
+  "The note has been updated": "La nota s’ha actualitzat",
   "The notification has been sent": "S’ha enviat la notificació",
   "The operation either timed out or was not allowed.": "L’operació s’ha esgotat o no es va permetre.",
   "The page has been added": "S’ha afegit la pàgina",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "La categoria de la mascota s’ha actualitzat",
   "The pet has been added": "S’ha afegit la mascota",
   "The pet has been deleted": "S’ha suprimit la mascota",
-  "The pet has been edited": "La mascota ha estat editada",
+  "The pet has been updated": "La mascota s’ha actualitzat",
   "The photo has been added": "S’ha afegit la foto",
   "The photo has been deleted": "La foto s’ha suprimit",
   "The position has been saved": "La posició s’ha desat",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "El codi de recuperació de dos factors proporcionat no era vàlid.",
   "There are no active addresses yet.": "Encara no hi ha adreces actives.",
   "There are no calls logged yet.": "Encara no hi ha trucades registrades.",
-  "There are no contact information yet.": "Encara no hi ha informació de contacte.",
+  "There are no contact information types yet.": "Encara no hi ha cap tipus d’informació de contacte.",
+  "There are no contact informations yet.": "Encara no hi ha informació de contacte.",
   "There are no documents yet.": "Encara no hi ha documents.",
   "There are no events on that day, future or past.": "No hi ha esdeveniments en aquell dia, futur o passat.",
   "There are no files yet.": "Encara no hi ha fitxers.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "La religió s’ha actualitzat",
   "The reminder has been created": "S’ha creat el recordatori",
   "The reminder has been deleted": "El recordatori s’ha suprimit",
-  "The reminder has been edited": "El recordatori s’ha editat",
+  "The reminder has been updated": "El recordatori s’ha actualitzat",
   "The response is not a streamed response.": "La resposta no és una resposta en streaming.",
   "The response is not a view.": "La resposta no és una visió.",
   "The role has been created": "El paper s’ha creat",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "L’etiqueta s’ha actualitzat",
   "The task has been created": "S’ha creat la tasca",
   "The task has been deleted": "La tasca s’ha suprimit",
-  "The task has been edited": "La tasca ha estat editada",
+  "The task has been updated": "La tasca s’ha actualitzat",
   "The team's name and owner information.": "El nom de l’equip i el propietari de la informació.",
   "The Telegram channel has been deleted": "S’ha suprimit el canal de Telegram",
   "The template has been created": "S’ha creat la plantilla",
@@ -1231,6 +1233,7 @@
   "The type has been created": "S’ha creat el tipus",
   "The type has been deleted": "S’ha suprimit el tipus",
   "The type has been updated": "El tipus s’ha actualitzat",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "El tipus d’informació de contacte. No ho canvieu tret que sàpigues el que estàs fent.",
   "The user has been added": "S’ha afegit l’usuari",
   "The user has been deleted": "L’usuari ha estat suprimit",
   "The user has been removed": "L’usuari ha estat eliminat",
