--- a/lang/de.json
+++ b/lang/de.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Bist du sicher? Dadurch wird das Dokument dauerhaft gelöscht.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Bist du sicher? Dadurch werden das Tor und alle Streaks dauerhaft gelöscht.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Bist du sicher? Dadurch werden die Adresstypen aus allen Kontakten entfernt, die Kontakte selbst werden jedoch nicht gelöscht.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Bist du sicher? Dadurch werden die Kontaktinformationstypen aus allen Kontakten entfernt, die Kontakte selbst werden jedoch nicht gelöscht.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Bist du sicher? Dadurch wird der Kontaktinformationstyp aus allen Kontakten entfernt, die Kontakte jedoch nicht selbst löschen.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Bist du sicher? Dadurch werden die Geschlechter aus allen Kontakten entfernt, die Kontakte selbst werden jedoch nicht gelöscht.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Bist du sicher? Dadurch wird die Vorlage aus allen Kontakten entfernt, die Kontakte selbst werden jedoch nicht gelöscht.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Möchten Sie dieses Team wirklich löschen? Sobald ein Team gelöscht wird, werden alle Ressourcen und Daten dauerhaft gelöscht.",
@@ -383,10 +383,11 @@
   "Delete": "Löschen",
   "Delete :name": ":name löschen",
   "Delete Account": "Account löschen",
+  "Delete a contact information": "Löschen Sie eine Kontaktinformationen",
+  "Delete a contact information type": "Löschen Sie einen Kontaktinformationstyp",
   "Delete a new key": "Löschen Sie einen neuen Schlüssel",
   "Delete API Token": "API-Token löschen",
   "Delete contact": "Kontakt löschen",
-  "Delete contact information": "Kontaktinformationen löschen",
   "deleted a contact information": "eine Kontaktinformation gelöscht",
   "deleted a goal": "ein Ziel gelöscht",
   "deleted an address": "eine Adresse gelöscht",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "Der Adresstyp wurde aktualisiert",
   "The call has been created": "Der Anruf wurde erstellt",
   "The call has been deleted": "Der Anruf wurde gelöscht",
-  "The call has been edited": "Der Anruf wurde bearbeitet",
+  "The call has been updated": "Der Anruf wurde aktualisiert",
   "The call reason has been created": "Der Anrufgrund wurde erstellt",
   "The call reason has been deleted": "Der Anrufgrund wurde gelöscht",
   "The call reason has been updated": "Der Anrufgrund wurde aktualisiert",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "Der Kontakt gehört noch keiner Gruppe an.",
   "The contact has been added": "Der Kontakt wurde hinzugefügt",
   "The contact has been deleted": "Der Kontakt wurde gelöscht",
-  "The contact has been edited": "Der Kontakt wurde bearbeitet",
   "The contact has been removed from the group": "Der Kontakt wurde aus der Gruppe entfernt",
+  "The contact has been updated": "Der Kontakt wurde aktualisiert",
   "The contact information has been created": "Die Kontaktinformationen wurden erstellt",
   "The contact information has been deleted": "Die Kontaktinformationen wurden gelöscht",
-  "The contact information has been edited": "Die Kontaktinformationen wurden bearbeitet",
+  "The contact information has been updated": "Die Kontaktinformationen wurden aktualisiert",
   "The contact information type has been created": "Der Kontaktinformationstyp wurde erstellt",
   "The contact information type has been deleted": "Der Kontaktinformationstyp wurde gelöscht",
   "The contact information type has been updated": "Der Kontaktinformationstyp wurde aktualisiert",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "Die gegebenen Daten waren ungültig.",
   "The goal has been created": "Das Ziel wurde erstellt",
   "The goal has been deleted": "Das Ziel wurde gelöscht",
-  "The goal has been edited": "Das Ziel wurde bearbeitet",
+  "The goal has been updated": "Das Ziel wurde aktualisiert",
   "The group has been added": "Die Gruppe wurde hinzugefügt",
   "The group has been deleted": "Die Gruppe wurde gelöscht",
   "The group has been updated": "Die Gruppe wurde aktualisiert",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "Die Lebensmetrik wurde aktualisiert",
   "The loan has been created": "Das Darlehen wurde erstellt",
   "The loan has been deleted": "Das Darlehen wurde gelöscht",
-  "The loan has been edited": "Das Darlehen wurde bearbeitet",
   "The loan has been settled": "Das Darlehen wurde abbezahlt",
+  "The loan has been updated": "Das Darlehen wurde aktualisiert",
   "The loan is an object": "Das Darlehen ist ein Gegenstand",
   "The loan is monetary": "Das Darlehen ist monetär",
   "The module has been added": "Das Modul wurde hinzugefügt",
   "The module has been removed": "Das Modul wurde entfernt",
   "The note has been created": "Die Notiz wurde erstellt",
   "The note has been deleted": "Die Notiz wurde gelöscht",
-  "The note has been edited": "Die Notiz wurde bearbeitet",
+  "The note has been updated": "Die Notiz wurde aktualisiert",
   "The notification has been sent": "Die Benachrichtigung wurde gesendet",
   "The operation either timed out or was not allowed.": "Der Vorgang ist entweder abgelaufen oder nicht zulässig.",
   "The page has been added": "Die Seite wurde hinzugefügt",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "Die Haustierkategorie wurde aktualisiert",
   "The pet has been added": "Das Haustier wurde hinzugefügt",
   "The pet has been deleted": "Das Haustier wurde gelöscht",
-  "The pet has been edited": "Das Haustier wurde bearbeitet",
+  "The pet has been updated": "Das Haustier wurde aktualisiert",
   "The photo has been added": "Das Foto wurde hinzugefügt",
   "The photo has been deleted": "Das Foto wurde gelöscht",
   "The position has been saved": "Die Position wurde gespeichert",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "Der angegebene Zwei-Faktor-Wiederherstellungscode war ungültig.",
   "There are no active addresses yet.": "Es sind noch keine aktiven Adressen vorhanden.",
   "There are no calls logged yet.": "Es sind noch keine Anrufe protokolliert.",
-  "There are no contact information yet.": "Es liegen noch keine Kontaktinformationen vor.",
+  "There are no contact information types yet.": "Es gibt noch keine Kontaktinformationstypen.",
+  "There are no contact informations yet.": "Es liegen noch keine Kontaktinformationen vor.",
   "There are no documents yet.": "Es liegen noch keine Dokumente vor.",
   "There are no events on that day, future or past.": "An diesem Tag gibt es keine Ereignisse, weder in der Zukunft noch in der Vergangenheit.",
   "There are no files yet.": "Es sind noch keine Dateien vorhanden.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "Die Religion wurde aktualisiert",
   "The reminder has been created": "Die Erinnerung wurde erstellt",
   "The reminder has been deleted": "Die Erinnerung wurde gelöscht",
-  "The reminder has been edited": "Die Erinnerung wurde bearbeitet",
+  "The reminder has been updated": "Die Erinnerung wurde aktualisiert",
   "The response is not a streamed response.": "Die Antwort ist keine gestreamte Antwort.",
   "The response is not a view.": "Die Antwort ist keine Ansicht.",
   "The role has been created": "Die Rolle wurde erstellt",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "Das Tag wurde aktualisiert",
   "The task has been created": "Die Aufgabe wurde erstellt",
   "The task has been deleted": "Die Aufgabe wurde gelöscht",
-  "The task has been edited": "Die Aufgabe wurde bearbeitet",
+  "The task has been updated": "Die Aufgabe wurde aktualisiert",
   "The team's name and owner information.": "Teamname und Informationen zum Besitzer.",
   "The Telegram channel has been deleted": "Der Telegram-Kanal wurde gelöscht",
   "The template has been created": "Die Vorlage wurde erstellt",
@@ -1231,6 +1233,7 @@
   "The type has been created": "Der Typ wurde erstellt",
   "The type has been deleted": "Der Typ wurde gelöscht",
   "The type has been updated": "Der Typ wurde aktualisiert",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "Die Art der Kontaktinformationen. Ändern Sie es nicht, es sei denn, Sie wissen, was Sie tun.",
   "The user has been added": "Der Benutzer wurde hinzugefügt",
   "The user has been deleted": "Der Benutzer wurde gelöscht",
   "The user has been removed": "Der Benutzer wurde entfernt",
