--- a/lang/el.json
+++ b/lang/el.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Είσαι σίγουρος? Αυτό θα διαγράψει οριστικά το έγγραφο.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Είσαι σίγουρος? Αυτό θα διαγράψει οριστικά το γκολ και όλα τα σερί.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Είσαι σίγουρος? Αυτό θα καταργήσει τους τύπους διευθύνσεων από όλες τις επαφές, αλλά δεν θα διαγράψει τις ίδιες τις επαφές.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Είσαι σίγουρος? Αυτό θα καταργήσει τους τύπους πληροφοριών επαφών από όλες τις επαφές, αλλά δεν θα διαγράψει τις ίδιες τις επαφές.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Είστε σίγουροι; Αυτό θα καταργήσει τον τύπο πληροφοριών επικοινωνίας από όλες τις επαφές, αλλά δεν θα διαγράψει τις ίδιες τις επαφές.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Είσαι σίγουρος? Αυτό θα καταργήσει τα φύλα από όλες τις επαφές, αλλά δεν θα διαγράψει τις ίδιες τις επαφές.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Είσαι σίγουρος? Αυτό θα καταργήσει το πρότυπο από όλες τις επαφές, αλλά δεν θα διαγράψει τις ίδιες τις επαφές.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Είστε βέβαιοι ότι θέλετε να διαγράψετε αυτήν την ομάδα; Μόλις διαγραφεί μια ομάδα, όλοι οι πόροι και τα δεδομένα της θα διαγραφούν οριστικά.",
@@ -383,10 +383,11 @@
   "Delete": "Διαγραφή",
   "Delete :name": "Διαγραφή :name",
   "Delete Account": "Διαγραφή Λογαριασμού",
+  "Delete a contact information": "Διαγράψτε τα στοιχεία επικοινωνίας",
+  "Delete a contact information type": "Διαγράψτε έναν τύπο πληροφοριών επικοινωνίας",
   "Delete a new key": "Διαγραφή νέου κλειδιού",
   "Delete API Token": "Διαγραφή Token API",
   "Delete contact": "Διαγραφή επαφής",
-  "Delete contact information": "Διαγραφή πληροφοριών επικοινωνίας",
   "deleted a contact information": "διέγραψε στοιχεία επικοινωνίας",
   "deleted a goal": "διέγραψε ένα στόχο",
   "deleted an address": "διέγραψε μια διεύθυνση",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "Ο τύπος διεύθυνσης έχει ενημερωθεί",
   "The call has been created": "Η κλήση έχει δημιουργηθεί",
   "The call has been deleted": "Η κλήση έχει διαγραφεί",
-  "The call has been edited": "Η κλήση έχει υποστεί επεξεργασία",
+  "The call has been updated": "Η κλήση έχει ενημερωθεί",
   "The call reason has been created": "Ο λόγος κλήσης δημιουργήθηκε",
   "The call reason has been deleted": "Ο λόγος κλήσης έχει διαγραφεί",
   "The call reason has been updated": "Ο λόγος κλήσης έχει ενημερωθεί",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "Η επαφή δεν ανήκει ακόμα σε καμία ομάδα.",
   "The contact has been added": "Η επαφή προστέθηκε",
   "The contact has been deleted": "Η επαφή έχει διαγραφεί",
-  "The contact has been edited": "Η επαφή έχει υποστεί επεξεργασία",
   "The contact has been removed from the group": "Η επαφή έχει αφαιρεθεί από την ομάδα",
+  "The contact has been updated": "Η επαφή έχει ενημερωθεί",
   "The contact information has been created": "Τα στοιχεία επικοινωνίας έχουν δημιουργηθεί",
   "The contact information has been deleted": "Τα στοιχεία επικοινωνίας έχουν διαγραφεί",
-  "The contact information has been edited": "Τα στοιχεία επικοινωνίας έχουν υποστεί επεξεργασία",
+  "The contact information has been updated": "Τα στοιχεία επικοινωνίας έχουν ενημερωθεί",
   "The contact information type has been created": "Ο τύπος στοιχείων επικοινωνίας έχει δημιουργηθεί",
   "The contact information type has been deleted": "Ο τύπος στοιχείων επικοινωνίας έχει διαγραφεί",
   "The contact information type has been updated": "Ο τύπος στοιχείων επικοινωνίας έχει ενημερωθεί",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "Τα δεδομένα που δόθηκαν δεν ήταν έγκυρα.",
   "The goal has been created": "Ο στόχος έχει δημιουργηθεί",
   "The goal has been deleted": "Ο στόχος έχει διαγραφεί",
-  "The goal has been edited": "Ο στόχος έχει υποστεί επεξεργασία",
+  "The goal has been updated": "Ο στόχος ενημερώθηκε",
   "The group has been added": "Η ομάδα προστέθηκε",
   "The group has been deleted": "Η ομάδα έχει διαγραφεί",
   "The group has been updated": "Η ομάδα έχει ενημερωθεί",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "Η μέτρηση ζωής έχει ενημερωθεί",
   "The loan has been created": "Το δάνειο δημιουργήθηκε",
   "The loan has been deleted": "Το δάνειο έχει διαγραφεί",
-  "The loan has been edited": "Το δάνειο έχει υποστεί επεξεργασία",
   "The loan has been settled": "Το δάνειο έχει διακανονιστεί",
+  "The loan has been updated": "Το δάνειο έχει ενημερωθεί",
   "The loan is an object": "Το δάνειο είναι αντικείμενο",
   "The loan is monetary": "Το δάνειο είναι χρηματικό",
   "The module has been added": "Η ενότητα έχει προστεθεί",
   "The module has been removed": "Η μονάδα έχει αφαιρεθεί",
   "The note has been created": "Η σημείωση δημιουργήθηκε",
   "The note has been deleted": "Η σημείωση έχει διαγραφεί",
-  "The note has been edited": "Η σημείωση έχει υποστεί επεξεργασία",
+  "The note has been updated": "Το σημείωμα έχει ενημερωθεί",
   "The notification has been sent": "Η ειδοποίηση έχει σταλεί",
   "The operation either timed out or was not allowed.": "Η επέμβαση είτε έληξε είτε δεν επιτρεπόταν.",
   "The page has been added": "Η σελίδα έχει προστεθεί",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "Η κατηγορία κατοικίδιων ζώων έχει ενημερωθεί",
   "The pet has been added": "Το κατοικίδιο προστέθηκε",
   "The pet has been deleted": "Το κατοικίδιο έχει διαγραφεί",
-  "The pet has been edited": "Το κατοικίδιο έχει υποστεί επεξεργασία",
+  "The pet has been updated": "Το κατοικίδιο ζώο έχει ενημερωθεί",
   "The photo has been added": "Η φωτογραφία προστέθηκε",
   "The photo has been deleted": "Η φωτογραφία έχει διαγραφεί",
   "The position has been saved": "Η θέση έχει σωθεί",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "Ο παρεχόμενος κωδικός ανάκτησης δύο παραγόντων δεν ήταν έγκυρος.",
   "There are no active addresses yet.": "Δεν υπάρχουν ακόμα ενεργές διευθύνσεις.",
   "There are no calls logged yet.": "Δεν έχουν καταγραφεί ακόμη κλήσεις.",
-  "There are no contact information yet.": "Δεν υπάρχουν ακόμη στοιχεία επικοινωνίας.",
+  "There are no contact information types yet.": "Δεν υπάρχουν ακόμη τύποι πληροφοριών επικοινωνίας.",
+  "There are no contact informations yet.": "Δεν υπάρχουν ακόμη στοιχεία επικοινωνίας.",
   "There are no documents yet.": "Δεν υπάρχουν ακόμη έγγραφα.",
   "There are no events on that day, future or past.": "Δεν υπάρχουν γεγονότα εκείνη την ημέρα, μέλλον ή παρελθόν.",
   "There are no files yet.": "Δεν υπάρχουν ακόμα αρχεία.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "Η θρησκεία έχει ενημερωθεί",
   "The reminder has been created": "Η υπενθύμιση δημιουργήθηκε",
   "The reminder has been deleted": "Η υπενθύμιση έχει διαγραφεί",
-  "The reminder has been edited": "Η υπενθύμιση έχει υποστεί επεξεργασία",
+  "The reminder has been updated": "Η υπενθύμιση έχει ενημερωθεί",
   "The response is not a streamed response.": "Η απάντηση δεν είναι απάντηση ροής.",
   "The response is not a view.": "Η απάντηση δεν είναι άποψη.",
   "The role has been created": "Ο ρόλος έχει δημιουργηθεί",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "Η ετικέτα έχει ενημερωθεί",
   "The task has been created": "Η εργασία έχει δημιουργηθεί",
   "The task has been deleted": "Η εργασία έχει διαγραφεί",
-  "The task has been edited": "Η εργασία έχει υποστεί επεξεργασία",
+  "The task has been updated": "Η εργασία έχει ενημερωθεί",
   "The team's name and owner information.": "Το όνομα της ομάδας και πληροφορίες ιδιοκτήτη.",
   "The Telegram channel has been deleted": "Το κανάλι Telegram έχει διαγραφεί",
   "The template has been created": "Το πρότυπο δημιουργήθηκε",
@@ -1231,6 +1233,7 @@
   "The type has been created": "Ο τύπος έχει δημιουργηθεί",
   "The type has been deleted": "Ο τύπος έχει διαγραφεί",
   "The type has been updated": "Ο τύπος έχει ενημερωθεί",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "Ο τύπος των στοιχείων επικοινωνίας. Μην το αλλάζετε εκτός αν ξέρετε τι κάνετε.",
   "The user has been added": "Ο χρήστης έχει προστεθεί",
   "The user has been deleted": "Ο χρήστης έχει διαγραφεί",
   "The user has been removed": "Ο χρήστης έχει αφαιρεθεί",
