--- a/lang/es.json
+++ b/lang/es.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "¿Está seguro? Esto eliminará el documento permanentemente.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "¿Está seguro? Esto eliminará el objetivo y todas las rachas de forma permanente.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "¿Está seguro? Esto eliminará los tipos de direcciones de todos los contactos, pero no eliminará los contactos en sí.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "¿Está seguro? Esto eliminará los tipos de información de contacto de todos los contactos, pero no eliminará los contactos en sí.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "¿Está seguro? Esto eliminará el tipo de información de contacto de todos los contactos, pero no eliminará los contactos ellos mismos.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "¿Está seguro? Esto eliminará los géneros de todos los contactos, pero no eliminará los contactos en sí.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "¿Está seguro? Esto eliminará la plantilla de todos los contactos, pero no eliminará los contactos en sí.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "¿Está seguro que desea eliminar este equipo? Una vez que se elimina un equipo, todos sus recursos y datos se eliminarán de forma permanente.",
@@ -383,10 +383,11 @@
   "Delete": "Eliminar",
   "Delete :name": "Eliminar :name",
   "Delete Account": "Borrar cuenta",
+  "Delete a contact information": "Eliminar una información de contacto",
+  "Delete a contact information type": "Eliminar un tipo de información de contacto",
   "Delete a new key": "Eliminar una nueva clave",
   "Delete API Token": "Borrar token API",
   "Delete contact": "Borrar contacto",
-  "Delete contact information": "Eliminar información de contacto",
   "deleted a contact information": "eliminó una información de contacto",
   "deleted a goal": "eliminado un gol",
   "deleted an address": "eliminó una dirección",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "El tipo de dirección ha sido actualizado.",
   "The call has been created": "La convocatoria ha sido creada.",
   "The call has been deleted": "La llamada ha sido eliminada.",
-  "The call has been edited": "La convocatoria ha sido editada.",
+  "The call has been updated": "La llamada ha sido actualizada",
   "The call reason has been created": "El motivo de la llamada ha sido creado.",
   "The call reason has been deleted": "El motivo de la llamada ha sido eliminado.",
   "The call reason has been updated": "El motivo de la llamada ha sido actualizado.",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "El contacto aún no pertenece a ningún grupo.",
   "The contact has been added": "El contacto ha sido añadido.",
   "The contact has been deleted": "El contacto ha sido eliminado.",
-  "The contact has been edited": "El contacto ha sido editado.",
   "The contact has been removed from the group": "El contacto ha sido eliminado del grupo.",
+  "The contact has been updated": "El contacto ha sido actualizado",
   "The contact information has been created": "La información de contacto ha sido creada.",
   "The contact information has been deleted": "La información de contacto ha sido eliminada.",
-  "The contact information has been edited": "La información de contacto ha sido editada.",
+  "The contact information has been updated": "La información de contacto se ha actualizado",
   "The contact information type has been created": "El tipo de información de contacto ha sido creado.",
   "The contact information type has been deleted": "El tipo de información de contacto ha sido eliminado.",
   "The contact information type has been updated": "El tipo de información de contacto ha sido actualizado.",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "Los datos proporcionados no son válidos.",
   "The goal has been created": "La meta ha sido creada.",
   "The goal has been deleted": "El objetivo ha sido eliminado.",
-  "The goal has been edited": "El objetivo ha sido editado.",
+  "The goal has been updated": "El objetivo se ha actualizado",
   "The group has been added": "El grupo ha sido agregado.",
   "The group has been deleted": "El grupo ha sido eliminado.",
   "The group has been updated": "El grupo ha sido actualizado.",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "La métrica de vida ha sido actualizada.",
   "The loan has been created": "El préstamo ha sido creado.",
   "The loan has been deleted": "El préstamo ha sido eliminado.",
-  "The loan has been edited": "El préstamo ha sido editado.",
   "The loan has been settled": "El préstamo ha sido liquidado.",
+  "The loan has been updated": "El préstamo ha sido actualizado",
   "The loan is an object": "El préstamo es un objeto.",
   "The loan is monetary": "El préstamo es monetario.",
   "The module has been added": "El módulo ha sido agregado.",
   "The module has been removed": "El módulo ha sido eliminado.",
   "The note has been created": "La nota ha sido creada.",
   "The note has been deleted": "La nota ha sido eliminada.",
-  "The note has been edited": "La nota ha sido editada.",
+  "The note has been updated": "La nota se ha actualizado",
   "The notification has been sent": "La notificación ha sido enviada.",
   "The operation either timed out or was not allowed.": "La operación expiró o no fue permitida.",
   "The page has been added": "La pagina ha sido agregada.",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "La categoría de mascotas ha sido actualizada.",
   "The pet has been added": "La mascota ha sido agregada.",
   "The pet has been deleted": "La mascota ha sido eliminada.",
-  "The pet has been edited": "La mascota ha sido editada.",
+  "The pet has been updated": "La mascota ha sido actualizada",
   "The photo has been added": "La foto ha sido agregada.",
   "The photo has been deleted": "La foto ha sido eliminada.",
   "The position has been saved": "La posición ha sido guardada.",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "El código de recuperación de dos factores proporcionado no es válido.",
   "There are no active addresses yet.": "Aún no hay direcciones activas.",
   "There are no calls logged yet.": "Aún no hay llamadas registradas.",
-  "There are no contact information yet.": "Aún no hay información de contacto.",
+  "There are no contact information types yet.": "Todavía no hay tipos de información de contacto.",
+  "There are no contact informations yet.": "Aún no hay información de contacto.",
   "There are no documents yet.": "Aún no hay documentos.",
   "There are no events on that day, future or past.": "No hay eventos en ese día, futuro o pasado.",
   "There are no files yet.": "Aún no hay archivos.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "La religión ha sido actualizada.",
   "The reminder has been created": "El recordatorio ha sido creado.",
   "The reminder has been deleted": "El recordatorio ha sido eliminado.",
-  "The reminder has been edited": "El recordatorio ha sido editado.",
+  "The reminder has been updated": "El recordatorio se ha actualizado",
   "The response is not a streamed response.": "La respuesta no es una respuesta transmitida.",
   "The response is not a view.": "La respuesta no es una vista.",
   "The role has been created": "El rol ha sido creado.",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "La etiqueta ha sido actualizada.",
   "The task has been created": "La tarea ha sido creada.",
   "The task has been deleted": "La tarea ha sido eliminada.",
-  "The task has been edited": "La tarea ha sido editada.",
+  "The task has been updated": "La tarea se ha actualizado",
   "The team's name and owner information.": "Nombre del equipo e información del propietario.",
   "The Telegram channel has been deleted": "El canal de Telegram ha sido eliminado.",
   "The template has been created": "La plantilla ha sido creada.",
@@ -1231,6 +1233,7 @@
   "The type has been created": "El tipo ha sido creado.",
   "The type has been deleted": "El tipo ha sido eliminado.",
   "The type has been updated": "El tipo ha sido actualizado.",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "El tipo de información de contacto. No lo cambies a menos que sepas lo que estás haciendo.",
   "The user has been added": "El usuario ha sido agregado.",
   "The user has been deleted": "El usuario ha sido eliminado.",
   "The user has been removed": "El usuario ha sido eliminado.",
