--- a/lang/he.json
+++ b/lang/he.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "האם אתה בטוח? פעולה זו תמחק את המסמך לצמיתות.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "האם אתה בטוח? זה ימחק את הגול ואת כל הפסים לצמיתות.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "האם אתה בטוח? פעולה זו תסיר את סוגי הכתובות מכל אנשי הקשר, אך לא תמחק את אנשי הקשר עצמם.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "האם אתה בטוח? פעולה זו תסיר את סוגי פרטי הקשר מכל אנשי הקשר, אך לא תמחק את אנשי הקשר עצמם.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "אתה בטוח? זה יסיר את סוג פרטי הקשר מכל אנשי הקשר, אך לא ימחק את אנשי הקשר עצמם.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "האם אתה בטוח? פעולה זו תסיר את המגדרים מכל אנשי הקשר, אך לא תמחק את אנשי הקשר עצמם.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "האם אתה בטוח? פעולה זו תסיר את התבנית מכל אנשי הקשר, אך לא תמחק את אנשי הקשר עצמם.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "אתה בטוח שאתה רוצה למחוק את הצוות הזה? ברגע שצוות נמחק, כל המשאבים והנתונים שלו יימחקו לצמיתות.",
@@ -383,10 +383,11 @@
   "Delete": "מחק",
   "Delete :name": "מחק :name",
   "Delete Account": "מחק חשבון",
+  "Delete a contact information": "מחק פרטי קשר",
+  "Delete a contact information type": "מחק סוג פרטי קשר",
   "Delete a new key": "מחק מפתח חדש",
   "Delete API Token": "מחק אסימון API",
   "Delete contact": "תמחק קשר",
-  "Delete contact information": "מחק את פרטי הקשר",
   "deleted a contact information": "מחק פרטי איש קשר",
   "deleted a goal": "מחק יעד",
   "deleted an address": "מחק כתובת",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "סוג הכתובת עודכן",
   "The call has been created": "השיחה נוצרה",
   "The call has been deleted": "השיחה נמחקה",
-  "The call has been edited": "השיחה עברה עריכה",
+  "The call has been updated": "השיחה עודכנה",
   "The call reason has been created": "הסיבה לשיחה נוצרה",
   "The call reason has been deleted": "סיבת השיחה נמחקה",
   "The call reason has been updated": "סיבת השיחה עודכנה",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "איש הקשר עדיין לא שייך לאף קבוצה.",
   "The contact has been added": "איש הקשר נוסף",
   "The contact has been deleted": "איש הקשר נמחק",
-  "The contact has been edited": "איש הקשר עבר עריכה",
   "The contact has been removed from the group": "איש הקשר הוסר מהקבוצה",
+  "The contact has been updated": "איש הקשר עודכן",
   "The contact information has been created": "פרטי הקשר נוצרו",
   "The contact information has been deleted": "פרטי הקשר נמחקו",
-  "The contact information has been edited": "פרטי הקשר נערכו",
+  "The contact information has been updated": "פרטי הקשר עודכנו",
   "The contact information type has been created": "סוג פרטי הקשר נוצר",
   "The contact information type has been deleted": "סוג פרטי הקשר נמחק",
   "The contact information type has been updated": "סוג פרטי הקשר עודכן",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "הנתונים שניתנו לא היו חוקיים.",
   "The goal has been created": "המטרה נוצרה",
   "The goal has been deleted": "המטרה נמחקה",
-  "The goal has been edited": "המטרה נערכה",
+  "The goal has been updated": "המטרה עודכנה",
   "The group has been added": "הקבוצה נוספה",
   "The group has been deleted": "הקבוצה נמחקה",
   "The group has been updated": "הקבוצה עודכנה",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "מדד החיים עודכן",
   "The loan has been created": "ההלוואה נוצרה",
   "The loan has been deleted": "ההלוואה נמחקה",
-  "The loan has been edited": "ההלוואה עברה עריכה",
   "The loan has been settled": "ההלוואה הוסדרה",
+  "The loan has been updated": "ההלוואה עודכנה",
   "The loan is an object": "ההלוואה היא חפץ",
   "The loan is monetary": "ההלוואה היא כספית",
   "The module has been added": "המודול נוסף",
   "The module has been removed": "המודול הוסר",
   "The note has been created": "ההערה נוצרה",
   "The note has been deleted": "ההערה נמחקה",
-  "The note has been edited": "ההערה עברה עריכה",
+  "The note has been updated": "הפתק עודכן",
   "The notification has been sent": "ההודעה נשלחה",
   "The operation either timed out or was not allowed.": "פסק הזמן של הפעולה או שלא הותר.",
   "The page has been added": "הדף נוסף",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "קטגוריית חיות המחמד עודכנה",
   "The pet has been added": "חיית המחמד נוספה",
   "The pet has been deleted": "חיית המחמד נמחקה",
-  "The pet has been edited": "חיית המחמד עברה עריכה",
+  "The pet has been updated": "חיית המחמד עודכנה",
   "The photo has been added": "התמונה נוספה",
   "The photo has been deleted": "התמונה נמחקה",
   "The position has been saved": "המיקום נשמר",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "קוד שחזור שני הגורמים שסופק היה לא חוקי.",
   "There are no active addresses yet.": "אין עדיין כתובות פעילות.",
   "There are no calls logged yet.": "עדיין לא נרשמו שיחות.",
-  "There are no contact information yet.": "אין עדיין פרטים ליצירת קשר.",
+  "There are no contact information types yet.": "אין עדיין סוגי פרטי קשר.",
+  "There are no contact informations yet.": "אין עדיין פרטים ליצירת קשר.",
   "There are no documents yet.": "אין עדיין מסמכים.",
   "There are no events on that day, future or past.": "אין אירועים באותו יום, עתיד או עבר.",
   "There are no files yet.": "אין עדיין קבצים.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "הדת עודכנה",
   "The reminder has been created": "התזכורת נוצרה",
   "The reminder has been deleted": "התזכורת נמחקה",
-  "The reminder has been edited": "התזכורת עברה עריכה",
+  "The reminder has been updated": "התזכורת עודכנה",
   "The response is not a streamed response.": "התגובה אינה תגובה זורמת.",
   "The response is not a view.": "התגובה היא לא השקפה.",
   "The role has been created": "התפקיד נוצר",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "התג עודכן",
   "The task has been created": "המשימה נוצרה",
   "The task has been deleted": "המשימה נמחקה",
-  "The task has been edited": "המשימה עברה עריכה",
+  "The task has been updated": "המשימה עודכנה",
   "The team's name and owner information.": "שם הקבוצה ומידע הבעלים.",
   "The Telegram channel has been deleted": "ערוץ הטלגרם נמחק",
   "The template has been created": "התבנית נוצרה",
@@ -1231,6 +1233,7 @@
   "The type has been created": "הסוג נוצר",
   "The type has been deleted": "הסוג נמחק",
   "The type has been updated": "הסוג עודכן",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "סוג פרטי הקשר. אל תשנה את זה אלא אם כן אתה יודע מה אתה עושה.",
   "The user has been added": "המשתמש נוסף",
   "The user has been deleted": "המשתמש נמחק",
   "The user has been removed": "המשתמש הוסר",
