--- a/lang/hi.json
+++ b/lang/hi.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "क्या आपको यकीन है? इससे दस्तावेज़ स्थायी रूप से हट जाएगा.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "क्या आपको यकीन है? यह लक्ष्य और सभी स्ट्रीक्स को स्थायी रूप से हटा देगा।",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "क्या आपको यकीन है? यह सभी संपर्कों से पता प्रकार हटा देगा, लेकिन संपर्क स्वयं नहीं हटेंगे।",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "क्या आपको यकीन है? यह सभी संपर्कों से संपर्क जानकारी प्रकार को हटा देगा, लेकिन स्वयं संपर्कों को नहीं हटाएगा।",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "क्या आपको यकीन है? यह सभी संपर्कों से संपर्क जानकारी प्रकार को हटा देगा, लेकिन संपर्कों को स्वयं नहीं हटाएगा।",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "क्या आपको यकीन है? यह सभी संपर्कों से लिंग हटा देगा, लेकिन संपर्क स्वयं नहीं हटेंगे।",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "क्या आपको यकीन है? यह सभी संपर्कों से टेम्प्लेट हटा देगा, लेकिन संपर्क स्वयं नहीं हटेंगे।",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "क्या आप वाकई इस टीम को हटाना चाहते हैं? एक बार जब कोई टीम हटा दी जाती है, तो उसके सभी संसाधन और डेटा स्थायी रूप से हटा दिए जाएंगे ।",
@@ -383,10 +383,11 @@
   "Delete": "हटाएं",
   "Delete :name": ":name हटाएं",
   "Delete Account": "खाता हटाएं",
+  "Delete a contact information": "संपर्क जानकारी हटाएं",
+  "Delete a contact information type": "संपर्क जानकारी प्रकार हटाएं",
   "Delete a new key": "एक नई कुंजी हटाएँ",
   "Delete API Token": "एपीआई टोकन हटाएं",
   "Delete contact": "संपर्क मिटा दें",
-  "Delete contact information": "संपर्क जानकारी हटाएं",
   "deleted a contact information": "एक संपर्क जानकारी हटा दी गई",
   "deleted a goal": "एक लक्ष्य हटा दिया गया",
   "deleted an address": "एक पता हटा दिया गया",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "पता प्रकार अद्यतन कर दिया गया है",
   "The call has been created": "कॉल बनाई गई है",
   "The call has been deleted": "कॉल हटा दिया गया है",
-  "The call has been edited": "कॉल संपादित कर दी गई है",
+  "The call has been updated": "कॉल को अपडेट किया गया है",
   "The call reason has been created": "कॉल का कारण बनाया गया है",
   "The call reason has been deleted": "कॉल का कारण हटा दिया गया है",
   "The call reason has been updated": "कॉल का कारण अपडेट कर दिया गया है",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "संपर्क अभी तक किसी समूह से संबंधित नहीं है.",
   "The contact has been added": "संपर्क जोड़ दिया गया है",
   "The contact has been deleted": "संपर्क हटा दिया गया है",
-  "The contact has been edited": "संपर्क संपादित कर दिया गया है",
   "The contact has been removed from the group": "संपर्क को समूह से हटा दिया गया है",
+  "The contact has been updated": "संपर्क अपडेट किया गया है",
   "The contact information has been created": "संपर्क जानकारी बनाई गई है",
   "The contact information has been deleted": "संपर्क जानकारी हटा दी गई है",
-  "The contact information has been edited": "संपर्क जानकारी संपादित कर दी गई है",
+  "The contact information has been updated": "संपर्क जानकारी अपडेट की गई है",
   "The contact information type has been created": "संपर्क जानकारी प्रकार बनाया गया है",
   "The contact information type has been deleted": "संपर्क जानकारी प्रकार हटा दिया गया है",
   "The contact information type has been updated": "संपर्क जानकारी प्रकार अद्यतन कर दिया गया है",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "दिया गया डेटा अमान्य था।",
   "The goal has been created": "लक्ष्य बनाया गया है",
   "The goal has been deleted": "लक्ष्य हटा दिया गया है",
-  "The goal has been edited": "लक्ष्य संपादित कर दिया गया है",
+  "The goal has been updated": "लक्ष्य को अपडेट किया गया है",
   "The group has been added": "समूह जोड़ दिया गया है",
   "The group has been deleted": "समूह हटा दिया गया है",
   "The group has been updated": "ग्रुप को अपडेट कर दिया गया है",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "जीवन मीट्रिक अद्यतन किया गया है",
   "The loan has been created": "लोन बन गया है",
   "The loan has been deleted": "ऋण हटा दिया गया है",
-  "The loan has been edited": "ऋण संपादित किया गया है",
   "The loan has been settled": "कर्ज चुका दिया गया है",
+  "The loan has been updated": "ऋण अपडेट किया गया है",
   "The loan is an object": "ऋण एक वस्तु है",
   "The loan is monetary": "ऋण मौद्रिक है",
   "The module has been added": "मॉड्यूल जोड़ा गया है",
   "The module has been removed": "मॉड्यूल हटा दिया गया है",
   "The note has been created": "नोट बना लिया गया है",
   "The note has been deleted": "नोट हटा दिया गया है",
-  "The note has been edited": "नोट संपादित किया गया है",
+  "The note has been updated": "नोट को अपडेट किया गया है",
   "The notification has been sent": "अधिसूचना भेज दी गई है",
   "The operation either timed out or was not allowed.": "ऑपरेशन या तो समय समाप्त हो गया या अनुमति नहीं दी गई।",
   "The page has been added": "पेज जोड़ दिया गया है",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "पालतू पशु श्रेणी अद्यतन कर दी गई है",
   "The pet has been added": "पालतू जानवर जोड़ा गया है",
   "The pet has been deleted": "पालतू जानवर हटा दिया गया है",
-  "The pet has been edited": "पालतू संपादित किया गया है",
+  "The pet has been updated": "पालतू जानवर को अपडेट किया गया है",
   "The photo has been added": "फोटो जोड़ दिया गया है",
   "The photo has been deleted": "फोटो हटा दिया गया है",
   "The position has been saved": "पद बचा लिया गया है",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "प्रदान किया गया दो कारक पुनर्प्राप्ति कोड अमान्य था।",
   "There are no active addresses yet.": "अभी तक कोई सक्रिय पता नहीं है.",
   "There are no calls logged yet.": "अभी तक कोई कॉल लॉग नहीं हुई है.",
-  "There are no contact information yet.": "अभी तक कोई संपर्क जानकारी नहीं है.",
+  "There are no contact information types yet.": "अभी तक कोई संपर्क जानकारी प्रकार नहीं हैं।",
+  "There are no contact informations yet.": "अभी तक कोई संपर्क जानकारी नहीं है.",
   "There are no documents yet.": "अभी तक कोई दस्तावेज़ नहीं हैं.",
   "There are no events on that day, future or past.": "उस दिन, भविष्य या अतीत की कोई घटना नहीं होती।",
   "There are no files yet.": "अभी तक कोई फ़ाइल नहीं है.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "धर्म अद्यतन किया गया है",
   "The reminder has been created": "अनुस्मारक बनाया गया है",
   "The reminder has been deleted": "अनुस्मारक हटा दिया गया है",
-  "The reminder has been edited": "अनुस्मारक संपादित किया गया है",
+  "The reminder has been updated": "अनुस्मारक को अपडेट किया गया है",
   "The response is not a streamed response.": "प्रतिक्रिया कोई सुव्यवस्थित प्रतिक्रिया नहीं है.",
   "The response is not a view.": "प्रतिक्रिया कोई दृश्य नहीं है.",
   "The role has been created": "भूमिका बन गयी है",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "टैग अपडेट कर दिया गया है",
   "The task has been created": "कार्य बनाया गया है",
   "The task has been deleted": "कार्य हटा दिया गया है",
-  "The task has been edited": "कार्य संपादित कर दिया गया है",
+  "The task has been updated": "कार्य को अपडेट किया गया है",
   "The team's name and owner information.": "टीम का नाम और मालिक जानकारी.",
   "The Telegram channel has been deleted": "टेलीग्राम चैनल हटा दिया गया है",
   "The template has been created": "टेम्पलेट तैयार कर लिया गया है",
@@ -1231,6 +1233,7 @@
   "The type has been created": "प्रकार बनाया गया है",
   "The type has been deleted": "प्रकार हटा दिया गया है",
   "The type has been updated": "प्रकार अद्यतन कर दिया गया है",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "संपर्क जानकारी का प्रकार। जब तक आप नहीं जानते कि आप क्या कर रहे हैं, तब तक इसे न बदलें।",
   "The user has been added": "उपयोगकर्ता को जोड़ दिया गया है",
   "The user has been deleted": "उपयोगकर्ता को हटा दिया गया है",
   "The user has been removed": "उपयोगकर्ता को हटा दिया गया है",
