--- a/lang/it.json
+++ b/lang/it.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Sei sicuro? Ciò eliminerà il documento in modo permanente.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Sei sicuro? Ciò eliminerà l’obiettivo e tutte le serie consecutive in modo permanente.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Sei sicuro? Ciò rimuoverà i tipi di indirizzo da tutti i contatti, ma non eliminerà i contatti stessi.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Sei sicuro? Ciò rimuoverà i tipi di informazioni di contatto da tutti i contatti, ma non eliminerà i contatti stessi.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Sei sicuro? Ciò rimuoverà il tipo di informazioni di contatto da tutti i contatti, ma non eliminerà i contatti stessi.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Sei sicuro? Ciò rimuoverà i sessi da tutti i contatti, ma non eliminerà i contatti stessi.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Sei sicuro? Ciò rimuoverà il modello da tutti i contatti, ma non eliminerà i contatti stessi.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Vuoi davvero eliminare questo Team? Una volta eliminato, tutte le sue risorse e i relativi dati verranno eliminati definitivamente.",
@@ -383,10 +383,11 @@
   "Delete": "Elimina",
   "Delete :name": "Cancella :name",
   "Delete Account": "Elimina Account",
+  "Delete a contact information": "Elimina un’informazione di contatto",
+  "Delete a contact information type": "Elimina un tipo di informazione di contatto",
   "Delete a new key": "Elimina una nuova chiave",
   "Delete API Token": "Elimina Token API",
   "Delete contact": "Elimina contatto",
-  "Delete contact information": "Elimina le informazioni di contatto",
   "deleted a contact information": "cancellato un’informazione di contatto",
   "deleted a goal": "cancellato un obiettivo",
   "deleted an address": "cancellato un indirizzo",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "Il tipo di indirizzo è stato aggiornato",
   "The call has been created": "La chiamata è stata creata",
   "The call has been deleted": "La chiamata è stata eliminata",
-  "The call has been edited": "La chiamata è stata modificata",
+  "The call has been updated": "La chiamata è stata aggiornata",
   "The call reason has been created": "Il motivo della chiamata è stato creato",
   "The call reason has been deleted": "Il motivo della chiamata è stato eliminato",
   "The call reason has been updated": "Il motivo della chiamata è stato aggiornato",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "Il contatto non appartiene ancora ad alcun gruppo.",
   "The contact has been added": "Il contatto è stato aggiunto",
   "The contact has been deleted": "Il contatto è stato eliminato",
-  "The contact has been edited": "Il contatto è stato modificato",
   "The contact has been removed from the group": "Il contatto è stato rimosso dal gruppo",
+  "The contact has been updated": "Il contatto è stato aggiornato",
   "The contact information has been created": "Le informazioni di contatto sono state create",
   "The contact information has been deleted": "Le informazioni di contatto sono state cancellate",
-  "The contact information has been edited": "Le informazioni di contatto sono state modificate",
+  "The contact information has been updated": "Le informazioni di contatto sono state aggiornate",
   "The contact information type has been created": "Il tipo di informazioni di contatto è stato creato",
   "The contact information type has been deleted": "Il tipo di informazioni di contatto è stato eliminato",
   "The contact information type has been updated": "Il tipo di informazioni di contatto è stato aggiornato",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "I dati forniti non sono validi.",
   "The goal has been created": "L’obiettivo è stato creato",
   "The goal has been deleted": "L’obiettivo è stato eliminato",
-  "The goal has been edited": "L’obiettivo è stato modificato",
+  "The goal has been updated": "L’obiettivo è stato aggiornato",
   "The group has been added": "Il gruppo è stato aggiunto",
   "The group has been deleted": "Il gruppo è stato eliminato",
   "The group has been updated": "Il gruppo è stato aggiornato",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "La metrica della vita è stata aggiornata",
   "The loan has been created": "Il prestito è stato creato",
   "The loan has been deleted": "Il prestito è stato cancellato",
-  "The loan has been edited": "Il prestito è stato modificato",
   "The loan has been settled": "Il prestito è stato saldato",
+  "The loan has been updated": "Il prestito è stato aggiornato",
   "The loan is an object": "Il prestito è un oggetto",
   "The loan is monetary": "Il prestito è monetario",
   "The module has been added": "Il modulo è stato aggiunto",
   "The module has been removed": "Il modulo è stato rimosso",
   "The note has been created": "La nota è stata creata",
   "The note has been deleted": "La nota è stata eliminata",
-  "The note has been edited": "La nota è stata modificata",
+  "The note has been updated": "La nota è stata aggiornata",
   "The notification has been sent": "La notifica è stata inviata",
   "The operation either timed out or was not allowed.": "L’operazione è scaduta o non è stata consentita.",
   "The page has been added": "La pagina è stata aggiunta",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "La categoria degli animali domestici è stata aggiornata",
   "The pet has been added": "L’animale domestico è stato aggiunto",
   "The pet has been deleted": "L’animale è stato eliminato",
-  "The pet has been edited": "L’animale domestico è stato modificato",
+  "The pet has been updated": "L’animale è stato aggiornato",
   "The photo has been added": "La foto è stata aggiunta",
   "The photo has been deleted": "La foto è stata eliminata",
   "The position has been saved": "La posizione è stata salvata",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "Il codice di recupero fornito per l’autenticazione a due fattori non è valido.",
   "There are no active addresses yet.": "Non ci sono ancora indirizzi attivi.",
   "There are no calls logged yet.": "Non ci sono ancora chiamate registrate.",
-  "There are no contact information yet.": "Non ci sono ancora informazioni di contatto.",
+  "There are no contact information types yet.": "Non ci sono ancora tipi di informazioni di contatto.",
+  "There are no contact informations yet.": "Non ci sono ancora informazioni di contatto.",
   "There are no documents yet.": "Non ci sono ancora documenti.",
   "There are no events on that day, future or past.": "Non ci sono eventi in quel giorno, futuri o passati.",
   "There are no files yet.": "Non ci sono ancora file.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "La religione è stata aggiornata",
   "The reminder has been created": "Il promemoria è stato creato",
   "The reminder has been deleted": "Il promemoria è stato eliminato",
-  "The reminder has been edited": "Il promemoria è stato modificato",
+  "The reminder has been updated": "Il promemoria è stato aggiornato",
   "The response is not a streamed response.": "La risposta non è una risposta in streaming.",
   "The response is not a view.": "La risposta non è una visione.",
   "The role has been created": "Il ruolo è stato creato",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "L’etichetta è stata aggiornata",
   "The task has been created": "L’attività è stata creata",
   "The task has been deleted": "L’attività è stata eliminata",
-  "The task has been edited": "L’attività è stata modificata",
+  "The task has been updated": "L’attività è stata aggiornata",
   "The team's name and owner information.": "Il nome del team e le informazioni sul proprietario.",
   "The Telegram channel has been deleted": "Il canale Telegram è stato cancellato",
   "The template has been created": "Il modello è stato creato",
@@ -1231,6 +1233,7 @@
   "The type has been created": "Il tipo è stato creato",
   "The type has been deleted": "Il tipo è stato eliminato",
   "The type has been updated": "Il tipo è stato aggiornato",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "Il tipo di informazioni di contatto. Non cambiarlo se non sai cosa stai facendo.",
   "The user has been added": "L’utente è stato aggiunto",
   "The user has been deleted": "L’utente è stato eliminato",
   "The user has been removed": "L’utente è stato rimosso",
