--- a/lang/ja.json
+++ b/lang/ja.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "本気ですか？これにより、ドキュメントが完全に削除されます。",
   "Are you sure? This will delete the goal and all the streaks permanently.": "本気ですか？これにより、ゴールとすべてのストリークが完全に削除されます。",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "本気ですか？これにより、すべての連絡先からアドレスの種類が削除されますが、連絡先自体は削除されません。",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "本気ですか？これにより、すべての連絡先から連絡先情報の種類が削除されますが、連絡先自体は削除されません。",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "本気ですか？これにより、すべての連絡先から連絡先情報タイプが削除されますが、連絡先自体は削除されません。",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "本気ですか？これにより、すべての連絡先から性別が削除されますが、連絡先自体は削除されません。",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "本気ですか？これにより、すべての連絡先からテンプレートが削除されますが、連絡先自体は削除されません。",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "チームを削除しますか？ チームを削除すると、全てのデータが完全に削除されます。",
@@ -383,10 +383,11 @@
   "Delete": "削除",
   "Delete :name": ":nameを削除",
   "Delete Account": "アカウント削除",
+  "Delete a contact information": "連絡先情報を削除します",
+  "Delete a contact information type": "連絡先情報タイプを削除します",
   "Delete a new key": "新しいキーを削除する",
   "Delete API Token": "APIトークン削除",
   "Delete contact": "連絡先を削除する",
-  "Delete contact information": "連絡先情報を削除します",
   "deleted a contact information": "連絡先情報を削除しました",
   "deleted a goal": "ゴールを削除した",
   "deleted an address": "アドレスを削除しました",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "住所タイプが更新されました",
   "The call has been created": "通話が作成されました",
   "The call has been deleted": "通話は削除されました",
-  "The call has been edited": "通話は編集されました",
+  "The call has been updated": "通話が更新されました",
   "The call reason has been created": "通話理由が作成されました",
   "The call reason has been deleted": "通話理由が削除されました",
   "The call reason has been updated": "通話理由が更新されました",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "連絡先はまだどのグループにも属していません。",
   "The contact has been added": "連絡先が追加されました",
   "The contact has been deleted": "連絡先が削除されました",
-  "The contact has been edited": "連絡先が編集されました",
   "The contact has been removed from the group": "連絡先がグループから削除されました",
+  "The contact has been updated": "連絡先が更新されました",
   "The contact information has been created": "連絡先情報が作成されました",
   "The contact information has been deleted": "連絡先情報が削除されました",
-  "The contact information has been edited": "連絡先情報が編集されました",
+  "The contact information has been updated": "連絡先情報が更新されました",
   "The contact information type has been created": "連絡先情報タイプが作成されました",
   "The contact information type has been deleted": "連絡先情報の種類が削除されました",
   "The contact information type has been updated": "連絡先情報のタイプが更新されました",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "指定されたデータは無効でした。",
   "The goal has been created": "目標が作成されました",
   "The goal has been deleted": "ゴールは削除されました",
-  "The goal has been edited": "目標が編集されました",
+  "The goal has been updated": "目標が更新されました",
   "The group has been added": "グループが追加されました",
   "The group has been deleted": "グループが削除されました",
   "The group has been updated": "グループが更新されました",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "ライフメトリクスが更新されました",
   "The loan has been created": "ローンが作成されました",
   "The loan has been deleted": "借金は削除されました",
-  "The loan has been edited": "ローンが編集されました",
   "The loan has been settled": "借金は完済しました",
+  "The loan has been updated": "ローンが更新されました",
   "The loan is an object": "ローンは対象物です",
   "The loan is monetary": "借金は金銭的なものです",
   "The module has been added": "モジュールが追加されました",
   "The module has been removed": "モジュールが削除されました",
   "The note has been created": "ノートが作成されました",
   "The note has been deleted": "メモは削除されました",
-  "The note has been edited": "メモが編集されました",
+  "The note has been updated": "メモが更新されました",
   "The notification has been sent": "通知が送信されました",
   "The operation either timed out or was not allowed.": "操作がタイムアウトしたか、許可されませんでした。",
   "The page has been added": "ページが追加されました",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "ペットカテゴリーを更新しました",
   "The pet has been added": "ペットが追加されました",
   "The pet has been deleted": "ペットは削除されました",
-  "The pet has been edited": "ペットが編集されました",
+  "The pet has been updated": "ペットが更新されました",
   "The photo has been added": "写真が追加されました",
   "The photo has been deleted": "写真は削除されました",
   "The position has been saved": "位置が保存されました",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "二要素認証のリカバリーコードが無効です。",
   "There are no active addresses yet.": "アクティブなアドレスはまだありません。",
   "There are no calls logged yet.": "まだ通話は記録されていません。",
-  "There are no contact information yet.": "連絡先情報はまだありません。",
+  "There are no contact information types yet.": "連絡先情報はまだありません。",
+  "There are no contact informations yet.": "連絡先情報はまだありません。",
   "There are no documents yet.": "まだ書類はありません。",
   "There are no events on that day, future or past.": "その日、未来にも過去にも出来事はありません。",
   "There are no files yet.": "まだファイルがありません。",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "宗教が更新されました",
   "The reminder has been created": "リマインダーが作成されました",
   "The reminder has been deleted": "リマインダーが削除されました",
-  "The reminder has been edited": "リマインダーが編集されました",
+  "The reminder has been updated": "リマインダーが更新されました",
   "The response is not a streamed response.": "レスポンスは、ストリーミング形式ではありません。",
   "The response is not a view.": "レスポンスは、ビューではありません。",
   "The role has been created": "ロールが作成されました",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "タグ更新されました",
   "The task has been created": "タスクが作成されました",
   "The task has been deleted": "タスクは削除されました",
-  "The task has been edited": "タスクが編集されました",
+  "The task has been updated": "タスクが更新されました",
   "The team's name and owner information.": "チーム名とオーナー情報",
   "The Telegram channel has been deleted": "Telegram チャンネルが削除されました",
   "The template has been created": "テンプレートが作成されました",
@@ -1231,6 +1233,7 @@
   "The type has been created": "タイプが作成されました",
   "The type has been deleted": "タイプは削除されました",
   "The type has been updated": "タイプが更新されました",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "連絡先情報の種類。自分が何をしているのかわからない限り、変更しないでください。",
   "The user has been added": "ユーザーが追加されました",
   "The user has been deleted": "ユーザーは削除されました",
   "The user has been removed": "ユーザーが削除されました",
