--- a/lang/ml.json
+++ b/lang/ml.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "നിങ്ങൾക്ക് ഉറപ്പാണോ? ഇത് പ്രമാണത്തെ ശാശ്വതമായി ഇല്ലാതാക്കും.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "നിങ്ങൾക്ക് ഉറപ്പാണോ? ഇത് ലക്ഷ്യവും എല്ലാ സ്ട്രീക്കുകളും ശാശ്വതമായി ഇല്ലാതാക്കും.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "നിങ്ങൾക്ക് ഉറപ്പാണോ? ഇത് എല്ലാ കോൺടാക്റ്റുകളിൽ നിന്നും വിലാസ തരങ്ങളെ നീക്കം ചെയ്യും, എന്നാൽ കോൺടാക്റ്റുകൾ തന്നെ ഇല്ലാതാക്കില്ല.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "നിങ്ങൾക്ക് ഉറപ്പാണോ? ഇത് എല്ലാ കോൺടാക്റ്റുകളിൽ നിന്നും കോൺടാക്റ്റ് വിവര തരങ്ങളെ നീക്കം ചെയ്യും, എന്നാൽ കോൺടാക്റ്റുകൾ തന്നെ ഇല്ലാതാക്കില്ല.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "നിങ്ങൾക്ക് ഉറപ്പാണോ? ഇത് എല്ലാ കോൺടാക്റ്റുകളിൽ നിന്നും കോൺടാക്റ്റ് വിവര തരം നീക്കംചെയ്യും, പക്ഷേ കോൺടാക്റ്റുകൾ സ്വയം ഇല്ലാതാക്കില്ല.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "നിങ്ങൾക്ക് ഉറപ്പാണോ? ഇത് എല്ലാ കോൺടാക്റ്റുകളിൽ നിന്നും ലിംഗഭേദം നീക്കം ചെയ്യും, എന്നാൽ കോൺടാക്റ്റുകൾ സ്വയം ഇല്ലാതാക്കില്ല.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "നിങ്ങൾക്ക് ഉറപ്പാണോ? ഇത് എല്ലാ കോൺടാക്റ്റുകളിൽ നിന്നും ടെംപ്ലേറ്റ് നീക്കംചെയ്യും, എന്നാൽ കോൺടാക്റ്റുകൾ തന്നെ ഇല്ലാതാക്കില്ല.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "ഈ ടീമിനെ ഇല്ലാതാക്കണമെന്ന് തീർച്ചയാണോ? ഒരു ടീം ഇല്ലാതാക്കിയാൽ, അതിന്റെ എല്ലാ ഉറവിടങ്ങളും ഡാറ്റയും ശാശ്വതമായി ഇല്ലാതാക്കപ്പെടും.",
@@ -383,10 +383,11 @@
   "Delete": "ഇല്ലാതാക്കുക",
   "Delete :name": ":name ഇല്ലാതാക്കുക",
   "Delete Account": "അക്കൗണ്ട് ഇല്ലാതാക്കുക",
+  "Delete a contact information": "ഒരു കോൺടാക്റ്റ് വിവരങ്ങൾ ഇല്ലാതാക്കുക",
+  "Delete a contact information type": "ഒരു കോൺടാക്റ്റ് വിവര തരം ഇല്ലാതാക്കുക",
   "Delete a new key": "ഒരു പുതിയ കീ ഇല്ലാതാക്കുക",
   "Delete API Token": "API ടോക്കൺ ഇല്ലാതാക്കുക",
   "Delete contact": "കോൺടാക്റ്റ് ഇല്ലാതാക്കുക",
-  "Delete contact information": "കോൺടാക്റ്റ് വിവരങ്ങൾ ഇല്ലാതാക്കുക",
   "deleted a contact information": "ഒരു കോൺടാക്റ്റ് വിവരം ഇല്ലാതാക്കി",
   "deleted a goal": "ഒരു ലക്ഷ്യം ഇല്ലാതാക്കി",
   "deleted an address": "ഒരു വിലാസം ഇല്ലാതാക്കി",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "വിലാസ തരം അപ്ഡേറ്റ് ചെയ്തു",
   "The call has been created": "കോൾ സൃഷ്ടിച്ചു",
   "The call has been deleted": "കോൾ ഇല്ലാതാക്കി",
-  "The call has been edited": "കോൾ എഡിറ്റ് ചെയ്തു",
+  "The call has been updated": "കോൾ അപ്ഡേറ്റുചെയ്തു",
   "The call reason has been created": "കോൾ കാരണം സൃഷ്ടിച്ചു",
   "The call reason has been deleted": "കോളിന്റെ കാരണം ഇല്ലാതാക്കി",
   "The call reason has been updated": "കോൾ കാരണം അപ്ഡേറ്റ് ചെയ്തു",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "കോൺടാക്റ്റ് ഇതുവരെ ഒരു ഗ്രൂപ്പിലും ഉൾപ്പെട്ടിട്ടില്ല.",
   "The contact has been added": "കോൺടാക്റ്റ് ചേർത്തു",
   "The contact has been deleted": "കോൺടാക്റ്റ് ഇല്ലാതാക്കി",
-  "The contact has been edited": "കോൺടാക്റ്റ് എഡിറ്റ് ചെയ്തു",
   "The contact has been removed from the group": "കോൺടാക്റ്റ് ഗ്രൂപ്പിൽ നിന്ന് നീക്കം ചെയ്തു",
+  "The contact has been updated": "കോൺടാക്റ്റ് അപ്ഡേറ്റുചെയ്തു",
   "The contact information has been created": "ബന്ധപ്പെടാനുള്ള വിവരങ്ങൾ സൃഷ്ടിച്ചു",
   "The contact information has been deleted": "ബന്ധപ്പെടാനുള്ള വിവരങ്ങൾ ഇല്ലാതാക്കി",
-  "The contact information has been edited": "ബന്ധപ്പെടാനുള്ള വിവരങ്ങൾ എഡിറ്റ് ചെയ്തിട്ടുണ്ട്",
+  "The contact information has been updated": "കോൺടാക്റ്റ് വിവരങ്ങൾ അപ്ഡേറ്റുചെയ്തു",
   "The contact information type has been created": "ബന്ധപ്പെടാനുള്ള വിവര തരം സൃഷ്ടിച്ചു",
   "The contact information type has been deleted": "ബന്ധപ്പെടാനുള്ള വിവര തരം ഇല്ലാതാക്കി",
   "The contact information type has been updated": "ബന്ധപ്പെടാനുള്ള വിവര തരം അപ്ഡേറ്റ് ചെയ്തു",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "നൽകിയ ഡാറ്റ അസാധുവാണ്.",
   "The goal has been created": "ലക്ഷ്യം സൃഷ്ടിച്ചു",
   "The goal has been deleted": "ലക്ഷ്യം ഇല്ലാതാക്കി",
-  "The goal has been edited": "ലക്ഷ്യം തിരുത്തിയിട്ടുണ്ട്",
+  "The goal has been updated": "ലക്ഷ്യം അപ്ഡേറ്റുചെയ്തു",
   "The group has been added": "ഗ്രൂപ്പ് ചേർത്തിട്ടുണ്ട്",
   "The group has been deleted": "ഗ്രൂപ്പ് ഇല്ലാതാക്കി",
   "The group has been updated": "ഗ്രൂപ്പ് അപ്ഡേറ്റ് ചെയ്തിട്ടുണ്ട്",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "ലൈഫ് മെട്രിക് അപ്ഡേറ്റ് ചെയ്തു",
   "The loan has been created": "വായ്പ സൃഷ്ടിച്ചു",
   "The loan has been deleted": "വായ്പ ഇല്ലാതാക്കി",
-  "The loan has been edited": "ലോൺ എഡിറ്റ് ചെയ്തിട്ടുണ്ട്",
   "The loan has been settled": "ലോൺ അടച്ചു തീർത്തു",
+  "The loan has been updated": "വായ്പ അപ്ഡേറ്റുചെയ്തു",
   "The loan is an object": "വായ്പ ഒരു വസ്തുവാണ്",
   "The loan is monetary": "വായ്പ പണമാണ്",
   "The module has been added": "മൊഡ്യൂൾ ചേർത്തു",
   "The module has been removed": "മൊഡ്യൂൾ നീക്കം ചെയ്തു",
   "The note has been created": "കുറിപ്പ് തയ്യാറാക്കിയിട്ടുണ്ട്",
   "The note has been deleted": "കുറിപ്പ് ഇല്ലാതാക്കി",
-  "The note has been edited": "കുറിപ്പ് തിരുത്തിയിട്ടുണ്ട്",
+  "The note has been updated": "കുറിപ്പ് അപ്ഡേറ്റുചെയ്തു",
   "The notification has been sent": "അറിയിപ്പ് അയച്ചിട്ടുണ്ട്",
   "The operation either timed out or was not allowed.": "ഓപ്പറേഷൻ സമയം കഴിഞ്ഞു അല്ലെങ്കിൽ അനുവദിച്ചില്ല.",
   "The page has been added": "പേജ് ചേർത്തു",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "വളർത്തുമൃഗങ്ങളുടെ വിഭാഗം അപ്‌ഡേറ്റ് ചെയ്‌തു",
   "The pet has been added": "വളർത്തുമൃഗത്തെ ചേർത്തു",
   "The pet has been deleted": "വളർത്തുമൃഗത്തെ ഇല്ലാതാക്കി",
-  "The pet has been edited": "പെറ്റ് എഡിറ്റ് ചെയ്തിട്ടുണ്ട്",
+  "The pet has been updated": "വളർത്തുമൃഗങ്ങൾ അപ്ഡേറ്റുചെയ്തു",
   "The photo has been added": "ഫോട്ടോ ചേർത്തിട്ടുണ്ട്",
   "The photo has been deleted": "ഫോട്ടോ ഇല്ലാതാക്കി",
   "The position has been saved": "സ്ഥാനം രക്ഷപ്പെട്ടു",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "നൽകിയിരിക്കുന്ന രണ്ട് ഫാക്ടർ വീണ്ടെടുക്കൽ കോഡ് അസാധുവാണ്.",
   "There are no active addresses yet.": "ഇതുവരെ സജീവമായ വിലാസങ്ങളൊന്നുമില്ല.",
   "There are no calls logged yet.": "ഇതുവരെ കോളുകളൊന്നും ലോഗ് ചെയ്തിട്ടില്ല.",
-  "There are no contact information yet.": "ഇതുവരെ ബന്ധപ്പെടാനുള്ള വിവരങ്ങളൊന്നുമില്ല.",
+  "There are no contact information types yet.": "കോൺടാക്റ്റ് വിവര തരങ്ങളൊന്നുമില്ല.",
+  "There are no contact informations yet.": "ഇതുവരെ ബന്ധപ്പെടാനുള്ള വിവരങ്ങളൊന്നുമില്ല.",
   "There are no documents yet.": "ഇതുവരെ രേഖകളൊന്നുമില്ല.",
   "There are no events on that day, future or past.": "ആ ദിവസമോ ഭാവിയിലോ ഭൂതകാലത്തിലോ സംഭവങ്ങളൊന്നുമില്ല.",
   "There are no files yet.": "ഇതുവരെ ഫയലുകളൊന്നുമില്ല.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "മതം നവീകരിച്ചു",
   "The reminder has been created": "റിമൈൻഡർ സൃഷ്ടിച്ചു",
   "The reminder has been deleted": "റിമൈൻഡർ ഇല്ലാതാക്കി",
-  "The reminder has been edited": "റിമൈൻഡർ എഡിറ്റ് ചെയ്തു",
+  "The reminder has been updated": "ഓർമ്മപ്പെടുത്തൽ അപ്ഡേറ്റുചെയ്തു",
   "The response is not a streamed response.": "പ്രതികരണം സ്ട്രീം ചെയ്ത പ്രതികരണമല്ല.",
   "The response is not a view.": "പ്രതികരണം കാഴ്ചയല്ല.",
   "The role has been created": "റോൾ സൃഷ്ടിച്ചു",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "ടാഗ് അപ്ഡേറ്റ് ചെയ്തു",
   "The task has been created": "ചുമതല സൃഷ്ടിച്ചു",
   "The task has been deleted": "ചുമതല ഇല്ലാതാക്കി",
-  "The task has been edited": "ചുമതല എഡിറ്റ് ചെയ്തു",
+  "The task has been updated": "ചുമതല അപ്ഡേറ്റുചെയ്തു",
   "The team's name and owner information.": "ടീമിന്റെ പേരും ഉടമയുടെ വിവരങ്ങളും.",
   "The Telegram channel has been deleted": "ടെലിഗ്രാം ചാനൽ ഇല്ലാതാക്കി",
   "The template has been created": "ടെംപ്ലേറ്റ് സൃഷ്ടിച്ചു",
@@ -1231,6 +1233,7 @@
   "The type has been created": "തരം സൃഷ്ടിച്ചു",
   "The type has been deleted": "തരം ഇല്ലാതാക്കി",
   "The type has been updated": "തരം അപ്ഡേറ്റ് ചെയ്തു",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "കോൺടാക്റ്റ് വിവരങ്ങളുടെ തരം. നിങ്ങൾ എന്താണ് ചെയ്യുന്നതെന്ന് നിങ്ങൾക്കറിയില്ലെങ്കിൽ അത് മാറ്റരുത്.",
   "The user has been added": "ഉപയോക്താവിനെ ചേർത്തു",
   "The user has been deleted": "ഉപയോക്താവിനെ ഇല്ലാതാക്കി",
   "The user has been removed": "ഉപയോക്താവിനെ നീക്കം ചെയ്‌തു",
