--- a/lang/nl.json
+++ b/lang/nl.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Weet je het zeker? Hiermee wordt het document permanent verwijderd.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Weet je het zeker? Hierdoor worden het doel en alle streaks permanent verwijderd.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Weet je het zeker? Hiermee worden de adrestypen van alle contacten verwijderd, maar worden de contacten zelf niet verwijderd.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Weet je het zeker? Hierdoor worden de typen contactgegevens van alle contacten verwijderd, maar worden de contacten zelf niet verwijderd.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Weet je het zeker? Dit verwijdert het contactinformatietype uit alle contacten, maar verwijdert de contacten niet zelf.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Weet je het zeker? Hiermee worden de geslachten van alle contacten verwijderd, maar worden de contacten zelf niet verwijderd.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Weet je het zeker? Hierdoor wordt de sjabloon uit alle contacten verwijderd, maar worden de contacten zelf niet verwijderd.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Weet je zeker dat je dit team wilt verwijderen? Zodra een team is verwijderd, worden alle bronnen en gegevens ook permanent verwijderd.",
@@ -383,10 +383,11 @@
   "Delete": "Verwijderen",
   "Delete :name": "Verwijder :name",
   "Delete Account": "Account verwijderen",
+  "Delete a contact information": "Verwijder een contactgegevens",
+  "Delete a contact information type": "Verwijder een contactinformatietype",
   "Delete a new key": "Verwijder een nieuwe sleutel",
   "Delete API Token": "API-token verwijderen",
   "Delete contact": "Verwijder contact",
-  "Delete contact information": "Contactgegevens verwijderen",
   "deleted a contact information": "een contactgegevens verwijderd",
   "deleted a goal": "een doel verwijderd",
   "deleted an address": "een adres verwijderd",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "Het adrestype is bijgewerkt",
   "The call has been created": "Het gesprek is aangemaakt",
   "The call has been deleted": "De oproep is verwijderd",
-  "The call has been edited": "De oproep is bewerkt",
+  "The call has been updated": "De oproep is bijgewerkt",
   "The call reason has been created": "De oproepreden is aangemaakt",
   "The call reason has been deleted": "De oproepreden is verwijderd",
   "The call reason has been updated": "De oproepreden is bijgewerkt",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "Het contact behoort nog tot geen enkele groep.",
   "The contact has been added": "Het contact is toegevoegd",
   "The contact has been deleted": "Het contact is verwijderd",
-  "The contact has been edited": "Het contact is bewerkt",
   "The contact has been removed from the group": "Het contact is uit de groep verwijderd",
+  "The contact has been updated": "Het contact is bijgewerkt",
   "The contact information has been created": "De contactgegevens zijn aangemaakt",
   "The contact information has been deleted": "De contactgegevens zijn verwijderd",
-  "The contact information has been edited": "De contactgegevens zijn aangepast",
+  "The contact information has been updated": "De contactgegevens is bijgewerkt",
   "The contact information type has been created": "Het type contactgegevens is aangemaakt",
   "The contact information type has been deleted": "Het type contactgegevens is verwijderd",
   "The contact information type has been updated": "Het type contactgegevens is bijgewerkt",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "De gegeven data was ongeldig.",
   "The goal has been created": "Het doel is gemaakt",
   "The goal has been deleted": "Het doel is verwijderd",
-  "The goal has been edited": "Het doel is aangepast",
+  "The goal has been updated": "Het doel is bijgewerkt",
   "The group has been added": "De groep is toegevoegd",
   "The group has been deleted": "De groep is verwijderd",
   "The group has been updated": "De groep is bijgewerkt",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "De levensduurstatistiek is bijgewerkt",
   "The loan has been created": "De lening is gecreëerd",
   "The loan has been deleted": "De lening is verwijderd",
-  "The loan has been edited": "De lening is aangepast",
   "The loan has been settled": "De lening is afgewikkeld",
+  "The loan has been updated": "De lening is bijgewerkt",
   "The loan is an object": "De lening is een object",
   "The loan is monetary": "De lening is geldelijk",
   "The module has been added": "De module is toegevoegd",
   "The module has been removed": "De module is verwijderd",
   "The note has been created": "De notitie is gemaakt",
   "The note has been deleted": "De notitie is verwijderd",
-  "The note has been edited": "De notitie is bewerkt",
+  "The note has been updated": "De notitie is bijgewerkt",
   "The notification has been sent": "De melding is verzonden",
   "The operation either timed out or was not allowed.": "Er is een time-out opgetreden voor de bewerking of deze is niet toegestaan.",
   "The page has been added": "De pagina is toegevoegd",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "De categorie huisdieren is bijgewerkt",
   "The pet has been added": "Het huisdier is toegevoegd",
   "The pet has been deleted": "Het huisdier is verwijderd",
-  "The pet has been edited": "Het huisdier is bewerkt",
+  "The pet has been updated": "Het huisdier is bijgewerkt",
   "The photo has been added": "De foto is toegevoegd",
   "The photo has been deleted": "De foto is verwijderd",
   "The position has been saved": "De positie is opgeslagen",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "De gegeven twee-staps herstelcode was ongeldig.",
   "There are no active addresses yet.": "Er zijn nog geen actieve adressen.",
   "There are no calls logged yet.": "Er zijn nog geen oproepen geregistreerd.",
-  "There are no contact information yet.": "Er zijn nog geen contactgegevens.",
+  "There are no contact information types yet.": "Er zijn nog geen types voor contactinformatie.",
+  "There are no contact informations yet.": "Er zijn nog geen contactgegevens.",
   "There are no documents yet.": "Er zijn nog geen documenten.",
   "There are no events on that day, future or past.": "Er zijn geen gebeurtenissen op die dag, toekomst of verleden.",
   "There are no files yet.": "Er zijn nog geen bestanden.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "De religie is bijgewerkt",
   "The reminder has been created": "De herinnering is aangemaakt",
   "The reminder has been deleted": "De herinnering is verwijderd",
-  "The reminder has been edited": "De herinnering is bewerkt",
+  "The reminder has been updated": "De herinnering is bijgewerkt",
   "The response is not a streamed response.": "De respons is niet gestreamd.",
   "The response is not a view.": "De respons is geen view.",
   "The role has been created": "De rol is gemaakt",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "De tag is bijgewerkt",
   "The task has been created": "De taak is gemaakt",
   "The task has been deleted": "De taak is verwijderd",
-  "The task has been edited": "De taak is bewerkt",
+  "The task has been updated": "De taak is bijgewerkt",
   "The team's name and owner information.": "De naam van het team en de informatie over de eigenaar.",
   "The Telegram channel has been deleted": "Het Telegram-kanaal is verwijderd",
   "The template has been created": "De sjabloon is gemaakt",
@@ -1231,6 +1233,7 @@
   "The type has been created": "Het type is gemaakt",
   "The type has been deleted": "Het type is verwijderd",
   "The type has been updated": "Het type is bijgewerkt",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "Het type contactgegevens. Verander het niet tenzij je weet wat je doet.",
   "The user has been added": "De gebruiker is toegevoegd",
   "The user has been deleted": "De gebruiker is verwijderd",
   "The user has been removed": "De gebruiker is verwijderd",
