--- a/lang/pa.json
+++ b/lang/pa.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "ਤੁਹਾਨੂੰ ਪੂਰਾ ਵਿਸ਼ਵਾਸ ਹੈ? ਇਹ ਦਸਤਾਵੇਜ਼ ਨੂੰ ਪੱਕੇ ਤੌਰ ’ਤੇ ਮਿਟਾ ਦੇਵੇਗਾ।",
   "Are you sure? This will delete the goal and all the streaks permanently.": "ਤੁਹਾਨੂੰ ਪੂਰਾ ਵਿਸ਼ਵਾਸ ਹੈ? ਇਹ ਟੀਚਾ ਅਤੇ ਸਾਰੀਆਂ ਸਟ੍ਰੀਕਾਂ ਨੂੰ ਸਥਾਈ ਤੌਰ ’ਤੇ ਮਿਟਾ ਦੇਵੇਗਾ।",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "ਤੁਹਾਨੂੰ ਪੂਰਾ ਵਿਸ਼ਵਾਸ ਹੈ? ਇਹ ਸਾਰੇ ਸੰਪਰਕਾਂ ਤੋਂ ਪਤੇ ਦੀਆਂ ਕਿਸਮਾਂ ਨੂੰ ਹਟਾ ਦੇਵੇਗਾ, ਪਰ ਸੰਪਰਕਾਂ ਨੂੰ ਆਪਣੇ ਆਪ ਨਹੀਂ ਮਿਟਾਏਗਾ।",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "ਤੁਹਾਨੂੰ ਪੂਰਾ ਵਿਸ਼ਵਾਸ ਹੈ? ਇਹ ਸਾਰੇ ਸੰਪਰਕਾਂ ਤੋਂ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਕਿਸਮਾਂ ਨੂੰ ਹਟਾ ਦੇਵੇਗਾ, ਪਰ ਸੰਪਰਕਾਂ ਨੂੰ ਆਪਣੇ ਆਪ ਨਹੀਂ ਮਿਟਾਏਗਾ।",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "ਤੁਹਾਨੂੰ ਪੂਰਾ ਵਿਸ਼ਵਾਸ ਹੈ? ਇਹ ਸਾਰੇ ਸੰਪਰਕਾਂ ਤੋਂ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਕਿਸਮ ਨੂੰ ਹਟਾ ਦੇਵੇਗਾ, ਪਰ ਉਹਨਾਂ ਸੰਪਰਕਾਂ ਨੂੰ ਖੁਦ ਮਿਟਾ ਦੇਵੇਗਾ.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "ਤੁਹਾਨੂੰ ਪੂਰਾ ਵਿਸ਼ਵਾਸ ਹੈ? ਇਹ ਸਾਰੇ ਸੰਪਰਕਾਂ ਤੋਂ ਲਿੰਗ ਨੂੰ ਹਟਾ ਦੇਵੇਗਾ, ਪਰ ਸੰਪਰਕਾਂ ਨੂੰ ਆਪਣੇ ਆਪ ਨਹੀਂ ਮਿਟਾਏਗਾ।",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "ਤੁਹਾਨੂੰ ਪੂਰਾ ਵਿਸ਼ਵਾਸ ਹੈ? ਇਹ ਸਾਰੇ ਸੰਪਰਕਾਂ ਤੋਂ ਟੈਮਪਲੇਟ ਨੂੰ ਹਟਾ ਦੇਵੇਗਾ, ਪਰ ਸੰਪਰਕਾਂ ਨੂੰ ਆਪਣੇ ਆਪ ਨਹੀਂ ਮਿਟਾਏਗਾ।",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "ਕੀ ਤੁਸੀਂ ਯਕੀਨੀ ਤੌਰ ’ਤੇ ਇਸ ਟੀਮ ਨੂੰ ਮਿਟਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ? ਇੱਕ ਵਾਰ ਟੀਮ ਨੂੰ ਮਿਟਾਉਣ ਤੋਂ ਬਾਅਦ, ਇਸਦੇ ਸਾਰੇ ਸਰੋਤ ਅਤੇ ਡੇਟਾ ਸਥਾਈ ਤੌਰ ’ਤੇ ਮਿਟਾ ਦਿੱਤੇ ਜਾਣਗੇ।",
@@ -383,10 +383,11 @@
   "Delete": "ਮਿਟਾਓ",
   "Delete :name": ":name ਨੂੰ ਮਿਟਾਓ",
   "Delete Account": "ਖਾਤਾ ਮਿਟਾਓ",
+  "Delete a contact information": "ਇੱਕ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਹਟਾਓ",
+  "Delete a contact information type": "ਇੱਕ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਕਿਸਮ ਹਟਾਓ",
   "Delete a new key": "ਇੱਕ ਨਵੀਂ ਕੁੰਜੀ ਮਿਟਾਓ",
   "Delete API Token": "API ਟੋਕਨ ਮਿਟਾਓ",
   "Delete contact": "ਸੰਪਰਕ ਮਿਟਾਓ",
-  "Delete contact information": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਨੂੰ ਮਿਟਾਓ",
   "deleted a contact information": "ਇੱਕ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਨੂੰ ਮਿਟਾਇਆ",
   "deleted a goal": "ਇੱਕ ਟੀਚਾ ਮਿਟਾ ਦਿੱਤਾ",
   "deleted an address": "ਇੱਕ ਪਤਾ ਮਿਟਾ ਦਿੱਤਾ",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "ਪਤੇ ਦੀ ਕਿਸਮ ਅੱਪਡੇਟ ਕੀਤੀ ਗਈ ਹੈ",
   "The call has been created": "ਕਾਲ ਬਣਾਈ ਗਈ ਹੈ",
   "The call has been deleted": "ਕਾਲ ਮਿਟਾ ਦਿੱਤੀ ਗਈ ਹੈ",
-  "The call has been edited": "ਕਾਲ ਦਾ ਸੰਪਾਦਨ ਕੀਤਾ ਗਿਆ ਹੈ",
+  "The call has been updated": "ਕਾਲ ਨੂੰ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The call reason has been created": "ਕਾਲ ਕਾਰਨ ਬਣਾਇਆ ਗਿਆ ਹੈ",
   "The call reason has been deleted": "ਕਾਲ ਕਾਰਨ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
   "The call reason has been updated": "ਕਾਲ ਕਾਰਨ ਅੱਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "ਸੰਪਰਕ ਅਜੇ ਕਿਸੇ ਸਮੂਹ ਨਾਲ ਸਬੰਧਤ ਨਹੀਂ ਹੈ।",
   "The contact has been added": "ਸੰਪਰਕ ਜੋੜਿਆ ਗਿਆ ਹੈ",
   "The contact has been deleted": "ਸੰਪਰਕ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
-  "The contact has been edited": "ਸੰਪਰਕ ਸੰਪਾਦਿਤ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The contact has been removed from the group": "ਸੰਪਰਕ ਨੂੰ ਗਰੁੱਪ ਤੋਂ ਹਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
+  "The contact has been updated": "ਸੰਪਰਕ ਨੂੰ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The contact information has been created": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਬਣਾਈ ਗਈ ਹੈ",
   "The contact information has been deleted": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਮਿਟਾ ਦਿੱਤੀ ਗਈ ਹੈ",
-  "The contact information has been edited": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਸੰਪਾਦਿਤ ਕੀਤੀ ਗਈ ਹੈ",
+  "The contact information has been updated": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਨੂੰ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The contact information type has been created": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਦੀ ਕਿਸਮ ਬਣਾਈ ਗਈ ਹੈ",
   "The contact information type has been deleted": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਦੀ ਕਿਸਮ ਮਿਟਾ ਦਿੱਤੀ ਗਈ ਹੈ",
   "The contact information type has been updated": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਦੀ ਕਿਸਮ ਅੱਪਡੇਟ ਕੀਤੀ ਗਈ ਹੈ",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "ਦਿੱਤਾ ਗਿਆ ਡੇਟਾ ਅਵੈਧ ਸੀ।",
   "The goal has been created": "ਟੀਚਾ ਬਣਾਇਆ ਗਿਆ ਹੈ",
   "The goal has been deleted": "ਟੀਚਾ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
-  "The goal has been edited": "ਟੀਚਾ ਸੰਪਾਦਿਤ ਕੀਤਾ ਗਿਆ ਹੈ",
+  "The goal has been updated": "ਟੀਚਾ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The group has been added": "ਗਰੁੱਪ ਨੂੰ ਸ਼ਾਮਲ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The group has been deleted": "ਗਰੁੱਪ ਨੂੰ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
   "The group has been updated": "ਗਰੁੱਪ ਨੂੰ ਅੱਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "ਜੀਵਨ ਮੈਟ੍ਰਿਕ ਨੂੰ ਅੱਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The loan has been created": "ਕਰਜ਼ਾ ਬਣਾਇਆ ਗਿਆ ਹੈ",
   "The loan has been deleted": "ਕਰਜ਼ਾ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
-  "The loan has been edited": "ਲੋਨ ਸੰਪਾਦਿਤ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The loan has been settled": "ਕਰਜ਼ੇ ਦਾ ਨਿਪਟਾਰਾ ਹੋ ਗਿਆ ਹੈ",
+  "The loan has been updated": "ਕਰਜ਼ਾ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The loan is an object": "ਕਰਜ਼ਾ ਇੱਕ ਵਸਤੂ ਹੈ",
   "The loan is monetary": "ਕਰਜ਼ਾ ਮੁਦਰਾ ਹੈ",
   "The module has been added": "ਮੋਡੀਊਲ ਜੋੜਿਆ ਗਿਆ ਹੈ",
   "The module has been removed": "ਮੋਡੀਊਲ ਨੂੰ ਹਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
   "The note has been created": "ਨੋਟ ਬਣਾਇਆ ਗਿਆ ਹੈ",
   "The note has been deleted": "ਨੋਟ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
-  "The note has been edited": "ਨੋਟ ਸੰਪਾਦਿਤ ਕੀਤਾ ਗਿਆ ਹੈ",
+  "The note has been updated": "ਨੋਟ ਨੂੰ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The notification has been sent": "ਨੋਟੀਫਿਕੇਸ਼ਨ ਭੇਜ ਦਿੱਤਾ ਗਿਆ ਹੈ",
   "The operation either timed out or was not allowed.": "ਓਪਰੇਸ਼ਨ ਜਾਂ ਤਾਂ ਸਮਾਂ ਸਮਾਪਤ ਹੋ ਗਿਆ ਜਾਂ ਇਜਾਜ਼ਤ ਨਹੀਂ ਦਿੱਤੀ ਗਈ।",
   "The page has been added": "ਪੰਨਾ ਜੋੜਿਆ ਗਿਆ ਹੈ",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "ਪਾਲਤੂ ਜਾਨਵਰਾਂ ਦੀ ਸ਼੍ਰੇਣੀ ਨੂੰ ਅੱਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The pet has been added": "ਪਾਲਤੂ ਜਾਨਵਰ ਨੂੰ ਜੋੜਿਆ ਗਿਆ ਹੈ",
   "The pet has been deleted": "ਪਾਲਤੂ ਜਾਨਵਰ ਨੂੰ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
-  "The pet has been edited": "ਪਾਲਤੂ ਜਾਨਵਰ ਨੂੰ ਸੰਪਾਦਿਤ ਕੀਤਾ ਗਿਆ ਹੈ",
+  "The pet has been updated": "ਪਾਲਤੂਆਂ ਨੂੰ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The photo has been added": "ਫੋਟੋ ਸ਼ਾਮਲ ਕੀਤੀ ਗਈ ਹੈ",
   "The photo has been deleted": "ਫੋਟੋ ਮਿਟਾ ਦਿੱਤੀ ਗਈ ਹੈ",
   "The position has been saved": "ਸਥਿਤੀ ਨੂੰ ਸੰਭਾਲਿਆ ਗਿਆ ਹੈ",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "ਪ੍ਰਦਾਨ ਕੀਤਾ ਦੋ ਫੈਕਟਰ ਰਿਕਵਰੀ ਕੋਡ ਅਵੈਧ ਸੀ।",
   "There are no active addresses yet.": "ਅਜੇ ਤੱਕ ਕੋਈ ਕਿਰਿਆਸ਼ੀਲ ਪਤੇ ਨਹੀਂ ਹਨ।",
   "There are no calls logged yet.": "ਹਾਲੇ ਤੱਕ ਕੋਈ ਕਾਲ ਲੌਗ ਨਹੀਂ ਕੀਤੀ ਗਈ ਹੈ।",
-  "There are no contact information yet.": "ਅਜੇ ਤੱਕ ਕੋਈ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਨਹੀਂ ਹੈ।",
+  "There are no contact information types yet.": "ਹਾਲੇ ਕੋਈ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਕਿਸਮਾਂ ਨਹੀਂ ਹਨ.",
+  "There are no contact informations yet.": "ਅਜੇ ਤੱਕ ਕੋਈ ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਨਹੀਂ ਹੈ।",
   "There are no documents yet.": "ਅਜੇ ਤੱਕ ਕੋਈ ਦਸਤਾਵੇਜ਼ ਨਹੀਂ ਹਨ।",
   "There are no events on that day, future or past.": "ਉਸ ਦਿਨ, ਭਵਿੱਖ ਜਾਂ ਅਤੀਤ ਦੀਆਂ ਕੋਈ ਘਟਨਾਵਾਂ ਨਹੀਂ ਹਨ।",
   "There are no files yet.": "ਹਾਲੇ ਤੱਕ ਕੋਈ ਫ਼ਾਈਲਾਂ ਨਹੀਂ ਹਨ।",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "ਧਰਮ ਨੂੰ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The reminder has been created": "ਰੀਮਾਈਂਡਰ ਬਣਾਇਆ ਗਿਆ ਹੈ",
   "The reminder has been deleted": "ਰੀਮਾਈਂਡਰ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
-  "The reminder has been edited": "ਰੀਮਾਈਂਡਰ ਨੂੰ ਸੰਪਾਦਿਤ ਕੀਤਾ ਗਿਆ ਹੈ",
+  "The reminder has been updated": "ਰੀਮਾਈਂਡਰ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The response is not a streamed response.": "ਜਵਾਬ ਇੱਕ ਸਟ੍ਰੀਮਡ ਜਵਾਬ ਨਹੀਂ ਹੈ।",
   "The response is not a view.": "ਜਵਾਬ ਇੱਕ ਦ੍ਰਿਸ਼ ਨਹੀਂ ਹੈ.",
   "The role has been created": "ਭੂਮਿਕਾ ਬਣਾਈ ਗਈ ਹੈ",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "ਟੈਗ ਨੂੰ ਅੱਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The task has been created": "ਟਾਸਕ ਬਣਾਇਆ ਗਿਆ ਹੈ",
   "The task has been deleted": "ਕਾਰਜ ਨੂੰ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
-  "The task has been edited": "ਕਾਰਜ ਸੰਪਾਦਿਤ ਕੀਤਾ ਗਿਆ ਹੈ",
+  "The task has been updated": "ਕੰਮ ਨੂੰ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
   "The team's name and owner information.": "ਟੀਮ ਦਾ ਨਾਮ ਅਤੇ ਮਾਲਕ ਦੀ ਜਾਣਕਾਰੀ।",
   "The Telegram channel has been deleted": "ਟੈਲੀਗ੍ਰਾਮ ਚੈਨਲ ਨੂੰ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
   "The template has been created": "ਟੈਪਲੇਟ ਬਣਾਇਆ ਗਿਆ ਹੈ",
@@ -1231,6 +1233,7 @@
   "The type has been created": "ਕਿਸਮ ਬਣਾਈ ਗਈ ਹੈ",
   "The type has been deleted": "ਕਿਸਮ ਮਿਟਾ ਦਿੱਤੀ ਗਈ ਹੈ",
   "The type has been updated": "ਕਿਸਮ ਨੂੰ ਅੱਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "ਸੰਪਰਕ ਜਾਣਕਾਰੀ ਦੀ ਕਿਸਮ. ਇਸ ਨੂੰ ਨਾ ਬਦਲੋ ਜਦੋਂ ਤਕ ਤੁਹਾਨੂੰ ਪਤਾ ਨਹੀਂ ਹੁੰਦਾ ਕਿ ਤੁਸੀਂ ਕੀ ਕਰ ਰਹੇ ਹੋ.",
   "The user has been added": "ਉਪਭੋਗਤਾ ਨੂੰ ਜੋੜਿਆ ਗਿਆ ਹੈ",
   "The user has been deleted": "ਉਪਭੋਗਤਾ ਨੂੰ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
   "The user has been removed": "ਉਪਭੋਗਤਾ ਨੂੰ ਹਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
