--- a/lang/pl.json
+++ b/lang/pl.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Jesteś pewny? Spowoduje to trwałe usunięcie dokumentu.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Jesteś pewny? Spowoduje to trwałe usunięcie gola i wszystkich serii.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Jesteś pewny? Spowoduje to usunięcie typów adresów ze wszystkich kontaktów, ale nie spowoduje usunięcia samych kontaktów.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Jesteś pewny? Spowoduje to usunięcie typów informacji kontaktowych ze wszystkich kontaktów, ale nie spowoduje usunięcia samych kontaktów.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Jesteś pewien? To usunie typ danych kontaktowych ze wszystkich kontaktów, ale sam nie usunie kontaktów.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Jesteś pewny? Spowoduje to usunięcie płci ze wszystkich kontaktów, ale nie spowoduje usunięcia samych kontaktów.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Jesteś pewny? Spowoduje to usunięcie szablonu ze wszystkich kontaktów, ale nie spowoduje usunięcia samych kontaktów.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Czy na pewno chcesz usunąć ten zespół? Po usunięciu zespołu wszystkie jego zasoby i dane zostaną trwale usunięte.",
@@ -383,10 +383,11 @@
   "Delete": "Usuń",
   "Delete :name": "Usuń :name",
   "Delete Account": "Usuń Konto",
+  "Delete a contact information": "Usuń dane kontaktowe",
+  "Delete a contact information type": "Usuń typ informacji kontaktowych",
   "Delete a new key": "Usuń nowy klucz",
   "Delete API Token": "Usuń Token API",
   "Delete contact": "Usuń kontakt",
-  "Delete contact information": "Usuń dane kontaktowe",
   "deleted a contact information": "usunięto dane kontaktowe",
   "deleted a goal": "usunął cel",
   "deleted an address": "usunięto adres",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "Typ adresu został zaktualizowany",
   "The call has been created": "Połączenie zostało utworzone",
   "The call has been deleted": "Połączenie zostało usunięte",
-  "The call has been edited": "Rozmowa została edytowana",
+  "The call has been updated": "Połączenie zostało zaktualizowane",
   "The call reason has been created": "Powód połączenia został utworzony",
   "The call reason has been deleted": "Powód połączenia został usunięty",
   "The call reason has been updated": "Powód połączenia został zaktualizowany",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "Kontakt nie należy jeszcze do żadnej grupy.",
   "The contact has been added": "Kontakt został dodany",
   "The contact has been deleted": "Kontakt został usunięty",
-  "The contact has been edited": "Kontakt został edytowany",
   "The contact has been removed from the group": "Kontakt został usunięty z grupy",
+  "The contact has been updated": "Kontakt został zaktualizowany",
   "The contact information has been created": "Dane kontaktowe zostały utworzone",
   "The contact information has been deleted": "Dane kontaktowe zostały usunięte",
-  "The contact information has been edited": "Dane kontaktowe zostały zmienione",
+  "The contact information has been updated": "Informacje kontaktowe zostały zaktualizowane",
   "The contact information type has been created": "Utworzono typ informacji kontaktowych",
   "The contact information type has been deleted": "Typ informacji kontaktowych został usunięty",
   "The contact information type has been updated": "Typ informacji kontaktowych został zaktualizowany",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "Podane dane były nieprawidłowe.",
   "The goal has been created": "Cel został stworzony",
   "The goal has been deleted": "Cel został usunięty",
-  "The goal has been edited": "Cel został edytowany",
+  "The goal has been updated": "Cel został zaktualizowany",
   "The group has been added": "Grupa została dodana",
   "The group has been deleted": "Grupa została usunięta",
   "The group has been updated": "Grupa została zaktualizowana",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "Wskaźnik życia został zaktualizowany",
   "The loan has been created": "Pożyczka została utworzona",
   "The loan has been deleted": "Pożyczka została usunięta",
-  "The loan has been edited": "Pożyczka została poprawiona",
   "The loan has been settled": "Pożyczka została uregulowana",
+  "The loan has been updated": "Pożyczka została zaktualizowana",
   "The loan is an object": "Pożyczka jest przedmiotem",
   "The loan is monetary": "Pożyczka ma charakter pieniężny",
   "The module has been added": "Moduł został dodany",
   "The module has been removed": "Moduł został usunięty",
   "The note has been created": "Notatka została utworzona",
   "The note has been deleted": "Notatka została usunięta",
-  "The note has been edited": "Notatka została poprawiona",
+  "The note has been updated": "Notatka została zaktualizowana",
   "The notification has been sent": "Powiadomienie zostało wysłane",
   "The operation either timed out or was not allowed.": "Operacja przekroczyła limit czasu lub nie została dozwolona.",
   "The page has been added": "Strona została dodana",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "Kategoria zwierzaka została zaktualizowana",
   "The pet has been added": "Zwierzę zostało dodane",
   "The pet has been deleted": "Zwierzę zostało usunięte",
-  "The pet has been edited": "Zwierzę zostało edytowane",
+  "The pet has been updated": "PET został zaktualizowany",
   "The photo has been added": "Zdjęcie zostało dodane",
   "The photo has been deleted": "Zdjęcie zostało usunięte",
   "The position has been saved": "Pozycja została zapisana",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "Podany dwuskładnikowy kod odzyskiwania był nieprawidłowy.",
   "There are no active addresses yet.": "Nie ma jeszcze aktywnych adresów.",
   "There are no calls logged yet.": "Nie zarejestrowano jeszcze żadnych połączeń.",
-  "There are no contact information yet.": "Nie ma jeszcze informacji kontaktowych.",
+  "There are no contact information types yet.": "Nie ma jeszcze rodzajów informacji kontaktowych.",
+  "There are no contact informations yet.": "Nie ma jeszcze informacji kontaktowych.",
   "There are no documents yet.": "Nie ma jeszcze żadnych dokumentów.",
   "There are no events on that day, future or past.": "W tym dniu nie ma żadnych wydarzeń, ani przyszłych, ani przeszłych.",
   "There are no files yet.": "Nie ma jeszcze żadnych plików.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "Religia została zaktualizowana",
   "The reminder has been created": "Przypomnienie zostało utworzone",
   "The reminder has been deleted": "Przypomnienie zostało usunięte",
-  "The reminder has been edited": "Przypomnienie zostało edytowane",
+  "The reminder has been updated": "Przypomnienie zostało zaktualizowane",
   "The response is not a streamed response.": "Odpowiedź nie jest odpowiedzią przesyłaną strumieniowo.",
   "The response is not a view.": "Odpowiedź nie jest widokiem.",
   "The role has been created": "Rola została utworzona",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "Tag został zaktualizowany",
   "The task has been created": "Zadanie zostało utworzone",
   "The task has been deleted": "Zadanie zostało usunięte",
-  "The task has been edited": "Zadanie zostało edytowane",
+  "The task has been updated": "Zadanie zostało zaktualizowane",
   "The team's name and owner information.": "Nazwa zespołu i informacje o właścicielu.",
   "The Telegram channel has been deleted": "Kanał Telegramu został usunięty",
   "The template has been created": "Szablon został utworzony",
@@ -1231,6 +1233,7 @@
   "The type has been created": "Typ został utworzony",
   "The type has been deleted": "Typ został usunięty",
   "The type has been updated": "Typ został zaktualizowany",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "Rodzaj informacji kontaktowych. Nie zmieniaj tego, chyba że wiesz, co robisz.",
   "The user has been added": "Użytkownik został dodany",
   "The user has been deleted": "Użytkownik został usunięty",
   "The user has been removed": "Użytkownik został usunięty",
