--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Tem certeza? Isso excluirá o documento permanentemente.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Tem certeza? Isso excluirá o gol e todas as sequências permanentemente.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Tem certeza? Isso removerá os tipos de endereço de todos os contatos, mas não excluirá os contatos em si.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Tem certeza? Isso removerá os tipos de informações de contato de todos os contatos, mas não excluirá os contatos em si.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Tem certeza? Isso removerá o tipo de informação de contato de todos os contatos, mas não excluirá os contatos.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Tem certeza? Isso removerá os gêneros de todos os contatos, mas não excluirá os contatos em si.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Tem certeza? Isso removerá o modelo de todos os contatos, mas não excluirá os contatos em si.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Tem certeza que quer excluir este time? Uma vez excluído, todos os dados e recursos relativos a ela serão excluídos permanentemente.",
@@ -383,10 +383,11 @@
   "Delete": "Excluir",
   "Delete :name": "Excluir :name",
   "Delete Account": "Excluir Conta",
+  "Delete a contact information": "Excluir uma informação de contato",
+  "Delete a contact information type": "Excluir um tipo de informação de contato",
   "Delete a new key": "Excluir uma nova chave",
   "Delete API Token": "Excluir Token da API",
   "Delete contact": "Excluir contato",
-  "Delete contact information": "Excluir informações de contato",
   "deleted a contact information": "excluiu uma informação de contato",
   "deleted a goal": "excluiu um gol",
   "deleted an address": "excluiu um endereço",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "O tipo de endereço foi atualizado",
   "The call has been created": "A chamada foi criada",
   "The call has been deleted": "A chamada foi excluída",
-  "The call has been edited": "A chamada foi editada",
+  "The call has been updated": "A chamada foi atualizada",
   "The call reason has been created": "O motivo da chamada foi criado",
   "The call reason has been deleted": "O motivo da chamada foi excluído",
   "The call reason has been updated": "O motivo da chamada foi atualizado",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "O contato ainda não pertence a nenhum grupo.",
   "The contact has been added": "O contato foi adicionado",
   "The contact has been deleted": "O contato foi excluído",
-  "The contact has been edited": "O contato foi editado",
   "The contact has been removed from the group": "O contato foi removido do grupo",
+  "The contact has been updated": "O contato foi atualizado",
   "The contact information has been created": "As informações de contato foram criadas",
   "The contact information has been deleted": "As informações de contato foram excluídas",
-  "The contact information has been edited": "As informações de contato foram editadas",
+  "The contact information has been updated": "As informações de contato foram atualizadas",
   "The contact information type has been created": "O tipo de informações de contato foi criado",
   "The contact information type has been deleted": "O tipo de informação de contato foi excluído",
   "The contact information type has been updated": "O tipo de informações de contato foi atualizado",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "Os dados fornecidos eram inválidos.",
   "The goal has been created": "A meta foi criada",
   "The goal has been deleted": "A meta foi excluída",
-  "The goal has been edited": "A meta foi editada",
+  "The goal has been updated": "O objetivo foi atualizado",
   "The group has been added": "O grupo foi adicionado",
   "The group has been deleted": "O grupo foi excluído",
   "The group has been updated": "O grupo foi atualizado",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "A métrica de vida foi atualizada",
   "The loan has been created": "O empréstimo foi criado",
   "The loan has been deleted": "O empréstimo foi excluído",
-  "The loan has been edited": "O empréstimo foi editado",
   "The loan has been settled": "O empréstimo foi liquidado",
+  "The loan has been updated": "O empréstimo foi atualizado",
   "The loan is an object": "O empréstimo é um objeto",
   "The loan is monetary": "O empréstimo é monetário",
   "The module has been added": "O módulo foi adicionado",
   "The module has been removed": "O módulo foi removido",
   "The note has been created": "A nota foi criada",
   "The note has been deleted": "A nota foi excluída",
-  "The note has been edited": "A nota foi editada",
+  "The note has been updated": "A nota foi atualizada",
   "The notification has been sent": "A notificação foi enviada",
   "The operation either timed out or was not allowed.": "A operação expirou ou não foi permitida.",
   "The page has been added": "A página foi adicionada",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "A categoria de animais de estimação foi atualizada",
   "The pet has been added": "O animal de estimação foi adicionado",
   "The pet has been deleted": "O animal de estimação foi excluído",
-  "The pet has been edited": "O animal de estimação foi editado",
+  "The pet has been updated": "O animal foi atualizado",
   "The photo has been added": "A foto foi adicionada",
   "The photo has been deleted": "A foto foi excluída",
   "The position has been saved": "A posição foi salva",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "O código de recuperação de dois fatores fornecido era inválido.",
   "There are no active addresses yet.": "Ainda não há endereços ativos.",
   "There are no calls logged yet.": "Ainda não há chamadas registradas.",
-  "There are no contact information yet.": "Ainda não há informações de contato.",
+  "There are no contact information types yet.": "Ainda não há tipos de informações de contato.",
+  "There are no contact informations yet.": "Ainda não há informações de contato.",
   "There are no documents yet.": "Ainda não há documentos.",
   "There are no events on that day, future or past.": "Não há eventos naquele dia, futuros ou passados.",
   "There are no files yet.": "Ainda não há arquivos.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "A religião foi atualizada",
   "The reminder has been created": "O lembrete foi criado",
   "The reminder has been deleted": "O lembrete foi excluído",
-  "The reminder has been edited": "O lembrete foi editado",
+  "The reminder has been updated": "O lembrete foi atualizado",
   "The response is not a streamed response.": "A resposta não é uma resposta transmitida.",
   "The response is not a view.": "A resposta não é uma visualização.",
   "The role has been created": "A função foi criada",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "A tag foi atualizada",
   "The task has been created": "A tarefa foi criada",
   "The task has been deleted": "A tarefa foi excluída",
-  "The task has been edited": "A tarefa foi editada",
+  "The task has been updated": "A tarefa foi atualizada",
   "The team's name and owner information.": "Nome do time e informações do dono.",
   "The Telegram channel has been deleted": "O canal Telegram foi excluído",
   "The template has been created": "O modelo foi criado",
@@ -1231,6 +1233,7 @@
   "The type has been created": "O tipo foi criado",
   "The type has been deleted": "O tipo foi excluído",
   "The type has been updated": "O tipo foi atualizado",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "O tipo de informação de contato. Não mude a menos que você saiba o que está fazendo.",
   "The user has been added": "O usuário foi adicionado",
   "The user has been deleted": "O usuário foi excluído",
   "The user has been removed": "O usuário foi removido",
