--- a/lang/ro.json
+++ b/lang/ro.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Esti sigur? Acest lucru va șterge definitiv documentul.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Esti sigur? Acest lucru va șterge definitiv obiectivul și toate dungile.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Esti sigur? Aceasta va elimina tipurile de adrese din toate contactele, dar nu va șterge contactele în sine.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Esti sigur? Aceasta va elimina tipurile de informații de contact din toate contactele, dar nu va șterge persoanele de contact în sine.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Ești sigur? Acest lucru va elimina tipul de informații de contact din toate contactele, dar nu va șterge contactele în sine.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Esti sigur? Aceasta va elimina sexele din toate contactele, dar nu va șterge persoanele de contact în sine.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Esti sigur? Acest lucru va elimina șablonul din toate contactele, dar nu va șterge persoanele de contact în sine.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Sunteți sigur că doriți să ștergeți această echipă? Odată ce o echipă este ștearsă, toate resursele și datele sale vor fi șterse definitiv.",
@@ -383,10 +383,11 @@
   "Delete": "Șterge",
   "Delete :name": "Șterge :name",
   "Delete Account": "Șterge Contul",
+  "Delete a contact information": "Ștergeți o informație de contact",
+  "Delete a contact information type": "Ștergeți un tip de informații de contact",
   "Delete a new key": "Ștergeți o cheie nouă",
   "Delete API Token": "Șterge simbolul API",
   "Delete contact": "Ștergeți contactul",
-  "Delete contact information": "Ștergeți informațiile de contact",
   "deleted a contact information": "a șters o informație de contact",
   "deleted a goal": "a șters un gol",
   "deleted an address": "a șters o adresă",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "Tipul de adresă a fost actualizat",
   "The call has been created": "Apelul a fost creat",
   "The call has been deleted": "Apelul a fost șters",
-  "The call has been edited": "Apelul a fost editat",
+  "The call has been updated": "Apelul a fost actualizat",
   "The call reason has been created": "Motivul apelului a fost creat",
   "The call reason has been deleted": "Motivul apelului a fost șters",
   "The call reason has been updated": "Motivul apelului a fost actualizat",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "Contactul nu aparține încă niciunui grup.",
   "The contact has been added": "Contactul a fost adăugat",
   "The contact has been deleted": "Contactul a fost șters",
-  "The contact has been edited": "Contactul a fost editat",
   "The contact has been removed from the group": "Persoana de contact a fost eliminată din grup",
+  "The contact has been updated": "Contactul a fost actualizat",
   "The contact information has been created": "Informațiile de contact au fost create",
   "The contact information has been deleted": "Informațiile de contact au fost șterse",
-  "The contact information has been edited": "Informațiile de contact au fost editate",
+  "The contact information has been updated": "Informațiile de contact au fost actualizate",
   "The contact information type has been created": "Tipul de informații de contact a fost creat",
   "The contact information type has been deleted": "Tipul de informații de contact a fost șters",
   "The contact information type has been updated": "Tipul de informații de contact a fost actualizat",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "Datele date au fost nevalide.",
   "The goal has been created": "Scopul a fost creat",
   "The goal has been deleted": "Scopul a fost șters",
-  "The goal has been edited": "Scopul a fost editat",
+  "The goal has been updated": "Obiectivul a fost actualizat",
   "The group has been added": "Grupul a fost adăugat",
   "The group has been deleted": "Grupul a fost șters",
   "The group has been updated": "Grupul a fost actualizat",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "Valoarea de viață a fost actualizată",
   "The loan has been created": "Împrumutul a fost creat",
   "The loan has been deleted": "Împrumutul a fost șters",
-  "The loan has been edited": "Împrumutul a fost editat",
   "The loan has been settled": "Împrumutul a fost decontat",
+  "The loan has been updated": "Împrumutul a fost actualizat",
   "The loan is an object": "Împrumutul este un obiect",
   "The loan is monetary": "Împrumutul este monetar",
   "The module has been added": "Modulul a fost adăugat",
   "The module has been removed": "Modulul a fost eliminat",
   "The note has been created": "Nota a fost creată",
   "The note has been deleted": "Nota a fost ștearsă",
-  "The note has been edited": "Nota a fost editată",
+  "The note has been updated": "Nota a fost actualizată",
   "The notification has been sent": "Notificarea a fost trimisă",
   "The operation either timed out or was not allowed.": "Operația fie a expirat, fie nu a fost permisă.",
   "The page has been added": "Pagina a fost adăugată",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "Categoria animalelor de companie a fost actualizată",
   "The pet has been added": "Animalul de companie a fost adăugat",
   "The pet has been deleted": "Animalul de companie a fost șters",
-  "The pet has been edited": "Animalul de companie a fost editat",
+  "The pet has been updated": "Animalul de companie a fost actualizat",
   "The photo has been added": "Fotografia a fost adăugată",
   "The photo has been deleted": "Fotografia a fost ștearsă",
   "The position has been saved": "Poziția a fost salvată",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "Codul de recuperare cu doi factori furnizat a fost nevalid.",
   "There are no active addresses yet.": "Nu există încă adrese active.",
   "There are no calls logged yet.": "Nu există apeluri înregistrate încă.",
-  "There are no contact information yet.": "Nu există încă informații de contact.",
+  "There are no contact information types yet.": "Încă nu există tipuri de informații de contact.",
+  "There are no contact informations yet.": "Nu există încă informații de contact.",
   "There are no documents yet.": "Nu există încă documente.",
   "There are no events on that day, future or past.": "Nu există evenimente în acea zi, viitor sau trecut.",
   "There are no files yet.": "Nu există încă fișiere.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "Religia a fost actualizată",
   "The reminder has been created": "Mementoul a fost creat",
   "The reminder has been deleted": "Mementoul a fost șters",
-  "The reminder has been edited": "Mementoul a fost editat",
+  "The reminder has been updated": "Memento -ul a fost actualizat",
   "The response is not a streamed response.": "Răspunsul nu este un răspuns transmis în flux.",
   "The response is not a view.": "Răspunsul nu este o viziune.",
   "The role has been created": "Rolul a fost creat",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "Eticheta a fost actualizată",
   "The task has been created": "Sarcina a fost creată",
   "The task has been deleted": "Sarcina a fost ștearsă",
-  "The task has been edited": "Sarcina a fost editată",
+  "The task has been updated": "Sarcina a fost actualizată",
   "The team's name and owner information.": "Numele echipei și informații despre proprietar.",
   "The Telegram channel has been deleted": "Canalul Telegram a fost șters",
   "The template has been created": "Șablonul a fost creat",
@@ -1231,6 +1233,7 @@
   "The type has been created": "Tipul a fost creat",
   "The type has been deleted": "Tipul a fost șters",
   "The type has been updated": "Tipul a fost actualizat",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "Tipul de informații de contact. Nu -l schimbați decât dacă știți ce faceți.",
   "The user has been added": "Utilizatorul a fost adăugat",
   "The user has been deleted": "Utilizatorul a fost șters",
   "The user has been removed": "Utilizatorul a fost eliminat",
