--- a/lang/ru.json
+++ b/lang/ru.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Вы уверены? Это приведет к удалению документа навсегда.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Вы уверены? Это навсегда удалит гол и все серии.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Вы уверены? Это удалит типы адресов из всех контактов, но не удалит сами контакты.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Вы уверены? Это приведет к удалению типов контактной информации из всех контактов, но не к удалению самих контактов.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Вы уверены? Это удалит тип контактной информации из всех контактов, но не удалит сами контакты.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Вы уверены? Это приведет к удалению пола из всех контактов, но не к удалению самих контактов.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Вы уверены? Это удалит шаблон из всех контактов, но не удалит сами контакты.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Вы уверены что хотите удалить эту команду? После удаления команды все её ресурсы и данные будут удалены без возможности восстановления.",
@@ -383,10 +383,11 @@
   "Delete": "Удалить",
   "Delete :name": "Удалить :name",
   "Delete Account": "Удалить аккаунт",
+  "Delete a contact information": "Удалить контактную информацию",
+  "Delete a contact information type": "Удалить тип контактной информации",
   "Delete a new key": "Удалить новый ключ",
   "Delete API Token": "Удалить API токен",
   "Delete contact": "Удалить контакт",
-  "Delete contact information": "Удалить контактную информацию",
   "deleted a contact information": "удалил контактную информацию",
   "deleted a goal": "удалил цель",
   "deleted an address": "удалил адрес",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "Тип адреса обновлен.",
   "The call has been created": "Звонок создан.",
   "The call has been deleted": "Звонок удален",
-  "The call has been edited": "Звонок был отредактирован",
+  "The call has been updated": "Звонок был обновлен",
   "The call reason has been created": "Причина звонка создана.",
   "The call reason has been deleted": "Причина звонка удалена",
   "The call reason has been updated": "Причина звонка обновлена.",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "Контакт пока не принадлежит ни к одной группе.",
   "The contact has been added": "Контакт добавлен",
   "The contact has been deleted": "Контакт удален",
-  "The contact has been edited": "Контакт был отредактирован",
   "The contact has been removed from the group": "Контакт удален из группы.",
+  "The contact has been updated": "Контакт был обновлен",
   "The contact information has been created": "Контактная информация создана.",
   "The contact information has been deleted": "Контактная информация удалена",
-  "The contact information has been edited": "Контактная информация была отредактирована",
+  "The contact information has been updated": "Контактная информация была обновлена",
   "The contact information type has been created": "Тип контактной информации создан.",
   "The contact information type has been deleted": "Тип контактной информации удален.",
   "The contact information type has been updated": "Тип контактной информации обновлен.",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "Указанные данные недействительны.",
   "The goal has been created": "Цель создана",
   "The goal has been deleted": "Цель удалена",
-  "The goal has been edited": "Цель была изменена",
+  "The goal has been updated": "Цель была обновлена",
   "The group has been added": "Группа добавлена",
   "The group has been deleted": "Группа удалена",
   "The group has been updated": "Группа обновлена",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "Метрика жизни обновлена.",
   "The loan has been created": "Кредит создан.",
   "The loan has been deleted": "Кредит удален.",
-  "The loan has been edited": "Кредит был отредактирован",
   "The loan has been settled": "Кредит погашен",
+  "The loan has been updated": "Кредит был обновлен",
   "The loan is an object": "Кредит – это объект",
   "The loan is monetary": "Кредит денежный",
   "The module has been added": "Модуль был добавлен",
   "The module has been removed": "Модуль был удален",
   "The note has been created": "Заметка создана.",
   "The note has been deleted": "Заметка удалена",
-  "The note has been edited": "Заметка была отредактирована",
+  "The note has been updated": "Примечание была обновлена",
   "The notification has been sent": "Уведомление отправлено",
   "The operation either timed out or was not allowed.": "Операция либо истекла по тайм-ауту, либо была запрещена.",
   "The page has been added": "Страница добавлена",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "Категория домашних животных обновлена.",
   "The pet has been added": "Питомец был добавлен",
   "The pet has been deleted": "Питомец был удален",
-  "The pet has been edited": "Питомец был отредактирован",
+  "The pet has been updated": "Питомец был обновлен",
   "The photo has been added": "Фотография была добавлена",
   "The photo has been deleted": "Фотография удалена",
   "The position has been saved": "Позиция сохранена.",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "Предоставленный двухфакторный код восстановления недействителен.",
   "There are no active addresses yet.": "Активных адресов пока нет.",
   "There are no calls logged yet.": "Пока еще не зарегистрировано ни одного звонка.",
-  "There are no contact information yet.": "Контактной информации пока нет.",
+  "There are no contact information types yet.": "Там еще нет контактных типов информации.",
+  "There are no contact informations yet.": "Контактной информации пока нет.",
   "There are no documents yet.": "Документов пока нет.",
   "There are no events on that day, future or past.": "В этот день нет никаких событий ни в будущем, ни в прошлом.",
   "There are no files yet.": "Файлов пока нет.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "Религия обновлена.",
   "The reminder has been created": "Напоминание создано.",
   "The reminder has been deleted": "Напоминание удалено",
-  "The reminder has been edited": "Напоминание было отредактировано",
+  "The reminder has been updated": "Напоминание было обновлено",
   "The response is not a streamed response.": "Ответ не является потоковым.",
   "The response is not a view.": "Ответ не является представлением.",
   "The role has been created": "Роль создана.",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "Тег обновлен.",
   "The task has been created": "Задача создана",
   "The task has been deleted": "Задача удалена",
-  "The task has been edited": "Задача была отредактирована",
+  "The task has been updated": "Задача была обновлена",
   "The team's name and owner information.": "Название команды и информация о её владельце.",
   "The Telegram channel has been deleted": "Телеграм-канал удален.",
   "The template has been created": "Шаблон создан.",
@@ -1231,6 +1233,7 @@
   "The type has been created": "Тип создан.",
   "The type has been deleted": "Тип был удален",
   "The type has been updated": "Тип обновлен.",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "Тип контактной информации. Не меняйте это, если вы не знаете, что делаете.",
   "The user has been added": "Пользователь добавлен",
   "The user has been deleted": "Пользователь был удален",
   "The user has been removed": "Пользователь удален",
