--- a/lang/sv.json
+++ b/lang/sv.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Är du säker? Detta kommer att radera dokumentet permanent.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Är du säker? Detta tar bort målet och alla streak permanent.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Är du säker? Detta tar bort adresstyperna från alla kontakter, men tar inte bort kontakterna själva.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Är du säker? Detta tar bort kontaktinformationstyperna från alla kontakter, men tar inte bort kontakterna själva.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Är du säker? Detta tar bort kontaktinformationstypen från alla kontakter, men tar inte bort kontakterna själva.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Är du säker? Detta tar bort könen från alla kontakter, men tar inte bort kontakterna själva.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Är du säker? Detta tar bort mallen från alla kontakter, men tar inte bort kontakterna själva.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Är du säker på att du vill ta bort det här laget? När ett lag har tagits bort kommer alla dess resurser och data att raderas permanent.",
@@ -383,10 +383,11 @@
   "Delete": "Radera",
   "Delete :name": "Ta bort :name",
   "Delete Account": "Radera konto",
+  "Delete a contact information": "Ta bort en kontaktinformation",
+  "Delete a contact information type": "Ta bort en kontaktinformationstyp",
   "Delete a new key": "Ta bort en ny nyckel",
   "Delete API Token": "Radera API-token",
   "Delete contact": "Ta bort kontakt",
-  "Delete contact information": "Ta bort kontaktinformation",
   "deleted a contact information": "raderade en kontaktinformation",
   "deleted a goal": "raderade ett mål",
   "deleted an address": "raderade en adress",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "Adresstypen har uppdaterats",
   "The call has been created": "Samtalet har skapats",
   "The call has been deleted": "Samtalet har raderats",
-  "The call has been edited": "Samtalet har redigerats",
+  "The call has been updated": "Samtalet har uppdaterats",
   "The call reason has been created": "Anropsanledningen har skapats",
   "The call reason has been deleted": "Anropsanledningen har tagits bort",
   "The call reason has been updated": "Orsaken till samtalet har uppdaterats",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "Kontakten tillhör inte någon grupp ännu.",
   "The contact has been added": "Kontakten har lagts till",
   "The contact has been deleted": "Kontakten har tagits bort",
-  "The contact has been edited": "Kontakten har redigerats",
   "The contact has been removed from the group": "Kontakten har tagits bort från gruppen",
+  "The contact has been updated": "Kontakten har uppdaterats",
   "The contact information has been created": "Kontaktinformationen har skapats",
   "The contact information has been deleted": "Kontaktuppgifterna har raderats",
-  "The contact information has been edited": "Kontaktinformationen har redigerats",
+  "The contact information has been updated": "Kontaktinformationen har uppdaterats",
   "The contact information type has been created": "Kontaktinformationstypen har skapats",
   "The contact information type has been deleted": "Kontaktinformationstypen har tagits bort",
   "The contact information type has been updated": "Kontaktinformationstypen har uppdaterats",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "De angivna uppgifterna var ogiltiga.",
   "The goal has been created": "Målet är skapat",
   "The goal has been deleted": "Målet har tagits bort",
-  "The goal has been edited": "Målet har redigerats",
+  "The goal has been updated": "Målet har uppdaterats",
   "The group has been added": "Gruppen har lagts till",
   "The group has been deleted": "Gruppen har tagits bort",
   "The group has been updated": "Gruppen har uppdaterats",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "Livsmåttet har uppdaterats",
   "The loan has been created": "Lånet har skapats",
   "The loan has been deleted": "Lånet har raderats",
-  "The loan has been edited": "Lånet har redigerats",
   "The loan has been settled": "Lånet är reglerat",
+  "The loan has been updated": "Lånet har uppdaterats",
   "The loan is an object": "Lånet är ett objekt",
   "The loan is monetary": "Lånet är monetärt",
   "The module has been added": "Modulen har lagts till",
   "The module has been removed": "Modulen har tagits bort",
   "The note has been created": "Anteckningen har skapats",
   "The note has been deleted": "Anteckningen har raderats",
-  "The note has been edited": "Anteckningen har redigerats",
+  "The note has been updated": "Noten har uppdaterats",
   "The notification has been sent": "Aviseringen har skickats",
   "The operation either timed out or was not allowed.": "Operationen tog antingen timeout eller var inte tillåten.",
   "The page has been added": "Sidan har lagts till",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "Husdjurskategorin har uppdaterats",
   "The pet has been added": "Husdjuret har lagts till",
   "The pet has been deleted": "Husdjuret har tagits bort",
-  "The pet has been edited": "Husdjuret har redigerats",
+  "The pet has been updated": "Husdjuret har uppdaterats",
   "The photo has been added": "Fotot har lagts till",
   "The photo has been deleted": "Fotot har tagits bort",
   "The position has been saved": "Positionen har sparats",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "Den angivna tvåfaktorsåterställningskoden var ogiltig.",
   "There are no active addresses yet.": "Det finns inga aktiva adresser ännu.",
   "There are no calls logged yet.": "Det finns inga loggade samtal än.",
-  "There are no contact information yet.": "Det finns inga kontaktuppgifter ännu.",
+  "There are no contact information types yet.": "Det finns inga kontaktinformationstyper än.",
+  "There are no contact informations yet.": "Det finns inga kontaktuppgifter ännu.",
   "There are no documents yet.": "Det finns inga dokument ännu.",
   "There are no events on that day, future or past.": "Det finns inga händelser den dagen, framtiden eller det förflutna.",
   "There are no files yet.": "Det finns inga filer än.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "Religionen har uppdaterats",
   "The reminder has been created": "Påminnelsen har skapats",
   "The reminder has been deleted": "Påminnelsen har raderats",
-  "The reminder has been edited": "Påminnelsen har redigerats",
+  "The reminder has been updated": "Påminnelsen har uppdaterats",
   "The response is not a streamed response.": "Svaret är inte ett streamat svar.",
   "The response is not a view.": "Svaret är inte en syn.",
   "The role has been created": "Rollen är skapad",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "Taggen har uppdaterats",
   "The task has been created": "Uppgiften har skapats",
   "The task has been deleted": "Uppgiften har tagits bort",
-  "The task has been edited": "Uppgiften har redigerats",
+  "The task has been updated": "Uppgiften har uppdaterats",
   "The team's name and owner information.": "Lagets namn och ägarinformation.",
   "The Telegram channel has been deleted": "Telegramkanalen har tagits bort",
   "The template has been created": "Mallen har skapats",
@@ -1231,6 +1233,7 @@
   "The type has been created": "Typen har skapats",
   "The type has been deleted": "Typen har tagits bort",
   "The type has been updated": "Typen har uppdaterats",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "Typen av kontaktinformation. Ändra inte det om du inte vet vad du gör.",
   "The user has been added": "Användaren har lagts till",
   "The user has been deleted": "Användaren har tagits bort",
   "The user has been removed": "Användaren har tagits bort",
