--- a/lang/te.json
+++ b/lang/te.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "మీరు చెప్పేది నిజమా? ఇది పత్రాన్ని శాశ్వతంగా తొలగిస్తుంది.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "మీరు చెప్పేది నిజమా? ఇది లక్ష్యం మరియు అన్ని స్ట్రీక్‌లను శాశ్వతంగా తొలగిస్తుంది.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "మీరు చెప్పేది నిజమా? ఇది అన్ని కాంటాక్ట్‌ల నుండి అడ్రస్ రకాలను తీసివేస్తుంది, కానీ కాంటాక్ట్‌లను తొలగించదు.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "మీరు చెప్పేది నిజమా? ఇది అన్ని కాంటాక్ట్‌ల నుండి సంప్రదింపు సమాచార రకాలను తీసివేస్తుంది, కానీ కాంటాక్ట్‌లను స్వయంగా తొలగించదు.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "మీకు ఖచ్చితంగా తెలుసా? ఇది అన్ని పరిచయాల నుండి సంప్రదింపు సమాచార రకాన్ని తొలగిస్తుంది, కానీ పరిచయాలను తొలగించదు.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "మీరు చెప్పేది నిజమా? ఇది అన్ని కాంటాక్ట్‌ల నుండి లింగాలను తీసివేస్తుంది, కానీ కాంటాక్ట్‌లను స్వయంగా తొలగించదు.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "మీరు చెప్పేది నిజమా? ఇది అన్ని కాంటాక్ట్‌ల నుండి టెంప్లేట్‌ను తీసివేస్తుంది, కానీ కాంటాక్ట్‌లను స్వయంగా తొలగించదు.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "మీరు ఖచ్చితంగా ఈ బృందాన్ని తొలగించాలనుకుంటున్నారా? బృందం తొలగించబడిన తర్వాత, దాని వనరులు మరియు డేటా మొత్తం శాశ్వతంగా తొలగించబడతాయి.",
@@ -383,10 +383,11 @@
   "Delete": "తొలగించు",
   "Delete :name": "తొలగించు :name",
   "Delete Account": "ఖాతాను తొలగించండి",
+  "Delete a contact information": "సంప్రదింపు సమాచారాన్ని తొలగించండి",
+  "Delete a contact information type": "సంప్రదింపు సమాచార రకాన్ని తొలగించండి",
   "Delete a new key": "కొత్త కీని తొలగించండి",
   "Delete API Token": "API టోకెన్‌ను తొలగించండి",
   "Delete contact": "పరిచయాన్ని తొలగించండి",
-  "Delete contact information": "సంప్రదింపు సమాచారాన్ని తొలగించండి",
   "deleted a contact information": "సంప్రదింపు సమాచారాన్ని తొలగించారు",
   "deleted a goal": "ఒక లక్ష్యం తొలగించబడింది",
   "deleted an address": "చిరునామాను తొలగించారు",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "చిరునామా రకం నవీకరించబడింది",
   "The call has been created": "కాల్ సృష్టించబడింది",
   "The call has been deleted": "కాల్ తొలగించబడింది",
-  "The call has been edited": "కాల్ సవరించబడింది",
+  "The call has been updated": "కాల్ నవీకరించబడింది",
   "The call reason has been created": "కాల్ కారణం సృష్టించబడింది",
   "The call reason has been deleted": "కాల్ కారణం తొలగించబడింది",
   "The call reason has been updated": "కాల్ కారణం నవీకరించబడింది",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "పరిచయం ఇంకా ఏ సమూహానికి చెందినది కాదు.",
   "The contact has been added": "పరిచయం జోడించబడింది",
   "The contact has been deleted": "పరిచయం తొలగించబడింది",
-  "The contact has been edited": "పరిచయం సవరించబడింది",
   "The contact has been removed from the group": "సమూహం నుండి పరిచయం తీసివేయబడింది",
+  "The contact has been updated": "పరిచయం నవీకరించబడింది",
   "The contact information has been created": "సంప్రదింపు సమాచారం సృష్టించబడింది",
   "The contact information has been deleted": "సంప్రదింపు సమాచారం తొలగించబడింది",
-  "The contact information has been edited": "సంప్రదింపు సమాచారం సవరించబడింది",
+  "The contact information has been updated": "సంప్రదింపు సమాచారం నవీకరించబడింది",
   "The contact information type has been created": "సంప్రదింపు సమాచారం రకం సృష్టించబడింది",
   "The contact information type has been deleted": "సంప్రదింపు సమాచారం రకం తొలగించబడింది",
   "The contact information type has been updated": "సంప్రదింపు సమాచారం రకం నవీకరించబడింది",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "ఇచ్చిన డేటా చెల్లదు.",
   "The goal has been created": "లక్ష్యం సృష్టించబడింది",
   "The goal has been deleted": "లక్ష్యం తొలగించబడింది",
-  "The goal has been edited": "లక్ష్యం సవరించబడింది",
+  "The goal has been updated": "లక్ష్యం నవీకరించబడింది",
   "The group has been added": "సమూహం జోడించబడింది",
   "The group has been deleted": "సమూహం తొలగించబడింది",
   "The group has been updated": "సమూహం నవీకరించబడింది",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "లైఫ్ మెట్రిక్ అప్‌డేట్ చేయబడింది",
   "The loan has been created": "రుణం సృష్టించబడింది",
   "The loan has been deleted": "రుణం తొలగించబడింది",
-  "The loan has been edited": "రుణం సవరించబడింది",
   "The loan has been settled": "రుణం తీర్చబడింది",
+  "The loan has been updated": "రుణం నవీకరించబడింది",
   "The loan is an object": "రుణం ఒక వస్తువు",
   "The loan is monetary": "రుణం ద్రవ్యం",
   "The module has been added": "మాడ్యూల్ జోడించబడింది",
   "The module has been removed": "మాడ్యూల్ తీసివేయబడింది",
   "The note has been created": "గమనిక సృష్టించబడింది",
   "The note has been deleted": "గమనిక తొలగించబడింది",
-  "The note has been edited": "గమనిక సవరించబడింది",
+  "The note has been updated": "గమనిక నవీకరించబడింది",
   "The notification has been sent": "నోటిఫికేషన్ పంపబడింది",
   "The operation either timed out or was not allowed.": "ఆపరేషన్ సమయం ముగిసింది లేదా అనుమతించబడలేదు.",
   "The page has been added": "పేజీ జోడించబడింది",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "పెంపుడు జంతువుల వర్గం నవీకరించబడింది",
   "The pet has been added": "పెంపుడు జంతువు జోడించబడింది",
   "The pet has been deleted": "పెంపుడు జంతువు తొలగించబడింది",
-  "The pet has been edited": "పెంపుడు జంతువు సవరించబడింది",
+  "The pet has been updated": "పెంపుడు జంతువు నవీకరించబడింది",
   "The photo has been added": "ఫోటో జోడించబడింది",
   "The photo has been deleted": "ఫోటో తొలగించబడింది",
   "The position has been saved": "స్థానం సేవ్ చేయబడింది",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "అందించిన రెండు కారకాల రికవరీ కోడ్ చెల్లదు.",
   "There are no active addresses yet.": "ఇంకా క్రియాశీల చిరునామాలు లేవు.",
   "There are no calls logged yet.": "ఇంకా కాల్‌లు ఏవీ లాగిన్ కాలేదు.",
-  "There are no contact information yet.": "ఇంకా సంప్రదింపు సమాచారం లేదు.",
+  "There are no contact information types yet.": "సంప్రదింపు సమాచార రకాలు ఇంకా లేవు.",
+  "There are no contact informations yet.": "ఇంకా సంప్రదింపు సమాచారం లేదు.",
   "There are no documents yet.": "ఇంకా పత్రాలు లేవు.",
   "There are no events on that day, future or past.": "ఆ రోజు, భవిష్యత్తులో లేదా గతంలో ఎటువంటి సంఘటనలు లేవు.",
   "There are no files yet.": "ఇంకా ఫైల్‌లు లేవు.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "మతం నవీకరించబడింది",
   "The reminder has been created": "రిమైండర్ సృష్టించబడింది",
   "The reminder has been deleted": "రిమైండర్ తొలగించబడింది",
-  "The reminder has been edited": "రిమైండర్ సవరించబడింది",
+  "The reminder has been updated": "రిమైండర్ నవీకరించబడింది",
   "The response is not a streamed response.": "ప్రతిస్పందన స్ట్రీమ్ చేసిన ప్రతిస్పందన కాదు.",
   "The response is not a view.": "ప్రతిస్పందన వీక్షణ కాదు.",
   "The role has been created": "పాత్రను రూపొందించారు",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "ట్యాగ్ నవీకరించబడింది",
   "The task has been created": "టాస్క్ సృష్టించబడింది",
   "The task has been deleted": "టాస్క్ తొలగించబడింది",
-  "The task has been edited": "టాస్క్ సవరించబడింది",
+  "The task has been updated": "పని నవీకరించబడింది",
   "The team's name and owner information.": "జట్టు పేరు మరియు యజమాని సమాచారం.",
   "The Telegram channel has been deleted": "టెలిగ్రామ్ ఛానెల్ తొలగించబడింది",
   "The template has been created": "టెంప్లేట్ సృష్టించబడింది",
@@ -1231,6 +1233,7 @@
   "The type has been created": "రకం సృష్టించబడింది",
   "The type has been deleted": "రకం తొలగించబడింది",
   "The type has been updated": "రకం నవీకరించబడింది",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "సంప్రదింపు సమాచారం రకం. మీరు ఏమి చేస్తున్నారో మీకు తెలియకపోతే దాన్ని మార్చవద్దు.",
   "The user has been added": "వినియోగదారు జోడించబడ్డారు",
   "The user has been deleted": "వినియోగదారు తొలగించబడ్డారు",
   "The user has been removed": "వినియోగదారు తీసివేయబడ్డారు",
