--- a/lang/ur.json
+++ b/lang/ur.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "کیا تمہیں یقین ہے؟ یہ دستاویز کو مستقل طور پر حذف کر دے گا۔",
   "Are you sure? This will delete the goal and all the streaks permanently.": "کیا تمہیں یقین ہے؟ اس سے مقصد اور تمام لکیریں مستقل طور پر حذف ہو جائیں گی۔",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "کیا تمہیں یقین ہے؟ یہ تمام رابطوں سے پتے کی اقسام کو ہٹا دے گا، لیکن خود رابطے حذف نہیں کرے گا۔",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "کیا تمہیں یقین ہے؟ یہ تمام رابطوں سے رابطے کی معلومات کی اقسام کو ہٹا دے گا، لیکن خود روابط حذف نہیں کرے گا۔",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "کیا آپ کو یقین ہے؟ اس سے رابطے کی معلومات کو تمام رابطوں سے ہٹا دیا جائے گا ، لیکن رابطوں کو خود حذف نہیں کریں گے۔",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "کیا تمہیں یقین ہے؟ یہ تمام رابطوں سے جنسوں کو ہٹا دے گا، لیکن خود روابط کو حذف نہیں کرے گا۔",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "کیا تمہیں یقین ہے؟ یہ تمام رابطوں سے ٹیمپلیٹ کو ہٹا دے گا، لیکن خود روابط کو حذف نہیں کرے گا۔",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "ہیں آپ کو اس بات کا یقین آپ کو خارج کرنا چاہتے ہیں اس کی ٹیم? ایک بار ایک ٹیم سے خارج کر دیا ہے, اس کے تمام وسائل اور اعداد و شمار ہو جائے گا مستقل طور پر خارج کر دیا.",
@@ -383,10 +383,11 @@
   "Delete": "کو حذف کریں",
   "Delete :name": ":name کو حذف کریں۔",
   "Delete Account": "اکاؤنٹ کو حذف کریں",
+  "Delete a contact information": "رابطے کی معلومات کو حذف کریں",
+  "Delete a contact information type": "رابطہ کی معلومات کی قسم کو حذف کریں",
   "Delete a new key": "ایک نئی کلید کو حذف کریں۔",
   "Delete API Token": "کو حذف API ٹوکن",
   "Delete contact": "رابطہ حذف کریں۔",
-  "Delete contact information": "رابطے کی معلومات کو حذف کریں",
   "deleted a contact information": "ایک رابطے کی معلومات کو حذف کر دیا",
   "deleted a goal": "ایک مقصد کو حذف کر دیا",
   "deleted an address": "ایک پتہ حذف کر دیا",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "ایڈریس کی قسم کو اپ ڈیٹ کر دیا گیا ہے۔",
   "The call has been created": "کال بن گئی ہے۔",
   "The call has been deleted": "کال ڈیلیٹ کر دی گئی ہے۔",
-  "The call has been edited": "کال میں ترمیم کر دی گئی ہے۔",
+  "The call has been updated": "کال کو اپ ڈیٹ کردیا گیا ہے",
   "The call reason has been created": "کال کی وجہ بنائی گئی ہے۔",
   "The call reason has been deleted": "کال کی وجہ کو حذف کر دیا گیا ہے۔",
   "The call reason has been updated": "کال کی وجہ کو اپ ڈیٹ کر دیا گیا ہے۔",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "رابطہ ابھی تک کسی گروپ سے نہیں ہے۔",
   "The contact has been added": "رابطہ شامل کر دیا گیا ہے۔",
   "The contact has been deleted": "رابطہ حذف کر دیا گیا ہے۔",
-  "The contact has been edited": "رابطے میں ترمیم کر دی گئی ہے۔",
   "The contact has been removed from the group": "رابطہ گروپ سے ہٹا دیا گیا ہے۔",
+  "The contact has been updated": "رابطے کو اپ ڈیٹ کردیا گیا ہے",
   "The contact information has been created": "رابطے کی معلومات بنائی گئی ہے۔",
   "The contact information has been deleted": "رابطے کی معلومات کو حذف کر دیا گیا ہے۔",
-  "The contact information has been edited": "رابطے کی معلومات میں ترمیم کی گئی ہے۔",
+  "The contact information has been updated": "رابطے کی معلومات کو اپ ڈیٹ کردیا گیا ہے",
   "The contact information type has been created": "رابطے کی معلومات کی قسم بنائی گئی ہے۔",
   "The contact information type has been deleted": "رابطے کی معلومات کی قسم کو حذف کر دیا گیا ہے۔",
   "The contact information type has been updated": "رابطے کی معلومات کی قسم کو اپ ڈیٹ کر دیا گیا ہے۔",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "دیا گیا ڈیٹا غلط تھا۔",
   "The goal has been created": "مقصد بنایا گیا ہے۔",
   "The goal has been deleted": "مقصد کو حذف کر دیا گیا ہے۔",
-  "The goal has been edited": "مقصد میں ترمیم کی گئی ہے۔",
+  "The goal has been updated": "گول کو اپ ڈیٹ کردیا گیا ہے",
   "The group has been added": "گروپ کو شامل کیا گیا ہے۔",
   "The group has been deleted": "گروپ کو حذف کر دیا گیا ہے۔",
   "The group has been updated": "گروپ کو اپ ڈیٹ کر دیا گیا ہے۔",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "لائف میٹرک کو اپ ڈیٹ کر دیا گیا ہے۔",
   "The loan has been created": "قرضہ بنایا گیا ہے۔",
   "The loan has been deleted": "قرض حذف کر دیا گیا ہے۔",
-  "The loan has been edited": "قرض میں ترمیم کی گئی ہے۔",
   "The loan has been settled": "قرضہ طے ہو چکا ہے۔",
+  "The loan has been updated": "قرض کو اپ ڈیٹ کردیا گیا ہے",
   "The loan is an object": "قرض ایک چیز ہے۔",
   "The loan is monetary": "قرض مالیاتی ہے۔",
   "The module has been added": "ماڈیول شامل کر دیا گیا ہے۔",
   "The module has been removed": "ماڈیول کو ہٹا دیا گیا ہے۔",
   "The note has been created": "نوٹ بن گیا ہے۔",
   "The note has been deleted": "نوٹ حذف کر دیا گیا ہے۔",
-  "The note has been edited": "نوٹ میں ترمیم کی گئی ہے۔",
+  "The note has been updated": "نوٹ کو اپ ڈیٹ کردیا گیا ہے",
   "The notification has been sent": "نوٹیفکیشن بھیج دیا گیا ہے۔",
   "The operation either timed out or was not allowed.": "آپریشن کا وقت ختم ہو گیا یا اسے اجازت نہیں دی گئی۔",
   "The page has been added": "صفحہ شامل کر دیا گیا ہے۔",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "پالتو جانوروں کے زمرے کو اپ ڈیٹ کر دیا گیا ہے۔",
   "The pet has been added": "پالتو جانور کو شامل کیا گیا ہے۔",
   "The pet has been deleted": "پالتو جانور کو حذف کر دیا گیا ہے۔",
-  "The pet has been edited": "پالتو جانور میں ترمیم کی گئی ہے۔",
+  "The pet has been updated": "پالتو جانور کو اپ ڈیٹ کردیا گیا ہے",
   "The photo has been added": "تصویر شامل کر دی گئی ہے۔",
   "The photo has been deleted": "تصویر کو حذف کر دیا گیا ہے۔",
   "The position has been saved": "پوزیشن محفوظ کر لی گئی ہے۔",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "فراہم کردہ دو فیکٹر ریکوری کوڈ غلط تھا۔",
   "There are no active addresses yet.": "ابھی تک کوئی فعال پتے نہیں ہیں۔",
   "There are no calls logged yet.": "ابھی تک کوئی کال لاگ ان نہیں ہے۔",
-  "There are no contact information yet.": "ابھی تک کوئی رابطہ کی معلومات نہیں ہیں۔",
+  "There are no contact information types yet.": "ابھی تک رابطہ کی معلومات کی کوئی اقسام نہیں ہیں۔",
+  "There are no contact informations yet.": "ابھی تک کوئی رابطہ کی معلومات نہیں ہیں۔",
   "There are no documents yet.": "ابھی تک کوئی دستاویزات نہیں ہیں۔",
   "There are no events on that day, future or past.": "اس دن، مستقبل یا ماضی میں کوئی واقعات نہیں ہیں۔",
   "There are no files yet.": "ابھی تک کوئی فائلیں نہیں ہیں۔",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "مذہب کو اپ ڈیٹ کر دیا گیا ہے۔",
   "The reminder has been created": "یاد دہانی بنائی گئی ہے۔",
   "The reminder has been deleted": "یاد دہانی کو حذف کر دیا گیا ہے۔",
-  "The reminder has been edited": "یاد دہانی میں ترمیم کر دی گئی ہے۔",
+  "The reminder has been updated": "یاد دہانی کو اپ ڈیٹ کردیا گیا ہے",
   "The response is not a streamed response.": "جواب ایک سلسلہ وار جواب نہیں ہے۔",
   "The response is not a view.": "ردعمل ایک نقطہ نظر نہیں ہے.",
   "The role has been created": "کردار بنایا گیا ہے۔",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "ٹیگ کو اپ ڈیٹ کر دیا گیا ہے۔",
   "The task has been created": "ٹاسک بنایا گیا ہے۔",
   "The task has been deleted": "کام کو حذف کر دیا گیا ہے۔",
-  "The task has been edited": "کام میں ترمیم کی گئی ہے۔",
+  "The task has been updated": "کام کو اپ ڈیٹ کردیا گیا ہے",
   "The team's name and owner information.": "ٹیم کا نام اور مالک کے بارے میں معلومات.",
   "The Telegram channel has been deleted": "ٹیلی گرام چینل کو حذف کر دیا گیا ہے۔",
   "The template has been created": "ٹیمپلیٹ بنایا گیا ہے۔",
@@ -1231,6 +1233,7 @@
   "The type has been created": "قسم بنائی گئی ہے۔",
   "The type has been deleted": "قسم حذف کر دی گئی ہے۔",
   "The type has been updated": "قسم کو اپ ڈیٹ کر دیا گیا ہے۔",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "رابطے کی معلومات کی قسم۔ اسے تبدیل نہ کریں جب تک کہ آپ کو معلوم نہ ہو کہ آپ کیا کر رہے ہیں۔",
   "The user has been added": "صارف کو شامل کیا گیا ہے۔",
   "The user has been deleted": "صارف کو حذف کر دیا گیا ہے۔",
   "The user has been removed": "صارف کو ہٹا دیا گیا ہے۔",
