--- a/lang/vi.json
+++ b/lang/vi.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Bạn có chắc không? Điều này sẽ xóa tài liệu vĩnh viễn.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Bạn có chắc không? Điều này sẽ xóa mục tiêu và tất cả các đường sọc vĩnh viễn.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Bạn có chắc không? Thao tác này sẽ xóa các loại địa chỉ khỏi tất cả địa chỉ liên hệ nhưng sẽ không xóa chính địa chỉ liên hệ đó.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Bạn có chắc không? Thao tác này sẽ xóa các loại thông tin liên hệ khỏi tất cả các liên hệ nhưng sẽ không xóa chính các liên hệ đó.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Bạn có chắc không? Điều này sẽ loại bỏ loại thông tin liên hệ khỏi tất cả các liên hệ, nhưng đã giành được các danh bạ.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Bạn có chắc không? Thao tác này sẽ xóa giới tính khỏi tất cả địa chỉ liên hệ nhưng sẽ không xóa chính địa chỉ liên hệ đó.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Bạn có chắc không? Thao tác này sẽ xóa mẫu khỏi tất cả địa chỉ liên hệ nhưng sẽ không xóa chính địa chỉ liên hệ đó.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Bạn có chắc chắn muốn xóa nhóm này không? Khi một nhóm bị xóa, tất cả tài nguyên và dữ liệu của nhóm đó sẽ bị xóa vĩnh viễn.",
@@ -383,10 +383,11 @@
   "Delete": "Xóa",
   "Delete :name": "Xóa :name",
   "Delete Account": "Xóa Tài khoản",
+  "Delete a contact information": "Xóa thông tin liên hệ",
+  "Delete a contact information type": "Xóa loại thông tin liên hệ",
   "Delete a new key": "Xóa khóa mới",
   "Delete API Token": "Xóa API Token",
   "Delete contact": "Xóa liên lạc",
-  "Delete contact information": "Xóa thông tin liên hệ",
   "deleted a contact information": "đã xóa thông tin liên hệ",
   "deleted a goal": "đã xóa một mục tiêu",
   "deleted an address": "đã xóa một địa chỉ",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "Loại địa chỉ đã được cập nhật",
   "The call has been created": "Cuộc gọi đã được tạo",
   "The call has been deleted": "Cuộc gọi đã bị xóa",
-  "The call has been edited": "Cuộc gọi đã được chỉnh sửa",
+  "The call has been updated": "Cuộc gọi đã được cập nhật",
   "The call reason has been created": "Lý do cuộc gọi đã được tạo",
   "The call reason has been deleted": "Lý do cuộc gọi đã bị xóa",
   "The call reason has been updated": "Lý do cuộc gọi đã được cập nhật",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "Liên hệ chưa thuộc về bất kỳ nhóm nào.",
   "The contact has been added": "Liên hệ đã được thêm",
   "The contact has been deleted": "Liên hệ đã bị xóa",
-  "The contact has been edited": "Địa chỉ liên hệ đã được chỉnh sửa",
   "The contact has been removed from the group": "Liên hệ đã bị xóa khỏi nhóm",
+  "The contact has been updated": "Liên hệ đã được cập nhật",
   "The contact information has been created": "Thông tin liên hệ đã được tạo",
   "The contact information has been deleted": "Thông tin liên hệ đã bị xóa",
-  "The contact information has been edited": "Thông tin liên hệ đã được chỉnh sửa",
+  "The contact information has been updated": "Thông tin liên hệ đã được cập nhật",
   "The contact information type has been created": "Loại thông tin liên hệ đã được tạo",
   "The contact information type has been deleted": "Loại thông tin liên hệ đã bị xóa",
   "The contact information type has been updated": "Loại thông tin liên hệ đã được cập nhật",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "Dữ liệu nhận được không hợp lệ.",
   "The goal has been created": "Mục tiêu đã được tạo",
   "The goal has been deleted": "Mục tiêu đã bị xóa",
-  "The goal has been edited": "Mục tiêu đã được chỉnh sửa",
+  "The goal has been updated": "Mục tiêu đã được cập nhật",
   "The group has been added": "Nhóm đã được thêm",
   "The group has been deleted": "Nhóm đã bị xóa",
   "The group has been updated": "Nhóm đã được cập nhật",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "Số liệu cuộc sống đã được cập nhật",
   "The loan has been created": "Khoản vay đã được tạo",
   "The loan has been deleted": "Khoản vay đã bị xóa",
-  "The loan has been edited": "Khoản vay đã được chỉnh sửa",
   "The loan has been settled": "Khoản vay đã được giải quyết",
+  "The loan has been updated": "Khoản vay đã được cập nhật",
   "The loan is an object": "Khoản vay là đối tượng",
   "The loan is monetary": "Khoản vay là tiền tệ",
   "The module has been added": "Mô-đun đã được thêm vào",
   "The module has been removed": "Mô-đun đã bị xóa",
   "The note has been created": "Ghi chú đã được tạo",
   "The note has been deleted": "Ghi chú đã bị xóa",
-  "The note has been edited": "Ghi chú đã được chỉnh sửa",
+  "The note has been updated": "Ghi chú đã được cập nhật",
   "The notification has been sent": "Thông báo đã được gửi",
   "The operation either timed out or was not allowed.": "Thao tác đã hết thời gian chờ hoặc không được phép.",
   "The page has been added": "Trang đã được thêm",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "Danh mục thú cưng đã được cập nhật",
   "The pet has been added": "Thú cưng đã được thêm vào",
   "The pet has been deleted": "Thú cưng đã bị xóa",
-  "The pet has been edited": "Thú cưng đã được chỉnh sửa",
+  "The pet has been updated": "Thú cưng đã được cập nhật",
   "The photo has been added": "Ảnh đã được thêm",
   "The photo has been deleted": "Ảnh đã bị xóa",
   "The position has been saved": "Vị trí đã được lưu",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "Mã xác minh hai yếu tố đã cung cấp không hợp lệ.",
   "There are no active addresses yet.": "Chưa có địa chỉ hoạt động nào.",
   "There are no calls logged yet.": "Chưa có cuộc gọi nào được ghi lại.",
-  "There are no contact information yet.": "Hiện chưa có thông tin liên lạc.",
+  "There are no contact information types yet.": "Không có loại thông tin liên lạc.",
+  "There are no contact informations yet.": "Hiện chưa có thông tin liên lạc.",
   "There are no documents yet.": "Chưa có tài liệu nào.",
   "There are no events on that day, future or past.": "Không có sự kiện nào vào ngày đó, tương lai hay quá khứ.",
   "There are no files yet.": "Chưa có tập tin nào.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "Tôn giáo đã được cập nhật",
   "The reminder has been created": "Lời nhắc đã được tạo",
   "The reminder has been deleted": "Lời nhắc đã bị xóa",
-  "The reminder has been edited": "Lời nhắc đã được chỉnh sửa",
+  "The reminder has been updated": "Lời nhắc đã được cập nhật",
   "The response is not a streamed response.": "Phản hồi không phải là phản hồi được phát trực tuyến.",
   "The response is not a view.": "Phản hồi không phải là một lượt xem.",
   "The role has been created": "Vai trò đã được tạo",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "Thẻ đã được cập nhật",
   "The task has been created": "Nhiệm vụ đã được tạo",
   "The task has been deleted": "Nhiệm vụ đã bị xóa",
-  "The task has been edited": "Nhiệm vụ đã được chỉnh sửa",
+  "The task has been updated": "Nhiệm vụ đã được cập nhật",
   "The team's name and owner information.": "Tên và thông tin của trưởng nhóm",
   "The Telegram channel has been deleted": "Kênh Telegram đã bị xóa",
   "The template has been created": "Mẫu đã được tạo",
@@ -1231,6 +1233,7 @@
   "The type has been created": "Loại đã được tạo",
   "The type has been deleted": "Loại đã bị xóa",
   "The type has been updated": "Loại đã được cập nhật",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "Loại thông tin liên lạc. Don Tiết thay đổi nó trừ khi bạn biết những gì bạn đang làm.",
   "The user has been added": "Người dùng đã được thêm",
   "The user has been deleted": "Người dùng đã bị xóa",
   "The user has been removed": "Người dùng đã bị xóa",
