--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "你确定吗？这将永久删除该文档。",
   "Are you sure? This will delete the goal and all the streaks permanently.": "你确定吗？这将永久删除目标和所有连胜。",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "你确定吗？这将从所有联系人中删除地址类型，但不会删除联系人本身。",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "你确定吗？这将从所有联系人中删除联系人信息类型，但不会删除联系人本身。",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "你确定吗？这将从所有联系人中删除联系信息类型，但不会删除联系人。",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "你确定吗？这将从所有联系人中删除性别，但不会删除联系人本身。",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "你确定吗？这将从所有联系人中删除模板，但不会删除联系人本身。",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "您确定要删除这个团队吗？一旦一个团队被删除，它的所有资源和数据将被永久删除。",
@@ -383,10 +383,11 @@
   "Delete": "删除",
   "Delete :name": "删除 :name 个",
   "Delete Account": "删除账户",
+  "Delete a contact information": "删除联系信息",
+  "Delete a contact information type": "删除联系信息类型",
   "Delete a new key": "删除新密钥",
   "Delete API Token": "删除 API 令牌",
   "Delete contact": "删除联系人",
-  "Delete contact information": "删除联系信息",
   "deleted a contact information": "删除了联系信息",
   "deleted a goal": "删除了一个目标",
   "deleted an address": "删除了一个地址",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "地址类型已更新",
   "The call has been created": "通话已创建",
   "The call has been deleted": "通话已被删除",
-  "The call has been edited": "通话已编辑",
+  "The call has been updated": "该电话已更新",
   "The call reason has been created": "通话原因已创建",
   "The call reason has been deleted": "通话原因已删除",
   "The call reason has been updated": "通话原因已更新",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "该联系人尚不属于任何组。",
   "The contact has been added": "联系人已添加",
   "The contact has been deleted": "联系方式已被删除",
-  "The contact has been edited": "联系方式已修改",
   "The contact has been removed from the group": "该联系人已从群组中删除",
+  "The contact has been updated": "联系人已更新",
   "The contact information has been created": "联系信息已创建",
   "The contact information has been deleted": "联系方式已被删除",
-  "The contact information has been edited": "联系方式已修改",
+  "The contact information has been updated": "联系信息已更新",
   "The contact information type has been created": "联系信息类型已创建",
   "The contact information type has been deleted": "联系信息类型已被删除",
   "The contact information type has been updated": "联系信息类型已更新",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "给定的数据无效。",
   "The goal has been created": "目标已创建",
   "The goal has been deleted": "目标已被删除",
-  "The goal has been edited": "目标已编辑",
+  "The goal has been updated": "目标已更新",
   "The group has been added": "群组已添加",
   "The group has been deleted": "该群组已被删除",
   "The group has been updated": "群组已更新",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "生命指标已更新",
   "The loan has been created": "贷款已创建",
   "The loan has been deleted": "贷款已被删除",
-  "The loan has been edited": "贷款已修改",
   "The loan has been settled": "贷款已结清",
+  "The loan has been updated": "贷款已更新",
   "The loan is an object": "贷款是一个对象",
   "The loan is monetary": "贷款是货币性的",
   "The module has been added": "该模块已添加",
   "The module has been removed": "该模块已被删除",
   "The note has been created": "笔记已创建",
   "The note has been deleted": "注释已被删除",
-  "The note has been edited": "该注释已被编辑",
+  "The note has been updated": "注释已更新",
   "The notification has been sent": "通知已发送",
   "The operation either timed out or was not allowed.": "该操作超时或不允许。",
   "The page has been added": "页面已添加",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "宠物类别已更新",
   "The pet has been added": "宠物已添加",
   "The pet has been deleted": "宠物已被删除",
-  "The pet has been edited": "宠物已编辑",
+  "The pet has been updated": "宠物已更新",
   "The photo has been added": "照片已添加",
   "The photo has been deleted": "照片已被删除",
   "The position has been saved": "该位置已保存",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "双因素恢复代码无效。",
   "There are no active addresses yet.": "还没有活动地址。",
   "There are no calls logged yet.": "尚未记录任何呼叫。",
-  "There are no contact information yet.": "目前还没有联系信息。",
+  "There are no contact information types yet.": "尚无联系信息类型。",
+  "There are no contact informations yet.": "目前还没有联系信息。",
   "There are no documents yet.": "还没有文件。",
   "There are no events on that day, future or past.": "那天、未来或过去没有发生任何事件。",
   "There are no files yet.": "还没有文件。",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "宗教已更新",
   "The reminder has been created": "提醒已创建",
   "The reminder has been deleted": "提醒已被删除",
-  "The reminder has been edited": "提醒已修改",
+  "The reminder has been updated": "提醒已更新",
   "The response is not a streamed response.": "该响应不是流式响应。",
   "The response is not a view.": "响应不是视图。",
   "The role has been created": "角色已创建",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "标签已更新",
   "The task has been created": "任务已创建",
   "The task has been deleted": "任务已被删除",
-  "The task has been edited": "任务已编辑",
+  "The task has been updated": "该任务已更新",
   "The team's name and owner information.": "团队名称和拥有者信息。",
   "The Telegram channel has been deleted": "Telegram 频道已被删除",
   "The template has been created": "模板已创建",
@@ -1231,6 +1233,7 @@
   "The type has been created": "类型已创建",
   "The type has been deleted": "该类型已被删除",
   "The type has been updated": "类型已更新",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "联系信息的类型。除非您知道自己在做什么，否则不要更改它。",
   "The user has been added": "该用户已添加",
   "The user has been deleted": "该用户已被删除",
   "The user has been removed": "该用户已被删除",
