--- a/lang/da.json
+++ b/lang/da.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Er du sikker? Dette vil slette dokumentet permanent.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Er du sikker? Dette vil slette målet og alle streakerne permanent.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner adressetyperne fra alle kontakter, men sletter ikke selve kontakterne.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner kontaktinformationstyperne fra alle kontakter, men sletter ikke selve kontakterne.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette vil fjerne kontaktoplysningstypen fra alle kontakter, men sletter ikke selve kontakterne.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner kønnene fra alle kontakter, men sletter ikke selve kontakterne.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner skabelonen fra alle kontakter, men sletter ikke selve kontakterne.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Er du sikker på, at du vil slette dette hold? Når et hold er slettet, vil alle dets ressourcer og data blive slettet permanent.",
@@ -383,10 +383,11 @@
   "Delete": "Slet",
   "Delete :name": "Slet :name",
   "Delete Account": "Slet konto",
+  "Delete a contact information": "Slet en kontaktoplysninger",
+  "Delete a contact information type": "Slet en kontaktoplysningstype",
   "Delete a new key": "Slet en ny nøgle",
   "Delete API Token": "Slet API-Token",
   "Delete contact": "Slet kontakt",
-  "Delete contact information": "Slet kontaktoplysninger",
   "deleted a contact information": "slettet en kontaktinformation",
   "deleted a goal": "slettet et mål",
   "deleted an address": "slettet en adresse",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "Adressetypen er blevet opdateret",
   "The call has been created": "Opkaldet er oprettet",
   "The call has been deleted": "Opkaldet er blevet slettet",
-  "The call has been edited": "Opkaldet er blevet redigeret",
+  "The call has been updated": "Opkaldet er blevet opdateret",
   "The call reason has been created": "Opkaldsårsagen er oprettet",
   "The call reason has been deleted": "Opkaldsårsagen er blevet slettet",
   "The call reason has been updated": "Opkaldsårsagen er blevet opdateret",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "Kontakten tilhører ikke nogen gruppe endnu.",
   "The contact has been added": "Kontakten er tilføjet",
   "The contact has been deleted": "Kontakten er blevet slettet",
-  "The contact has been edited": "Kontakten er blevet redigeret",
   "The contact has been removed from the group": "Kontakten er blevet fjernet fra gruppen",
+  "The contact has been updated": "Kontakten er blevet opdateret",
   "The contact information has been created": "Kontaktoplysningerne er oprettet",
   "The contact information has been deleted": "Kontaktoplysningerne er blevet slettet",
-  "The contact information has been edited": "Kontaktoplysningerne er blevet redigeret",
+  "The contact information has been updated": "Kontaktoplysningerne er blevet opdateret",
   "The contact information type has been created": "Kontaktinformationstypen er oprettet",
   "The contact information type has been deleted": "Kontaktinformationstypen er blevet slettet",
   "The contact information type has been updated": "Kontaktinformationstypen er blevet opdateret",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "De angivne data var ugyldige.",
   "The goal has been created": "Målet er skabt",
   "The goal has been deleted": "Målet er blevet slettet",
-  "The goal has been edited": "Målet er blevet redigeret",
+  "The goal has been updated": "Målet er blevet opdateret",
   "The group has been added": "Gruppen er tilføjet",
   "The group has been deleted": "Gruppen er blevet slettet",
   "The group has been updated": "Gruppen er blevet opdateret",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "Levetidsmålingen er blevet opdateret",
   "The loan has been created": "Lånet er oprettet",
   "The loan has been deleted": "Lånet er slettet",
-  "The loan has been edited": "Lånet er blevet redigeret",
   "The loan has been settled": "Lånet er afviklet",
+  "The loan has been updated": "Lånet er blevet opdateret",
   "The loan is an object": "Lånet er et objekt",
   "The loan is monetary": "Lånet er monetært",
   "The module has been added": "Modulet er tilføjet",
   "The module has been removed": "Modulet er blevet fjernet",
   "The note has been created": "Notatet er oprettet",
   "The note has been deleted": "Notatet er blevet slettet",
-  "The note has been edited": "Notatet er blevet redigeret",
+  "The note has been updated": "Noten er blevet opdateret",
   "The notification has been sent": "Meddelelsen er sendt",
   "The operation either timed out or was not allowed.": "Operationen fik enten timeout eller var ikke tilladt.",
   "The page has been added": "Siden er tilføjet",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "Kæledyrskategorien er blevet opdateret",
   "The pet has been added": "Kæledyret er tilføjet",
   "The pet has been deleted": "Kæledyret er blevet slettet",
-  "The pet has been edited": "Kæledyret er blevet redigeret",
+  "The pet has been updated": "Kæledyret er blevet opdateret",
   "The photo has been added": "Billedet er tilføjet",
   "The photo has been deleted": "Billedet er blevet slettet",
   "The position has been saved": "Positionen er blevet gemt",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "Den angivne gendannelseskode med to faktorer var ugyldig.",
   "There are no active addresses yet.": "Der er endnu ingen aktive adresser.",
   "There are no calls logged yet.": "Der er ingen opkald logget endnu.",
-  "There are no contact information yet.": "Der er endnu ingen kontaktoplysninger.",
+  "There are no contact information types yet.": "Der er endnu ingen kontaktoplysningstyper.",
+  "There are no contact informations yet.": "Der er endnu ingen kontaktoplysninger.",
   "There are no documents yet.": "Der er ingen dokumenter endnu.",
   "There are no events on that day, future or past.": "Der er ingen begivenheder på den dag, fremtid eller fortid.",
   "There are no files yet.": "Der er ingen filer endnu.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "Religionen er blevet opdateret",
   "The reminder has been created": "Påmindelsen er oprettet",
   "The reminder has been deleted": "Påmindelsen er blevet slettet",
-  "The reminder has been edited": "Påmindelsen er blevet redigeret",
+  "The reminder has been updated": "Påmindelsen er blevet opdateret",
   "The response is not a streamed response.": "Svaret er ikke et streamet svar.",
   "The response is not a view.": "Svaret er ikke et synspunkt.",
   "The role has been created": "Rollen er skabt",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "Tagget er blevet opdateret",
   "The task has been created": "Opgaven er oprettet",
   "The task has been deleted": "Opgaven er blevet slettet",
-  "The task has been edited": "Opgaven er blevet redigeret",
+  "The task has been updated": "Opgaven er blevet opdateret",
   "The team's name and owner information.": "Holdets navn og ejer oplysninger.",
   "The Telegram channel has been deleted": "Telegram-kanalen er blevet slettet",
   "The template has been created": "Skabelonen er blevet oprettet",
@@ -1231,6 +1233,7 @@
   "The type has been created": "Typen er oprettet",
   "The type has been deleted": "Typen er blevet slettet",
   "The type has been updated": "Typen er blevet opdateret",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "Typen af kontaktoplysninger. Skift ikke det, medmindre du ved, hvad du laver.",
   "The user has been added": "Brugeren er tilføjet",
   "The user has been deleted": "Brugeren er blevet slettet",
   "The user has been removed": "Brugeren er blevet fjernet",
