--- a/lang/fr.json
+++ b/lang/fr.json
@@ -43,7 +43,7 @@
   "Accept invitation and create your account": "Accepter l’invitation et créer votre compte",
   "Account and security": "Compte et sécurité",
   "Account settings": "Paramètres du compte",
-  "A contact information can be clickable. For instance, a phone number can be clickable and launch the default application in your computer. If you do not know the protocol for the type you are adding, you can simply omit this field.": "Une information de contact peut être cliquable. Par exemple, un numéro de téléphone peut être cliquable et lancer l’application par défaut sur votre ordinateur. Si vous ne connaissez pas le protocole du type que vous ajoutez, vous pouvez simplement omettre ce champ.",
+  "A contact information can be clickable. For instance, a phone number can be clickable and launch the default application in your computer. If you do not know the protocol for the type you are adding, you can simply omit this field.": "Une coordonnée peut être cliquable. Par exemple, un numéro de téléphone peut être cliquable et lancer l’application par défaut sur votre ordinateur. Si vous ne connaissez pas le protocole du type que vous ajoutez, vous pouvez simplement omettre ce champ.",
   "Action": "Action",
   "Actions": "Actions",
   "Activate": "Activer",
@@ -104,7 +104,7 @@
   "Add a vault": "Ajouter un coffre",
   "Add date": "Ajouter une date",
   "Added.": "Ajouté.",
-  "added a contact information": "ajouté une information de contact",
+  "added a contact information": "ajouté une coordonnée",
   "added an address": "ajouté une adresse",
   "added an important date": "ajouté une date importante",
   "added a pet": "ajouté un animal de compagnie",
@@ -142,7 +142,7 @@
   "All the call reasons": "Tous les motifs d’appel",
   "All the cities": "Toutes les villes",
   "All the companies": "Toutes les entreprises",
-  "All the contact information types": "Tous les types d’informations de contact",
+  "All the contact information types": "Tous les types de coordonnées",
   "All the countries": "Tous les pays",
   "All the currencies": "Toutes les devises",
   "All the files": "Tous les fichiers",
@@ -189,11 +189,11 @@
   "Are you sure? This action cannot be undone.": "Êtes-vous sûr⋅e ? Cette action ne peut pas être annulée.",
   "Are you sure? This will delete all the call reasons of this type for all the contacts that were using it.": "Êtes-vous sûr⋅e ? Cela supprimera tous les motifs d’appel de ce type pour tous les contacts qui l’utilisaient.",
   "Are you sure? This will delete all the relationships of this type for all the contacts that were using it.": "Êtes-vous sûr⋅e ? Cela supprimera toutes les relations de ce type pour tous les contacts qui l’utilisaient.",
-  "Are you sure? This will delete the contact information permanently.": "Êtes-vous sûr⋅e ? Cela supprimera définitivement les informations de contact.",
+  "Are you sure? This will delete the contact information permanently.": "Êtes-vous sûr⋅e ? Cela supprimera définitivement les coordonnées.",
   "Are you sure? This will delete the document permanently.": "Êtes-vous sûr⋅e ? Cela supprimera définitivement le document.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Êtes-vous sûr⋅e ? Cela supprimera définitivement le but et toutes les séquences.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Êtes-vous sûr⋅e ? Cela supprimera les types d’adresses de tous les contacts, mais ne supprimera pas les contacts eux-mêmes.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Êtes-vous sûr⋅e ? Cela supprimera les types d’informations de contact de tous les contacts, mais ne supprimera pas les contacts eux-mêmes.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Es-tu sûr? Cela supprimera le type d’informations de contact de tous les contacts, mais ne supprimera pas les contacts eux-mêmes.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Êtes-vous sûr⋅e ? Cela supprimera le genre de tous les contacts, mais ne supprimera pas les contacts eux-mêmes.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Êtes-vous sûr⋅e ? Cela supprimera le modèle de tous les contacts, mais ne supprimera pas les contacts eux-mêmes.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Êtes-vous sûr·e de vouloir supprimer cette équipe ? Lorsqu’une équipe est supprimée, toutes les données associées seront définitivement supprimées.",
@@ -309,7 +309,7 @@
   "Contact feed": "Flux de contacts",
   "Contact information": "Coordonnées",
   "Contact informations": "Coordonnées",
-  "Contact information types": "Types d’informations de contact",
+  "Contact information types": "Types de coordonnées",
   "Contact name": "Nom du contact",
   "Contacts": "Contacts",
   "Contacts in this post": "Contacts dans cet article",
@@ -383,11 +383,12 @@
   "Delete": "Supprimer",
   "Delete :name": "Supprimer :name",
   "Delete Account": "Supprimer le compte",
+  "Delete a contact information": "Supprimer une coordonnée",
+  "Delete a contact information type": "Supprimer un type de coordonnée",
   "Delete a new key": "Supprimer une nouvelle clé",
   "Delete API Token": "Supprimer le jeton API",
   "Delete contact": "Effacer le contact",
-  "Delete contact information": "Supprimer une coordonnée",
-  "deleted a contact information": "a supprimé une information de contact",
+  "deleted a contact information": "a supprimé une coordonnée",
   "deleted a goal": "a supprimé un objectif",
   "deleted an address": "a supprimé une adresse",
   "deleted an important date": "a supprimé une date importante",
@@ -686,7 +687,7 @@
   "Manage and log out your active sessions on other browsers and devices.": "Gérer et déconnecter vos sessions actives sur les autres navigateurs et appareils.",
   "Manage API Tokens": "Gérer les jetons API",
   "Manage call reasons": "Gérer les motifs d’appel",
-  "Manage contact information types": "Gérer les types d’informations de contact",
+  "Manage contact information types": "Gérer les types de coordonnées",
   "Manage currencies": "Gérer les devises",
   "Manage genders": "Gérer les genres",
   "Manage gift occasions": "Gérer les occasions de cadeaux",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "Le type d’adresse a été mis à jour",
   "The call has been created": "L’appel a été créé",
   "The call has been deleted": "L’appel a été supprimé",
-  "The call has been edited": "L’appel a été modifié",
+  "The call has been updated": "L’appel a été mis à jour",
   "The call reason has been created": "Le motif de l’appel a été créé",
   "The call reason has been deleted": "Le motif de l’appel a été supprimé",
   "The call reason has been updated": "Le motif de l’appel a été mis à jour",
@@ -1087,14 +1088,14 @@
   "The contact does not belong to any group yet.": "Le contact n’appartient à aucun groupe pour l’instant.",
   "The contact has been added": "Le contact a été ajouté",
   "The contact has been deleted": "Le contact a été supprimé",
-  "The contact has been edited": "Le contact a été modifié",
   "The contact has been removed from the group": "Le contact a été supprimé du groupe",
-  "The contact information has been created": "Les coordonnées ont été créées",
-  "The contact information has been deleted": "Les coordonnées ont été supprimées",
-  "The contact information has been edited": "Les coordonnées ont été modifiées",
-  "The contact information type has been created": "Le type d’informations de contact a été créé",
-  "The contact information type has been deleted": "Le type d’informations de contact a été supprimé",
-  "The contact information type has been updated": "Le type d’informations de contact a été mis à jour",
+  "The contact has been updated": "Le contact a été mis à jour",
+  "The contact information has been created": "La coordonnée a été créée",
+  "The contact information has been deleted": "La coordonnée a été supprimée",
+  "The contact information has been updated": "La coordonnée a été mise à jour",
+  "The contact information type has been created": "Le type de coordonnée a été créé",
+  "The contact information type has been deleted": "Le type de coordonnée a été supprimé",
+  "The contact information type has been updated": "Le type de coordonnée a été mis à jour",
   "The contact is archived": "Le contact est archivé",
   "The currencies have been updated": "Les devises ont été mises à jour",
   "The currency has been updated": "La devise a été mise à jour",
@@ -1105,11 +1106,11 @@
   "The document has been deleted": "Le document a été supprimé",
   "The email address has been deleted": "L’adresse email a été supprimée",
   "The email has been added": "L’e-mail a été ajouté",
-  "The email is already taken. Please choose another one.": "L’email est déjà pris. Veuillez en choisir un autre.",
+  "The email is already taken. Please choose another one.": "Cette adresse email est déjà pris. Veuillez en choisir une autre.",
   "The gender has been created": "Le genre a été créé",
   "The gender has been deleted": "Le genre a été supprimé",
   "The gender has been updated": "Le genre a été mis à jour",
-  "The gift occasion has been created": "L’occasion cadeau a été créée",
+  "The gift occasion has been created": "L’occasion de cadeau a été créée",
   "The gift occasion has been deleted": "L’occasion de cadeau a été supprimée",
   "The gift occasion has been updated": "L’occasion du cadeau a été mise à jour",
   "The gift state has been created": "L’état du cadeau a été créé",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "La donnée renseignée est incorrecte.",
   "The goal has been created": "L’objectif a été créé",
   "The goal has been deleted": "L’objectif a été supprimé",
-  "The goal has been edited": "L’objectif a été modifié",
+  "The goal has been updated": "L’objectif a été mis à jour",
   "The group has been added": "Le groupe a été ajouté",
   "The group has been deleted": "Le groupe a été supprimé",
   "The group has been updated": "Le groupe a été mis à jour",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "La métrique de vie a été mise à jour",
   "The loan has been created": "Le prêt a été créé",
   "The loan has been deleted": "Le prêt a été supprimé",
-  "The loan has been edited": "Le prêt a été modifé",
   "The loan has been settled": "Le prêt a été réglé",
+  "The loan has been updated": "Le prêt a été mis à jour",
   "The loan is an object": "Le prêt est un objet",
   "The loan is monetary": "Le prêt est monétaire",
   "The module has been added": "Le module a été ajouté",
   "The module has been removed": "Le module a été supprimé",
   "The note has been created": "La note a été créée",
   "The note has been deleted": "La note a été supprimée",
-  "The note has been edited": "La note a été modifiée",
+  "The note has been updated": "La note a été mise à jour",
   "The notification has been sent": "La notification a été envoyée",
   "The operation either timed out or was not allowed.": "L’opération a expiré ou n’a pas été autorisée.",
   "The page has been added": "La page a été ajoutée",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "La catégorie d’animaux de compagnie a été mise à jour",
   "The pet has been added": "L’animal de compagnie a été ajouté",
   "The pet has been deleted": "L’animal de compagnie a été supprimé",
-  "The pet has been edited": "L’animal de compagnie a été modifié",
+  "The pet has been updated": "L’animal de compagnie a été mis à jour",
   "The photo has been added": "La photo a été ajoutée",
   "The photo has been deleted": "La photo a été supprimée",
   "The position has been saved": "La position a été enregistré",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "Le code de récupération fourni pour l’authentification à deux facteurs est incorrect.",
   "There are no active addresses yet.": "Il n’y a pas encore d’adresse active.",
   "There are no calls logged yet.": "Il n’y a pas encore d’appel enregistré.",
-  "There are no contact information yet.": "Il n’y a pas encore d’information de contact.",
+  "There are no contact information types yet.": "Il n’y a pas encore de type de coordonnée.",
+  "There are no contact informations yet.": "Il n’y a pas encore de coordonnée.",
   "There are no documents yet.": "Il n’y a pas encore de document.",
   "There are no events on that day, future or past.": "Il n’y a aucun évènement ce jour-là, futur ou passé.",
   "There are no files yet.": "Il n’y a pas encore de fichier.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "La religion a été mise à jour",
   "The reminder has been created": "Le rappel a été créé",
   "The reminder has been deleted": "Le rappel a été supprimé",
-  "The reminder has been edited": "Le rappel a été modifié",
+  "The reminder has been updated": "Le rappel a été mis à jour",
   "The response is not a streamed response.": "La réponse n’est pas une réponse diffusée.",
   "The response is not a view.": "La réponse n’est pas une vue.",
   "The role has been created": "Le rôle a été créé",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "La balisee a été mise à jour",
   "The task has been created": "La tâche a été créée",
   "The task has been deleted": "La tâche a été supprimée",
-  "The task has been edited": "La tâche a été modifiée",
+  "The task has been updated": "La tâche a été mise à jour",
   "The team's name and owner information.": "Les informations concernant l’équipe et son propriétaire.",
   "The Telegram channel has been deleted": "La chaîne Telegram a été supprimée",
   "The template has been created": "Le modèle a été créé",
@@ -1231,6 +1233,7 @@
   "The type has been created": "Le type a été créé",
   "The type has been deleted": "Le type a été supprimé",
   "The type has been updated": "Le type a été mis à jour",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "Le type de coordonnée. Ne changez pas ceci à moins que vous ne sachiez ce que vous faites.",
   "The user has been added": "L’utilisateur a été ajouté",
   "The user has been deleted": "L’utilisateur a été supprimé",
   "The user has been removed": "L’utilisateur a été supprimé",
