--- a/lang/nn.json
+++ b/lang/nn.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Er du sikker? Dette vil slette dokumentet permanent.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Er du sikker? Dette vil slette målet og alle strekene permanent.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner adressetypene fra alle kontakter, men sletter ikke selve kontaktene.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner kontaktinformasjonstypene fra alle kontakter, men sletter ikke selve kontaktene.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette vil fjerne kontaktinformasjonstypen fra alle kontakter, men vil ikke slette kontaktene selv.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner kjønnene fra alle kontakter, men sletter ikke selve kontaktene.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Er du sikker? Dette fjerner malen fra alle kontakter, men sletter ikke selve kontaktene.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Er du sikker på at du vil slette dette teamet? Når et team er slettet, vil alle dets ressurser og data bli slettet permanent.",
@@ -383,10 +383,11 @@
   "Delete": "Slett",
   "Delete :name": "Slett :name",
   "Delete Account": "Slett konto",
+  "Delete a contact information": "Slett en kontaktinformasjon",
+  "Delete a contact information type": "Slett en kontaktinformasjonstype",
   "Delete a new key": "Slett en ny nøkkel",
   "Delete API Token": "Slett API-token",
   "Delete contact": "Slett kontakt",
-  "Delete contact information": "Slett kontaktinformasjon",
   "deleted a contact information": "slettet en kontaktinformasjon",
   "deleted a goal": "slettet et mål",
   "deleted an address": "slettet en adresse",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "Adressetypen er oppdatert",
   "The call has been created": "Samtalen er opprettet",
   "The call has been deleted": "Samtalen er slettet",
-  "The call has been edited": "Samtalen er redigert",
+  "The call has been updated": "Samtalen er oppdatert",
   "The call reason has been created": "Anropsårsaken er opprettet",
   "The call reason has been deleted": "Årsaken til anropet er slettet",
   "The call reason has been updated": "Årsaken til samtalen er oppdatert",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "Kontakten tilhører ikke noen gruppe ennå.",
   "The contact has been added": "Kontakten er lagt til",
   "The contact has been deleted": "Kontakten er slettet",
-  "The contact has been edited": "Kontakten er redigert",
   "The contact has been removed from the group": "Kontakten er fjernet fra gruppen",
+  "The contact has been updated": "Kontakten er oppdatert",
   "The contact information has been created": "Kontaktinformasjonen er opprettet",
   "The contact information has been deleted": "Kontaktinformasjonen er slettet",
-  "The contact information has been edited": "Kontaktinformasjonen er redigert",
+  "The contact information has been updated": "Kontaktinformasjonen er oppdatert",
   "The contact information type has been created": "Kontaktinformasjonstypen er opprettet",
   "The contact information type has been deleted": "Kontaktinformasjonstypen er slettet",
   "The contact information type has been updated": "Kontaktinformasjonstypen er oppdatert",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "De oppgitte dataene var ugyldige.",
   "The goal has been created": "Målet er skapt",
   "The goal has been deleted": "Målet er slettet",
-  "The goal has been edited": "Målet er redigert",
+  "The goal has been updated": "Målet er oppdatert",
   "The group has been added": "Gruppen er lagt til",
   "The group has been deleted": "Gruppen er slettet",
   "The group has been updated": "Gruppen er oppdatert",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "Levetidsberegningen er oppdatert",
   "The loan has been created": "Lånet er opprettet",
   "The loan has been deleted": "Lånet er slettet",
-  "The loan has been edited": "Lånet er redigert",
   "The loan has been settled": "Lånet er gjort opp",
+  "The loan has been updated": "Lånet er oppdatert",
   "The loan is an object": "Lånet er et objekt",
   "The loan is monetary": "Lånet er monetært",
   "The module has been added": "Modulen er lagt til",
   "The module has been removed": "Modulen er fjernet",
   "The note has been created": "Notatet er opprettet",
   "The note has been deleted": "Notatet er slettet",
-  "The note has been edited": "Notatet er redigert",
+  "The note has been updated": "Notatet er oppdatert",
   "The notification has been sent": "Varselet er sendt",
   "The operation either timed out or was not allowed.": "Operasjonen ble enten tidsavbrutt eller ikke tillatt.",
   "The page has been added": "Siden er lagt til",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "Kjæledyrkategorien er oppdatert",
   "The pet has been added": "Kjæledyret er lagt til",
   "The pet has been deleted": "Kjæledyret er slettet",
-  "The pet has been edited": "Kjæledyret er redigert",
+  "The pet has been updated": "Kjæledyret er oppdatert",
   "The photo has been added": "Bildet er lagt til",
   "The photo has been deleted": "Bildet er slettet",
   "The position has been saved": "Stillingen er lagret",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "Den oppgitte tofaktorgjenopprettingskoden var ugyldig.",
   "There are no active addresses yet.": "Det er ingen aktive adresser ennå.",
   "There are no calls logged yet.": "Det er ingen anrop logget ennå.",
-  "There are no contact information yet.": "Det er ingen kontaktinformasjon ennå.",
+  "There are no contact information types yet.": "Det er ingen kontaktinformasjonstyper ennå.",
+  "There are no contact informations yet.": "Det er ingen kontaktinformasjon ennå.",
   "There are no documents yet.": "Det er ingen dokumenter ennå.",
   "There are no events on that day, future or past.": "Det er ingen hendelser på den dagen, fremtiden eller fortiden.",
   "There are no files yet.": "Det er ingen filer ennå.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "Religionen er oppdatert",
   "The reminder has been created": "Påminnelsen er opprettet",
   "The reminder has been deleted": "Påminnelsen er slettet",
-  "The reminder has been edited": "Påminnelsen er redigert",
+  "The reminder has been updated": "Påminnelsen er oppdatert",
   "The response is not a streamed response.": "Svaret er ikke et strømmet svar.",
   "The response is not a view.": "Svaret er ikke et syn.",
   "The role has been created": "Rollen er opprettet",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "Taggen er oppdatert",
   "The task has been created": "Oppgaven er opprettet",
   "The task has been deleted": "Oppgaven er slettet",
-  "The task has been edited": "Oppgaven er redigert",
+  "The task has been updated": "Oppgaven er oppdatert",
   "The team's name and owner information.": "Lagets navn og eierinformasjon.",
   "The Telegram channel has been deleted": "Telegram-kanalen er slettet",
   "The template has been created": "Malen er opprettet",
@@ -1231,6 +1233,7 @@
   "The type has been created": "Typen er opprettet",
   "The type has been deleted": "Typen er slettet",
   "The type has been updated": "Typen er oppdatert",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "Typen kontaktinformasjon. Ikke endre det med mindre du vet hva du gjør.",
   "The user has been added": "Brukeren er lagt til",
   "The user has been deleted": "Brukeren er slettet",
   "The user has been removed": "Brukeren er fjernet",
