--- a/lang/tr.json
+++ b/lang/tr.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "Emin misin? Bu, belgeyi kalıcı olarak silecektir.",
   "Are you sure? This will delete the goal and all the streaks permanently.": "Emin misin? Bu, hedefi ve tüm serileri kalıcı olarak silecektir.",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "Emin misin? Bu, adres türlerini tüm kişilerden kaldıracaktır ancak kişilerin kendisini silmez.",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "Emin misin? Bu, kişi bilgisi türlerini tüm kişilerden kaldıracaktır ancak kişilerin kendisini silmez.",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "Emin misin? Bu, iletişim bilgileri türünü tüm kişilerden kaldırır, ancak kişilerin kendilerini silmez.",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "Emin misin? Bu, tüm kişilerden cinsiyetleri kaldıracaktır ancak kişilerin kendisini silmez.",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "Emin misin? Bu, şablonu tüm kişilerden kaldıracaktır ancak kişilerin kendisi silinmeyecektir.",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "Bu ekibi silmek istediğinizden emin misiniz? Bir ekip silindiğinde, tüm kaynakları ve verileri kalıcı olarak silinecektir.",
@@ -383,10 +383,11 @@
   "Delete": "Sil",
   "Delete :name": ":name’u sil",
   "Delete Account": "Hesabı Sil",
+  "Delete a contact information": "Bir iletişim bilgilerini sil",
+  "Delete a contact information type": "İletişim Bilgileri Türünü Sil",
   "Delete a new key": "Yeni bir anahtarı silin",
   "Delete API Token": "API Jetonunu Sil",
   "Delete contact": "Kişiyi silmek",
-  "Delete contact information": "İletişim bilgilerini sil",
   "deleted a contact information": "bir iletişim bilgisini sildim",
   "deleted a goal": "bir hedefi sildim",
   "deleted an address": "bir adresi sildim",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "Adres türü güncellendi",
   "The call has been created": "Çağrı oluşturuldu",
   "The call has been deleted": "Çağrı silindi",
-  "The call has been edited": "Çağrı düzenlendi",
+  "The call has been updated": "Çağrı güncellendi",
   "The call reason has been created": "Çağrı nedeni oluşturuldu",
   "The call reason has been deleted": "Arama nedeni silindi",
   "The call reason has been updated": "Çağrı nedeni güncellendi",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "Kişi henüz herhangi bir gruba ait değil.",
   "The contact has been added": "Kişi eklendi",
   "The contact has been deleted": "Kişi silindi",
-  "The contact has been edited": "Kişi düzenlendi",
   "The contact has been removed from the group": "Kişi gruptan kaldırıldı",
+  "The contact has been updated": "İletişim güncellendi",
   "The contact information has been created": "İletişim bilgileri oluşturuldu",
   "The contact information has been deleted": "İletişim bilgileri silindi",
-  "The contact information has been edited": "İletişim bilgileri düzenlendi",
+  "The contact information has been updated": "İletişim bilgileri güncellendi",
   "The contact information type has been created": "İletişim bilgileri türü oluşturuldu",
   "The contact information type has been deleted": "İletişim bilgisi türü silindi",
   "The contact information type has been updated": "İletişim bilgileri türü güncellendi",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "Verilen veriler geçersizdi.",
   "The goal has been created": "Hedef oluşturuldu",
   "The goal has been deleted": "Hedef silindi",
-  "The goal has been edited": "Hedef düzenlendi",
+  "The goal has been updated": "Amaç güncellendi",
   "The group has been added": "Grup eklendi",
   "The group has been deleted": "Grup silindi",
   "The group has been updated": "Grup güncellendi",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "Yaşam metriği güncellendi",
   "The loan has been created": "Kredi oluşturuldu",
   "The loan has been deleted": "Kredi silindi",
-  "The loan has been edited": "Kredi düzenlendi",
   "The loan has been settled": "Kredi halledildi",
+  "The loan has been updated": "Kredi güncellendi",
   "The loan is an object": "Kredi bir nesnedir",
   "The loan is monetary": "Kredi parasaldır",
   "The module has been added": "Modül eklendi",
   "The module has been removed": "Modül kaldırıldı",
   "The note has been created": "Not oluşturuldu",
   "The note has been deleted": "Not silindi",
-  "The note has been edited": "Not düzenlendi",
+  "The note has been updated": "Not güncellendi",
   "The notification has been sent": "Bildirim gönderildi",
   "The operation either timed out or was not allowed.": "İşlem ya zaman aşımına uğradı ya da izin verilmedi.",
   "The page has been added": "Sayfa eklendi",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "Evcil hayvan kategorisi güncellendi",
   "The pet has been added": "Evcil hayvan eklendi",
   "The pet has been deleted": "Evcil hayvan silindi",
-  "The pet has been edited": "Evcil hayvan düzenlendi",
+  "The pet has been updated": "Evcil hayvan güncellendi",
   "The photo has been added": "Fotoğraf eklendi",
   "The photo has been deleted": "Fotoğraf silindi",
   "The position has been saved": "Konum kaydedildi",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "Sağlanan iki faktörlü kurtarma kodu geçersizdi.",
   "There are no active addresses yet.": "Henüz aktif adres yok.",
   "There are no calls logged yet.": "Henüz kayıtlı bir çağrı yok.",
-  "There are no contact information yet.": "Henüz iletişim bilgisi yok.",
+  "There are no contact information types yet.": "Henüz iletişim bilgisi türü yok.",
+  "There are no contact informations yet.": "Henüz iletişim bilgisi yok.",
   "There are no documents yet.": "Henüz belge yok.",
   "There are no events on that day, future or past.": "O güne, geleceğe veya geçmişe ait hiçbir olay yoktur.",
   "There are no files yet.": "Henüz dosya yok.",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "Din güncellendi",
   "The reminder has been created": "Hatırlatıcı oluşturuldu",
   "The reminder has been deleted": "Hatırlatıcı silindi",
-  "The reminder has been edited": "Hatırlatıcı düzenlendi",
+  "The reminder has been updated": "Hatırlatma güncellendi",
   "The response is not a streamed response.": "Yanıt akışlı bir yanıt değil.",
   "The response is not a view.": "Yanıt bir görünüm değildir.",
   "The role has been created": "Rol oluşturuldu",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "Etiket güncellendi",
   "The task has been created": "Görev oluşturuldu",
   "The task has been deleted": "Görev silindi",
-  "The task has been edited": "Görev düzenlendi",
+  "The task has been updated": "Görev güncellendi",
   "The team's name and owner information.": "Ekibin adı ve sahip bilgileri.",
   "The Telegram channel has been deleted": "Telegram kanalı silindi",
   "The template has been created": "Şablon oluşturuldu",
@@ -1231,6 +1233,7 @@
   "The type has been created": "Tür oluşturuldu",
   "The type has been deleted": "Tür silindi",
   "The type has been updated": "Tür güncellendi",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "İletişim bilgilerinin türü. Ne yaptığınızı bilmiyorsanız değiştirmeyin.",
   "The user has been added": "Kullanıcı eklendi",
   "The user has been deleted": "Kullanıcı silindi",
   "The user has been removed": "Kullanıcı kaldırıldı",
