--- a/lang/zh_TW.json
+++ b/lang/zh_TW.json
@@ -193,7 +193,7 @@
   "Are you sure? This will delete the document permanently.": "你確定嗎？這將永久刪除該文件。",
   "Are you sure? This will delete the goal and all the streaks permanently.": "你確定嗎？這將永久刪除目標和所有連勝。",
   "Are you sure? This will remove the address types from all contacts, but won’t delete the contacts themselves.": "你確定嗎？這將從所有聯絡人中刪除地址類型，但不會刪除聯絡人本身。",
-  "Are you sure? This will remove the contact information types from all contacts, but won’t delete the contacts themselves.": "你確定嗎？這將從所有聯絡人中刪除聯絡人資訊類型，但不會刪除聯絡人本身。",
+  "Are you sure? This will remove the contact information type from all contacts, but won’t delete the contacts themselves.": "你確定嗎？這將從所有聯繫人中刪除聯繫信息類型，但不會刪除聯繫人。",
   "Are you sure? This will remove the genders from all contacts, but won’t delete the contacts themselves.": "你確定嗎？這將從所有聯絡人中刪除性別，但不會刪除聯絡人本身。",
   "Are you sure? This will remove the template from all contacts, but won’t delete the contacts themselves.": "你確定嗎？這將從所有聯絡人中刪除模板，但不會刪除聯絡人本身。",
   "Are you sure you want to delete this team? Once a team is deleted, all of its resources and data will be permanently deleted.": "您確定要刪除這個團隊嗎？一旦一個團隊被刪除，它的所有資源和資料將被永久刪除。",
@@ -383,10 +383,11 @@
   "Delete": "刪除",
   "Delete :name": "刪除 :name 個",
   "Delete Account": "刪除帳號",
+  "Delete a contact information": "刪除聯繫信息",
+  "Delete a contact information type": "刪除聯繫信息類型",
   "Delete a new key": "刪除新密鑰",
   "Delete API Token": "刪除 API 權杖 (token)",
   "Delete contact": "刪除聯絡人",
-  "Delete contact information": "刪除聯繫信息",
   "deleted a contact information": "刪除了聯絡資訊",
   "deleted a goal": "刪除了一個目標",
   "deleted an address": "刪除了一個地址",
@@ -1075,7 +1076,7 @@
   "The address type has been updated": "地址類型已更新",
   "The call has been created": "通話已建立",
   "The call has been deleted": "通話已刪除",
-  "The call has been edited": "通話已編輯",
+  "The call has been updated": "該電話已更新",
   "The call reason has been created": "通話原因已建立",
   "The call reason has been deleted": "通話原因已刪除",
   "The call reason has been updated": "通話原因已更新",
@@ -1087,11 +1088,11 @@
   "The contact does not belong to any group yet.": "該聯絡人尚不屬於任何群組。",
   "The contact has been added": "聯絡人已新增",
   "The contact has been deleted": "聯絡方式已被刪除",
-  "The contact has been edited": "聯絡方式已修改",
   "The contact has been removed from the group": "該聯絡人已從群組中刪除",
+  "The contact has been updated": "聯繫人已更新",
   "The contact information has been created": "聯絡資訊已建立",
   "The contact information has been deleted": "聯絡方式已被刪除",
-  "The contact information has been edited": "聯絡方式已修改",
+  "The contact information has been updated": "聯繫信息已更新",
   "The contact information type has been created": "聯絡資訊類型已建立",
   "The contact information type has been deleted": "聯絡資訊類型已被刪除",
   "The contact information type has been updated": "聯絡資訊類型已更新",
@@ -1118,7 +1119,7 @@
   "The given data was invalid.": "給定的數據無效。",
   "The goal has been created": "目標已創建",
   "The goal has been deleted": "目標已刪除",
-  "The goal has been edited": "目標已編輯",
+  "The goal has been updated": "目標已更新",
   "The group has been added": "群組已新增",
   "The group has been deleted": "該群組已被刪除",
   "The group has been updated": "群組已更新",
@@ -1138,15 +1139,15 @@
   "The life metric has been updated": "生命指標已更新",
   "The loan has been created": "貸款已創建",
   "The loan has been deleted": "貸款已被刪除",
-  "The loan has been edited": "貸款已修改",
   "The loan has been settled": "貸款已結清",
+  "The loan has been updated": "貸款已更新",
   "The loan is an object": "貸款是一個對象",
   "The loan is monetary": "貸款是貨幣性的",
   "The module has been added": "該模組已新增",
   "The module has been removed": "該模組已被刪除",
   "The note has been created": "筆記已創建",
   "The note has been deleted": "註釋已刪除",
-  "The note has been edited": "該註釋已被編輯",
+  "The note has been updated": "註釋已更新",
   "The notification has been sent": "通知已發送",
   "The operation either timed out or was not allowed.": "該操作逾時或不允許。",
   "The page has been added": "頁面已新增",
@@ -1159,7 +1160,7 @@
   "The pet category has been updated": "寵物類別已更新",
   "The pet has been added": "寵物已新增",
   "The pet has been deleted": "寵物已刪除",
-  "The pet has been edited": "寵物已編輯",
+  "The pet has been updated": "寵物已更新",
   "The photo has been added": "照片已添加",
   "The photo has been deleted": "照片已刪除",
   "The position has been saved": "該位置已儲存",
@@ -1175,7 +1176,8 @@
   "The provided two factor recovery code was invalid.": "雙重證證復原碼無效。",
   "There are no active addresses yet.": "還沒有活動地址。",
   "There are no calls logged yet.": "尚未記錄任何呼叫。",
-  "There are no contact information yet.": "目前還沒有聯絡資訊。",
+  "There are no contact information types yet.": "尚無聯繫信息類型。",
+  "There are no contact informations yet.": "目前還沒有聯絡資訊。",
   "There are no documents yet.": "還沒有文件。",
   "There are no events on that day, future or past.": "那天、未來或過去沒有發生任何事件。",
   "There are no files yet.": "還沒有文件。",
@@ -1204,7 +1206,7 @@
   "The religion has been updated": "宗教已更新",
   "The reminder has been created": "提醒已建立",
   "The reminder has been deleted": "提醒已刪除",
-  "The reminder has been edited": "提醒已修改",
+  "The reminder has been updated": "提醒已更新",
   "The response is not a streamed response.": "該響應不是流式響應。",
   "The response is not a view.": "響應不是視圖。",
   "The role has been created": "角色已創建",
@@ -1220,7 +1222,7 @@
   "The tag has been updated": "標籤已更新",
   "The task has been created": "任務已創建",
   "The task has been deleted": "任務已被刪除",
-  "The task has been edited": "任務已編輯",
+  "The task has been updated": "該任務已更新",
   "The team's name and owner information.": "團隊名稱和擁有者資訊。",
   "The Telegram channel has been deleted": "Telegram 頻道已刪除",
   "The template has been created": "模板已建立",
@@ -1231,6 +1233,7 @@
   "The type has been created": "類型已建立",
   "The type has been deleted": "該類型已被刪除",
   "The type has been updated": "類型已更新",
+  "The type of contact information. Don’t change it unless you know what you are doing.": "聯繫信息的類型。除非您知道自己在做什麼，否則不要更改它。",
   "The user has been added": "該用戶已新增",
   "The user has been deleted": "該用戶已被刪除",
   "The user has been removed": "該用戶已被刪除",
